--- a/notebooks/filipa3_2018-01-23.ipynb
+++ b/notebooks/filipa3_2018-01-23.ipynb
@@ -40,7 +40,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:17.845231Z",
+     "iopub.status.busy": "2021-09-25T17:57:17.844495Z",
+     "iopub.status.idle": "2021-09-25T17:57:18.285014Z",
+     "shell.execute_reply": "2021-09-25T17:57:18.284492Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pydna.all import *"
@@ -49,7 +56,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:18.293697Z",
+     "iopub.status.busy": "2021-09-25T17:57:18.292565Z",
+     "iopub.status.idle": "2021-09-25T17:57:18.306126Z",
+     "shell.execute_reply": "2021-09-25T17:57:18.305577Z"
+    }
+   },
    "outputs": [],
    "source": [
     "p567,p577,p468,p467,p568,p578,p775,p778,p167,p166 = parse(\"yeast_pahtway_kit_standard_primers.txt\")"
@@ -58,7 +72,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:18.310154Z",
+     "iopub.status.busy": "2021-09-25T17:57:18.308960Z",
+     "iopub.status.idle": "2021-09-25T17:57:18.319379Z",
+     "shell.execute_reply": "2021-09-25T17:57:18.318789Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pYPKp3 = read(\"pYPKp3.gb\")"
@@ -67,7 +88,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:18.323310Z",
+     "iopub.status.busy": "2021-09-25T17:57:18.322754Z",
+     "iopub.status.idle": "2021-09-25T17:57:18.325430Z",
+     "shell.execute_reply": "2021-09-25T17:57:18.324769Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from Bio.Restriction import EcoRV"
@@ -76,7 +104,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:18.331182Z",
+     "iopub.status.busy": "2021-09-25T17:57:18.330499Z",
+     "iopub.status.idle": "2021-09-25T17:57:18.349884Z",
+     "shell.execute_reply": "2021-09-25T17:57:18.350298Z"
+    }
+   },
    "outputs": [],
    "source": [
     "p1 =read(\"pYPK0_PDC1_ScTKL1_RPS19b.gb\")\n",
@@ -88,7 +123,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:18.358318Z",
+     "iopub.status.busy": "2021-09-25T17:57:18.357744Z",
+     "iopub.status.idle": "2021-09-25T17:57:18.372939Z",
+     "shell.execute_reply": "2021-09-25T17:57:18.373493Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -111,7 +153,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:18.404218Z",
+     "iopub.status.busy": "2021-09-25T17:57:18.389466Z",
+     "iopub.status.idle": "2021-09-25T17:57:18.406426Z",
+     "shell.execute_reply": "2021-09-25T17:57:18.406772Z"
+    }
+   },
    "outputs": [],
    "source": [
     "cas1  =pcr( p577, p778, p1)\n",
@@ -123,7 +172,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:18.412823Z",
+     "iopub.status.busy": "2021-09-25T17:57:18.412224Z",
+     "iopub.status.idle": "2021-09-25T17:57:18.415497Z",
+     "shell.execute_reply": "2021-09-25T17:57:18.415951Z"
+    }
+   },
    "outputs": [],
    "source": [
     "lin_vector = pYPKp3.linearize(EcoRV)"
@@ -132,7 +188,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:18.469735Z",
+     "iopub.status.busy": "2021-09-25T17:57:18.439403Z",
+     "iopub.status.idle": "2021-09-25T17:57:19.590421Z",
+     "shell.execute_reply": "2021-09-25T17:57:19.589839Z"
+    }
+   },
    "outputs": [],
    "source": [
     "asm = Assembly( [lin_vector, cas1, cas2, cas3, cas4], limit = 61) # This limit is important!"
@@ -141,7 +204,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:19.594025Z",
+     "iopub.status.busy": "2021-09-25T17:57:19.593498Z",
+     "iopub.status.idle": "2021-09-25T17:57:19.595844Z",
+     "shell.execute_reply": "2021-09-25T17:57:19.596200Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -165,7 +235,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:19.602121Z",
+     "iopub.status.busy": "2021-09-25T17:57:19.600868Z",
+     "iopub.status.idle": "2021-09-25T17:57:19.799767Z",
+     "shell.execute_reply": "2021-09-25T17:57:19.799094Z"
+    }
+   },
    "outputs": [],
    "source": [
     "candidate = asm.assemble_circular()[0]"
@@ -174,7 +251,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:19.804619Z",
+     "iopub.status.busy": "2021-09-25T17:57:19.803725Z",
+     "iopub.status.idle": "2021-09-25T17:57:19.807896Z",
+     "shell.execute_reply": "2021-09-25T17:57:19.807258Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -211,7 +295,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:19.838473Z",
+     "iopub.status.busy": "2021-09-25T17:57:19.837651Z",
+     "iopub.status.idle": "2021-09-25T17:57:19.842190Z",
+     "shell.execute_reply": "2021-09-25T17:57:19.842548Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -252,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
