--- a/notebooks/p426TDH3_HIS3.ipynb
+++ b/notebooks/p426TDH3_HIS3.ipynb
@@ -9,8 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:24.041148Z",
+     "iopub.status.busy": "2021-09-25T17:57:24.038917Z",
+     "iopub.status.idle": "2021-09-25T17:57:24.828045Z",
+     "shell.execute_reply": "2021-09-25T17:57:24.827027Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pydna.all import *"
@@ -18,8 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:24.843586Z",
+     "iopub.status.busy": "2021-09-25T17:57:24.836998Z",
+     "iopub.status.idle": "2021-09-25T17:57:24.854374Z",
+     "shell.execute_reply": "2021-09-25T17:57:24.853973Z"
+    }
+   },
    "outputs": [],
    "source": [
     "p426TDH3 =read(\"./Mumberg/p426GPD.gb\")"
@@ -27,9 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:24.863396Z",
+     "iopub.status.busy": "2021-09-25T17:57:24.862690Z",
+     "iopub.status.idle": "2021-09-25T17:57:24.865464Z",
+     "shell.execute_reply": "2021-09-25T17:57:24.865839Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -44,7 +64,7 @@
        "File(p426GPD)(o6606)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,9 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:24.870099Z",
+     "iopub.status.busy": "2021-09-25T17:57:24.869349Z",
+     "iopub.status.idle": "2021-09-25T17:57:24.876628Z",
+     "shell.execute_reply": "2021-09-25T17:57:24.876132Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -69,8 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:24.881080Z",
+     "iopub.status.busy": "2021-09-25T17:57:24.880569Z",
+     "iopub.status.idle": "2021-09-25T17:57:24.882355Z",
+     "shell.execute_reply": "2021-09-25T17:57:24.882705Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, r =parse('''\n",
@@ -82,9 +115,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:24.889323Z",
+     "iopub.status.busy": "2021-09-25T17:57:24.888530Z",
+     "iopub.status.idle": "2021-09-25T17:57:24.894436Z",
+     "shell.execute_reply": "2021-09-25T17:57:24.894993Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -96,9 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:24.900422Z",
+     "iopub.status.busy": "2021-09-25T17:57:24.899833Z",
+     "iopub.status.idle": "2021-09-25T17:57:24.902462Z",
+     "shell.execute_reply": "2021-09-25T17:57:24.901875Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -111,9 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:24.955621Z",
+     "iopub.status.busy": "2021-09-25T17:57:24.925015Z",
+     "iopub.status.idle": "2021-09-25T17:57:25.176992Z",
+     "shell.execute_reply": "2021-09-25T17:57:25.176589Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -125,9 +176,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:25.181265Z",
+     "iopub.status.busy": "2021-09-25T17:57:25.180679Z",
+     "iopub.status.idle": "2021-09-25T17:57:25.183161Z",
+     "shell.execute_reply": "2021-09-25T17:57:25.183505Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -143,7 +200,7 @@
        "algorithm..: common_sub_strings"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,9 +211,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:25.187415Z",
+     "iopub.status.busy": "2021-09-25T17:57:25.186740Z",
+     "iopub.status.idle": "2021-09-25T17:57:25.423724Z",
+     "shell.execute_reply": "2021-09-25T17:57:25.424180Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -176,7 +239,7 @@
        " -----------------------------------"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,8 +251,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:25.499647Z",
+     "iopub.status.busy": "2021-09-25T17:57:25.463712Z",
+     "iopub.status.idle": "2021-09-25T17:57:25.949860Z",
+     "shell.execute_reply": "2021-09-25T17:57:25.949334Z"
+    }
+   },
    "outputs": [],
    "source": [
     "final = candidate.synced(p426TDH3)"
@@ -197,9 +267,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:25.958483Z",
+     "iopub.status.busy": "2021-09-25T17:57:25.956763Z",
+     "iopub.status.idle": "2021-09-25T17:57:25.964910Z",
+     "shell.execute_reply": "2021-09-25T17:57:25.965597Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -236,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
