--- a/notebooks/p426TEF1_HIS3.ipynb
+++ b/notebooks/p426TEF1_HIS3.ipynb
@@ -10,7 +10,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:29.772127Z",
+     "iopub.status.busy": "2021-09-25T17:57:29.766990Z",
+     "iopub.status.idle": "2021-09-25T17:57:30.748383Z",
+     "shell.execute_reply": "2021-09-25T17:57:30.749007Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pydna.all import *"
@@ -21,6 +28,12 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:30.754187Z",
+     "iopub.status.busy": "2021-09-25T17:57:30.752690Z",
+     "iopub.status.idle": "2021-09-25T17:57:30.791846Z",
+     "shell.execute_reply": "2021-09-25T17:57:30.792710Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -35,6 +48,12 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:30.809476Z",
+     "iopub.status.busy": "2021-09-25T17:57:30.808658Z",
+     "iopub.status.idle": "2021-09-25T17:57:30.817770Z",
+     "shell.execute_reply": "2021-09-25T17:57:30.817353Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -63,6 +82,12 @@
    "execution_count": 4,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:30.823169Z",
+     "iopub.status.busy": "2021-09-25T17:57:30.821674Z",
+     "iopub.status.idle": "2021-09-25T17:57:30.835555Z",
+     "shell.execute_reply": "2021-09-25T17:57:30.834755Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -75,7 +100,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:30.852612Z",
+     "iopub.status.busy": "2021-09-25T17:57:30.851394Z",
+     "iopub.status.idle": "2021-09-25T17:57:30.856838Z",
+     "shell.execute_reply": "2021-09-25T17:57:30.858129Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f, r =parse('''\n",
@@ -90,6 +122,12 @@
    "execution_count": 6,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:30.874052Z",
+     "iopub.status.busy": "2021-09-25T17:57:30.873430Z",
+     "iopub.status.idle": "2021-09-25T17:57:30.896917Z",
+     "shell.execute_reply": "2021-09-25T17:57:30.898009Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -104,6 +142,12 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:30.923773Z",
+     "iopub.status.busy": "2021-09-25T17:57:30.905886Z",
+     "iopub.status.idle": "2021-09-25T17:57:30.932543Z",
+     "shell.execute_reply": "2021-09-25T17:57:30.933680Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -119,6 +163,12 @@
    "execution_count": 8,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:30.944387Z",
+     "iopub.status.busy": "2021-09-25T17:57:30.940768Z",
+     "iopub.status.idle": "2021-09-25T17:57:31.461687Z",
+     "shell.execute_reply": "2021-09-25T17:57:31.464090Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -133,6 +183,12 @@
    "execution_count": 9,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:31.478322Z",
+     "iopub.status.busy": "2021-09-25T17:57:31.471160Z",
+     "iopub.status.idle": "2021-09-25T17:57:31.490506Z",
+     "shell.execute_reply": "2021-09-25T17:57:31.491861Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -162,6 +218,12 @@
    "execution_count": 10,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:31.499034Z",
+     "iopub.status.busy": "2021-09-25T17:57:31.497150Z",
+     "iopub.status.idle": "2021-09-25T17:57:32.015058Z",
+     "shell.execute_reply": "2021-09-25T17:57:32.013892Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -194,7 +256,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:32.045511Z",
+     "iopub.status.busy": "2021-09-25T17:57:32.043679Z",
+     "iopub.status.idle": "2021-09-25T17:57:32.905858Z",
+     "shell.execute_reply": "2021-09-25T17:57:32.906384Z"
+    }
+   },
    "outputs": [],
    "source": [
     "final = candidate.synced(p426TEF1)"
@@ -205,6 +274,12 @@
    "execution_count": 12,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:32.910380Z",
+     "iopub.status.busy": "2021-09-25T17:57:32.909644Z",
+     "iopub.status.idle": "2021-09-25T17:57:32.920308Z",
+     "shell.execute_reply": "2021-09-25T17:57:32.919832Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -241,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
