--- a/notebooks/pMEC1030.ipynb
+++ b/notebooks/pMEC1030.ipynb
@@ -21,6 +21,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:34.242618Z",
+     "iopub.status.busy": "2021-09-25T17:57:34.241867Z",
+     "iopub.status.idle": "2021-09-25T17:57:34.304825Z",
+     "shell.execute_reply": "2021-09-25T17:57:34.308086Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -40,7 +46,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f810c180a30>"
+       "<IPython.lib.display.IFrame at 0x7f36a46273d0>"
       ]
      },
      "execution_count": 1,
@@ -61,6 +67,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:34.327702Z",
+     "iopub.status.busy": "2021-09-25T17:57:34.319223Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.117284Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.117779Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -90,6 +102,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.133561Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.132582Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.139992Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.139292Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -106,6 +124,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.150189Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.149167Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.167671Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.167027Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -132,6 +156,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.174729Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.173691Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.180572Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.182273Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -158,6 +188,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.190893Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.186087Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.199552Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.199045Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -185,6 +221,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.206470Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.205335Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.215826Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.216317Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -215,6 +257,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.220264Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.219728Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.222020Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.221597Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -241,6 +289,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.233832Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.233173Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.236483Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.236058Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -278,6 +332,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.241335Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.240238Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.254360Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.253906Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -299,6 +359,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.266125Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.264895Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.270879Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.270428Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -325,6 +391,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.278391Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.277363Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.281795Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.280990Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -367,6 +439,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.307544Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.297092Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.485747Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.486235Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -394,6 +472,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.493744Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.492761Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.497128Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.501034Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -433,6 +517,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.533317Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.509118Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.791755Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.792732Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -459,6 +549,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.799637Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.799060Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.801915Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.802284Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -486,6 +582,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.806731Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.806206Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.813236Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.812838Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -502,6 +604,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.821241Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.820527Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.823903Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.824826Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -527,7 +635,13 @@
    "execution_count": 19,
    "metadata": {
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.833174Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.832454Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.834285Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.834672Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -540,7 +654,13 @@
    "execution_count": 20,
    "metadata": {
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.838077Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.837573Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.839270Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.839668Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -554,6 +674,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.849919Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.848920Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.860440Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.858405Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -580,6 +706,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:35.865247Z",
+     "iopub.status.busy": "2021-09-25T17:57:35.864675Z",
+     "iopub.status.idle": "2021-09-25T17:57:35.872031Z",
+     "shell.execute_reply": "2021-09-25T17:57:35.871513Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -608,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
