--- a/notebooks/pMEC1042.ipynb
+++ b/notebooks/pMEC1042.ipynb
@@ -23,7 +23,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:37.618460Z",
+     "iopub.status.busy": "2021-09-25T17:57:37.617515Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.251419Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.251854Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -34,7 +40,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.262285Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.261569Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.263296Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.263665Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -52,7 +64,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.272087Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.270989Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.275359Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.276048Z"
+    }
    },
    "outputs": [
     {
@@ -69,7 +87,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f5e65e5a7f0>"
+       "<IPython.lib.display.IFrame at 0x7fa454d14fd0>"
       ]
      },
      "execution_count": 3,
@@ -87,7 +105,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.283025Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.281889Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.294550Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.295277Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -100,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.300358Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.299903Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.303329Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.302926Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -111,7 +141,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.308132Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.307430Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.317306Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.316762Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -127,7 +163,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.323556Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.322883Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.327864Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.328298Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +180,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.332626Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.332079Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.334330Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.334906Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -154,7 +202,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.346035Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.345599Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.347383Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.347733Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -174,7 +228,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.386399Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.349983Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.858573Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.859264Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -187,7 +247,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.866923Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.865858Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.870526Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.871591Z"
+    }
    },
    "outputs": [
     {
@@ -209,7 +275,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.876611Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.875867Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.877736Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.878080Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -220,7 +292,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.884830Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.881027Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.892837Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.892431Z"
+    }
    },
    "outputs": [
     {
@@ -248,7 +326,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:38.901073Z",
+     "iopub.status.busy": "2021-09-25T17:57:38.896264Z",
+     "iopub.status.idle": "2021-09-25T17:57:38.902671Z",
+     "shell.execute_reply": "2021-09-25T17:57:38.903039Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -283,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
