--- a/notebooks/pMEC1136.ipynb
+++ b/notebooks/pMEC1136.ipynb
@@ -38,7 +38,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:44.550422Z",
+     "iopub.status.busy": "2021-09-25T17:57:44.549764Z",
+     "iopub.status.idle": "2021-09-25T17:57:45.000569Z",
+     "shell.execute_reply": "2021-09-25T17:57:45.001002Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -51,7 +57,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:45.011298Z",
+     "iopub.status.busy": "2021-09-25T17:57:45.010248Z",
+     "iopub.status.idle": "2021-09-25T17:57:45.021497Z",
+     "shell.execute_reply": "2021-09-25T17:57:45.020950Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -64,7 +76,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:45.025623Z",
+     "iopub.status.busy": "2021-09-25T17:57:45.024604Z",
+     "iopub.status.idle": "2021-09-25T17:57:45.032752Z",
+     "shell.execute_reply": "2021-09-25T17:57:45.031903Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +95,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:45.050111Z",
+     "iopub.status.busy": "2021-09-25T17:57:45.040654Z",
+     "iopub.status.idle": "2021-09-25T17:57:45.052804Z",
+     "shell.execute_reply": "2021-09-25T17:57:45.052427Z"
+    }
    },
    "outputs": [
     {
@@ -101,7 +125,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:45.056261Z",
+     "iopub.status.busy": "2021-09-25T17:57:45.055709Z",
+     "iopub.status.idle": "2021-09-25T17:57:45.057880Z",
+     "shell.execute_reply": "2021-09-25T17:57:45.058446Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -114,7 +144,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:45.067886Z",
+     "iopub.status.busy": "2021-09-25T17:57:45.066672Z",
+     "iopub.status.idle": "2021-09-25T17:57:45.069734Z",
+     "shell.execute_reply": "2021-09-25T17:57:45.070429Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -145,7 +181,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:45.080949Z",
+     "iopub.status.busy": "2021-09-25T17:57:45.075054Z",
+     "iopub.status.idle": "2021-09-25T17:57:45.096498Z",
+     "shell.execute_reply": "2021-09-25T17:57:45.095984Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -161,7 +203,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:45.104427Z",
+     "iopub.status.busy": "2021-09-25T17:57:45.103575Z",
+     "iopub.status.idle": "2021-09-25T17:57:45.130441Z",
+     "shell.execute_reply": "2021-09-25T17:57:45.129905Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +225,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:45.137710Z",
+     "iopub.status.busy": "2021-09-25T17:57:45.137106Z",
+     "iopub.status.idle": "2021-09-25T17:57:45.140053Z",
+     "shell.execute_reply": "2021-09-25T17:57:45.139434Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -190,7 +244,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:45.145427Z",
+     "iopub.status.busy": "2021-09-25T17:57:45.144597Z",
+     "iopub.status.idle": "2021-09-25T17:57:45.148635Z",
+     "shell.execute_reply": "2021-09-25T17:57:45.147987Z"
+    }
    },
    "outputs": [
     {
@@ -218,7 +278,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:45.202154Z",
+     "iopub.status.busy": "2021-09-25T17:57:45.166574Z",
+     "iopub.status.idle": "2021-09-25T17:57:46.447662Z",
+     "shell.execute_reply": "2021-09-25T17:57:46.446960Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -231,7 +297,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:46.451436Z",
+     "iopub.status.busy": "2021-09-25T17:57:46.450896Z",
+     "iopub.status.idle": "2021-09-25T17:57:46.453468Z",
+     "shell.execute_reply": "2021-09-25T17:57:46.453991Z"
+    }
    },
    "outputs": [
     {
@@ -259,7 +331,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:46.459404Z",
+     "iopub.status.busy": "2021-09-25T17:57:46.457964Z",
+     "iopub.status.idle": "2021-09-25T17:57:46.676484Z",
+     "shell.execute_reply": "2021-09-25T17:57:46.676083Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -272,7 +350,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:46.680948Z",
+     "iopub.status.busy": "2021-09-25T17:57:46.680502Z",
+     "iopub.status.idle": "2021-09-25T17:57:46.684920Z",
+     "shell.execute_reply": "2021-09-25T17:57:46.685333Z"
+    }
    },
    "outputs": [
     {
@@ -313,7 +397,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:46.703379Z",
+     "iopub.status.busy": "2021-09-25T17:57:46.698415Z",
+     "iopub.status.idle": "2021-09-25T17:57:47.326991Z",
+     "shell.execute_reply": "2021-09-25T17:57:47.326556Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -326,7 +416,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:47.331095Z",
+     "iopub.status.busy": "2021-09-25T17:57:47.330459Z",
+     "iopub.status.idle": "2021-09-25T17:57:47.333394Z",
+     "shell.execute_reply": "2021-09-25T17:57:47.333872Z"
+    }
    },
    "outputs": [
     {
@@ -350,7 +446,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:47.354815Z",
+     "iopub.status.busy": "2021-09-25T17:57:47.347235Z",
+     "iopub.status.idle": "2021-09-25T17:57:47.357980Z",
+     "shell.execute_reply": "2021-09-25T17:57:47.357529Z"
+    }
    },
    "outputs": [
     {
@@ -374,7 +476,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:47.375424Z",
+     "iopub.status.busy": "2021-09-25T17:57:47.374962Z",
+     "iopub.status.idle": "2021-09-25T17:57:47.377757Z",
+     "shell.execute_reply": "2021-09-25T17:57:47.377169Z"
+    }
    },
    "outputs": [
     {
@@ -400,7 +508,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:47.382106Z",
+     "iopub.status.busy": "2021-09-25T17:57:47.381338Z",
+     "iopub.status.idle": "2021-09-25T17:57:47.404533Z",
+     "shell.execute_reply": "2021-09-25T17:57:47.404146Z"
+    }
    },
    "outputs": [
     {
@@ -435,7 +549,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:47.407973Z",
+     "iopub.status.busy": "2021-09-25T17:57:47.407341Z",
+     "iopub.status.idle": "2021-09-25T17:57:47.422350Z",
+     "shell.execute_reply": "2021-09-25T17:57:47.421908Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -448,7 +568,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:47.437716Z",
+     "iopub.status.busy": "2021-09-25T17:57:47.434950Z",
+     "iopub.status.idle": "2021-09-25T17:57:47.441841Z",
+     "shell.execute_reply": "2021-09-25T17:57:47.442359Z"
+    }
    },
    "outputs": [
     {
@@ -483,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
