--- a/notebooks/pMEC1137.ipynb
+++ b/notebooks/pMEC1137.ipynb
@@ -41,7 +41,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:50.637301Z",
+     "iopub.status.busy": "2021-09-25T17:57:50.630215Z",
+     "iopub.status.idle": "2021-09-25T17:57:51.078006Z",
+     "shell.execute_reply": "2021-09-25T17:57:51.077551Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -51,7 +57,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:51.085429Z",
+     "iopub.status.busy": "2021-09-25T17:57:51.084886Z",
+     "iopub.status.idle": "2021-09-25T17:57:51.095961Z",
+     "shell.execute_reply": "2021-09-25T17:57:51.096602Z"
+    }
+   },
    "outputs": [],
    "source": [
     "p567,p577,p468,p467,p568,p578,p775,p778,p167,p166 = parse(\"yeast_pahtway_kit_standard_primers.txt\")"
@@ -60,7 +73,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:51.104338Z",
+     "iopub.status.busy": "2021-09-25T17:57:51.100282Z",
+     "iopub.status.idle": "2021-09-25T17:57:51.106690Z",
+     "shell.execute_reply": "2021-09-25T17:57:51.106139Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pYPK0 =read(\"pYPK0.gb\")"
@@ -69,7 +89,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:51.119311Z",
+     "iopub.status.busy": "2021-09-25T17:57:51.118763Z",
+     "iopub.status.idle": "2021-09-25T17:57:51.121392Z",
+     "shell.execute_reply": "2021-09-25T17:57:51.121721Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -90,7 +117,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:51.125628Z",
+     "iopub.status.busy": "2021-09-25T17:57:51.124884Z",
+     "iopub.status.idle": "2021-09-25T17:57:51.127336Z",
+     "shell.execute_reply": "2021-09-25T17:57:51.126868Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -100,7 +133,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:51.136088Z",
+     "iopub.status.busy": "2021-09-25T17:57:51.133909Z",
+     "iopub.status.idle": "2021-09-25T17:57:51.138799Z",
+     "shell.execute_reply": "2021-09-25T17:57:51.138213Z"
+    }
+   },
    "outputs": [],
    "source": [
     "p417,p626 =parse('''>417_ScTEF1tpf (30-mer)\n",
@@ -154,7 +194,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:51.143913Z",
+     "iopub.status.busy": "2021-09-25T17:57:51.143043Z",
+     "iopub.status.idle": "2021-09-25T17:57:51.164462Z",
+     "shell.execute_reply": "2021-09-25T17:57:51.165206Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -167,7 +213,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:51.176091Z",
+     "iopub.status.busy": "2021-09-25T17:57:51.175053Z",
+     "iopub.status.idle": "2021-09-25T17:57:51.204756Z",
+     "shell.execute_reply": "2021-09-25T17:57:51.204296Z"
+    }
+   },
    "outputs": [],
    "source": [
     "cas1  =pcr( p167, p647, p1)\n",
@@ -179,7 +232,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:51.211213Z",
+     "iopub.status.busy": "2021-09-25T17:57:51.210496Z",
+     "iopub.status.idle": "2021-09-25T17:57:51.212186Z",
+     "shell.execute_reply": "2021-09-25T17:57:51.212562Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pYPK0_E_Z, stuffer = pYPK0.cut((EcoRV, ZraI))"
@@ -188,7 +248,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:51.216246Z",
+     "iopub.status.busy": "2021-09-25T17:57:51.215753Z",
+     "iopub.status.idle": "2021-09-25T17:57:51.218881Z",
+     "shell.execute_reply": "2021-09-25T17:57:51.219416Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -208,7 +275,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:51.293273Z",
+     "iopub.status.busy": "2021-09-25T17:57:51.257773Z",
+     "iopub.status.idle": "2021-09-25T17:57:52.435784Z",
+     "shell.execute_reply": "2021-09-25T17:57:52.435337Z"
+    }
+   },
    "outputs": [],
    "source": [
     "asm =Assembly( [pYPK0_E_Z, cas1, cas2, cas3, cas4] , limit = 61)"
@@ -217,7 +291,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:52.439654Z",
+     "iopub.status.busy": "2021-09-25T17:57:52.438987Z",
+     "iopub.status.idle": "2021-09-25T17:57:52.441423Z",
+     "shell.execute_reply": "2021-09-25T17:57:52.441788Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -241,7 +322,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:52.446783Z",
+     "iopub.status.busy": "2021-09-25T17:57:52.445981Z",
+     "iopub.status.idle": "2021-09-25T17:57:52.645391Z",
+     "shell.execute_reply": "2021-09-25T17:57:52.645909Z"
+    }
+   },
    "outputs": [],
    "source": [
     "candidate = asm.assemble_circular()[0]"
@@ -250,7 +338,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:52.651206Z",
+     "iopub.status.busy": "2021-09-25T17:57:52.650228Z",
+     "iopub.status.idle": "2021-09-25T17:57:52.654099Z",
+     "shell.execute_reply": "2021-09-25T17:57:52.653445Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -288,7 +383,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:52.692882Z",
+     "iopub.status.busy": "2021-09-25T17:57:52.672633Z",
+     "iopub.status.idle": "2021-09-25T17:57:53.306336Z",
+     "shell.execute_reply": "2021-09-25T17:57:53.306691Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -298,7 +399,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:53.310557Z",
+     "iopub.status.busy": "2021-09-25T17:57:53.309888Z",
+     "iopub.status.idle": "2021-09-25T17:57:53.312793Z",
+     "shell.execute_reply": "2021-09-25T17:57:53.312403Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -318,7 +426,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:53.328839Z",
+     "iopub.status.busy": "2021-09-25T17:57:53.320146Z",
+     "iopub.status.idle": "2021-09-25T17:57:53.331600Z",
+     "shell.execute_reply": "2021-09-25T17:57:53.331196Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -338,7 +453,14 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:53.347755Z",
+     "iopub.status.busy": "2021-09-25T17:57:53.343711Z",
+     "iopub.status.idle": "2021-09-25T17:57:53.352052Z",
+     "shell.execute_reply": "2021-09-25T17:57:53.352653Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -360,7 +482,14 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:53.368851Z",
+     "iopub.status.busy": "2021-09-25T17:57:53.357286Z",
+     "iopub.status.idle": "2021-09-25T17:57:53.383308Z",
+     "shell.execute_reply": "2021-09-25T17:57:53.383834Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -393,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
