--- a/notebooks/pMEC1139.ipynb
+++ b/notebooks/pMEC1139.ipynb
@@ -61,6 +61,12 @@
     "collapsed": true,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:07.042333Z",
+     "iopub.status.busy": "2021-09-25T17:58:07.041877Z",
+     "iopub.status.idle": "2021-09-25T17:58:07.475430Z",
+     "shell.execute_reply": "2021-09-25T17:58:07.474891Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -77,6 +83,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:07.483632Z",
+     "iopub.status.busy": "2021-09-25T17:58:07.482855Z",
+     "iopub.status.idle": "2021-09-25T17:58:09.603173Z",
+     "shell.execute_reply": "2021-09-25T17:58:09.602655Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -104,6 +116,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:09.607932Z",
+     "iopub.status.busy": "2021-09-25T17:58:09.607180Z",
+     "iopub.status.idle": "2021-09-25T17:58:11.476785Z",
+     "shell.execute_reply": "2021-09-25T17:58:11.476276Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -131,6 +149,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:11.486430Z",
+     "iopub.status.busy": "2021-09-25T17:58:11.485722Z",
+     "iopub.status.idle": "2021-09-25T17:58:11.488155Z",
+     "shell.execute_reply": "2021-09-25T17:58:11.488726Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -147,6 +171,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:11.498669Z",
+     "iopub.status.busy": "2021-09-25T17:58:11.498160Z",
+     "iopub.status.idle": "2021-09-25T17:58:11.499993Z",
+     "shell.execute_reply": "2021-09-25T17:58:11.500331Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -163,6 +193,12 @@
     "collapsed": true,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:11.505279Z",
+     "iopub.status.busy": "2021-09-25T17:58:11.503394Z",
+     "iopub.status.idle": "2021-09-25T17:58:11.507246Z",
+     "shell.execute_reply": "2021-09-25T17:58:11.507612Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -179,6 +215,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:11.517451Z",
+     "iopub.status.busy": "2021-09-25T17:58:11.516769Z",
+     "iopub.status.idle": "2021-09-25T17:58:11.519720Z",
+     "shell.execute_reply": "2021-09-25T17:58:11.519247Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -206,6 +248,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:11.530198Z",
+     "iopub.status.busy": "2021-09-25T17:58:11.529429Z",
+     "iopub.status.idle": "2021-09-25T17:58:11.532952Z",
+     "shell.execute_reply": "2021-09-25T17:58:11.533476Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -233,6 +281,12 @@
     "collapsed": true,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:11.537791Z",
+     "iopub.status.busy": "2021-09-25T17:58:11.537017Z",
+     "iopub.status.idle": "2021-09-25T17:58:11.539386Z",
+     "shell.execute_reply": "2021-09-25T17:58:11.539866Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -249,6 +303,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:11.548130Z",
+     "iopub.status.busy": "2021-09-25T17:58:11.547619Z",
+     "iopub.status.idle": "2021-09-25T17:58:11.549333Z",
+     "shell.execute_reply": "2021-09-25T17:58:11.549703Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -261,7 +321,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:11.553175Z",
+     "iopub.status.busy": "2021-09-25T17:58:11.552675Z",
+     "iopub.status.idle": "2021-09-25T17:58:11.555434Z",
+     "shell.execute_reply": "2021-09-25T17:58:11.556113Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -285,6 +352,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:11.561136Z",
+     "iopub.status.busy": "2021-09-25T17:58:11.560504Z",
+     "iopub.status.idle": "2021-09-25T17:58:11.563355Z",
+     "shell.execute_reply": "2021-09-25T17:58:11.563825Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -320,6 +393,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:11.602274Z",
+     "iopub.status.busy": "2021-09-25T17:58:11.576535Z",
+     "iopub.status.idle": "2021-09-25T17:58:15.499940Z",
+     "shell.execute_reply": "2021-09-25T17:58:15.499443Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -336,6 +415,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:15.504488Z",
+     "iopub.status.busy": "2021-09-25T17:58:15.503763Z",
+     "iopub.status.idle": "2021-09-25T17:58:15.506636Z",
+     "shell.execute_reply": "2021-09-25T17:58:15.507121Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -367,6 +452,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:15.537951Z",
+     "iopub.status.busy": "2021-09-25T17:58:15.529925Z",
+     "iopub.status.idle": "2021-09-25T17:58:15.540267Z",
+     "shell.execute_reply": "2021-09-25T17:58:15.539801Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -383,6 +474,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:15.545274Z",
+     "iopub.status.busy": "2021-09-25T17:58:15.544488Z",
+     "iopub.status.idle": "2021-09-25T17:58:15.548128Z",
+     "shell.execute_reply": "2021-09-25T17:58:15.547521Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -439,6 +536,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:15.612190Z",
+     "iopub.status.busy": "2021-09-25T17:58:15.576635Z",
+     "iopub.status.idle": "2021-09-25T17:58:16.671833Z",
+     "shell.execute_reply": "2021-09-25T17:58:16.671414Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -455,6 +558,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:16.676346Z",
+     "iopub.status.busy": "2021-09-25T17:58:16.675593Z",
+     "iopub.status.idle": "2021-09-25T17:58:16.680275Z",
+     "shell.execute_reply": "2021-09-25T17:58:16.680926Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -482,6 +591,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:16.703599Z",
+     "iopub.status.busy": "2021-09-25T17:58:16.703060Z",
+     "iopub.status.idle": "2021-09-25T17:58:16.706192Z",
+     "shell.execute_reply": "2021-09-25T17:58:16.706556Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -509,6 +624,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:16.719494Z",
+     "iopub.status.busy": "2021-09-25T17:58:16.718915Z",
+     "iopub.status.idle": "2021-09-25T17:58:16.732353Z",
+     "shell.execute_reply": "2021-09-25T17:58:16.732769Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -534,7 +655,14 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:16.735997Z",
+     "iopub.status.busy": "2021-09-25T17:58:16.735480Z",
+     "iopub.status.idle": "2021-09-25T17:58:16.737609Z",
+     "shell.execute_reply": "2021-09-25T17:58:16.738544Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import textwrap"
@@ -543,7 +671,14 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:16.744110Z",
+     "iopub.status.busy": "2021-09-25T17:58:16.743474Z",
+     "iopub.status.idle": "2021-09-25T17:58:16.745513Z",
+     "shell.execute_reply": "2021-09-25T17:58:16.745969Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pw.description = \"\\n\".join( textwrap.wrap( pw.description, 40) )"
@@ -556,6 +691,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:16.769340Z",
+     "iopub.status.busy": "2021-09-25T17:58:16.749293Z",
+     "iopub.status.idle": "2021-09-25T17:58:16.780212Z",
+     "shell.execute_reply": "2021-09-25T17:58:16.780735Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -592,7 +733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
