--- a/notebooks/pYPK0.ipynb
+++ b/notebooks/pYPK0.ipynb
@@ -25,7 +25,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.291265Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.289269Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.730816Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.730334Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pydna.all import *"
@@ -34,7 +41,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.740683Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.739527Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.748895Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.749419Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pMEC1030 = read(\"pMEC1030.gb\")"
@@ -50,7 +64,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.756466Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.755808Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.758891Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.759256Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -69,7 +90,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.767053Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.766524Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.769519Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.769884Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -99,7 +127,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.774209Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.773491Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.775178Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.775526Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gb =Genbank(\"bjornjobbb@gmail.com\")"
@@ -108,7 +143,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.779554Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.778819Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.786127Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.786534Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pCAPs = gb.nucleotide(\"AJ001614.1\")"
@@ -124,7 +166,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.789870Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.789396Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.791171Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.791579Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from Bio.Restriction import BamHI, EcoRI, PvuI"
@@ -140,7 +189,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.797007Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.796236Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.800491Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.799969Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -160,7 +216,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.807894Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.807253Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.810262Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.810703Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -181,7 +244,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.816220Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.815623Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.817928Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.818385Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pcaps_pvu = pCAPs.linearize(PvuI)"
@@ -190,7 +260,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.823194Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.822299Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.825527Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.826008Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -210,7 +287,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.868911Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.833400Z",
+     "iopub.status.idle": "2021-09-25T17:58:26.975663Z",
+     "shell.execute_reply": "2021-09-25T17:58:26.975215Z"
+    }
+   },
    "outputs": [],
    "source": [
     "asm =Assembly((pcaps_pvu, psu_bam_eco), limit=200)"
@@ -219,7 +303,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:26.979887Z",
+     "iopub.status.busy": "2021-09-25T17:58:26.979307Z",
+     "iopub.status.idle": "2021-09-25T17:58:27.125917Z",
+     "shell.execute_reply": "2021-09-25T17:58:27.125375Z"
+    }
+   },
    "outputs": [],
    "source": [
     "candidate = asm.assemble_circular()[0]"
@@ -228,7 +319,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:27.130477Z",
+     "iopub.status.busy": "2021-09-25T17:58:27.129677Z",
+     "iopub.status.idle": "2021-09-25T17:58:27.133023Z",
+     "shell.execute_reply": "2021-09-25T17:58:27.132537Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -256,7 +354,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:27.146015Z",
+     "iopub.status.busy": "2021-09-25T17:58:27.140623Z",
+     "iopub.status.idle": "2021-09-25T17:58:27.492478Z",
+     "shell.execute_reply": "2021-09-25T17:58:27.492019Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pYPK0 = candidate.synced(pCAPs)"
@@ -272,7 +377,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:27.502032Z",
+     "iopub.status.busy": "2021-09-25T17:58:27.501147Z",
+     "iopub.status.idle": "2021-09-25T17:58:27.504910Z",
+     "shell.execute_reply": "2021-09-25T17:58:27.505439Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -300,7 +412,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:27.516752Z",
+     "iopub.status.busy": "2021-09-25T17:58:27.516020Z",
+     "iopub.status.idle": "2021-09-25T17:58:27.519313Z",
+     "shell.execute_reply": "2021-09-25T17:58:27.518875Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -320,7 +439,14 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:27.522630Z",
+     "iopub.status.busy": "2021-09-25T17:58:27.522162Z",
+     "iopub.status.idle": "2021-09-25T17:58:27.524128Z",
+     "shell.execute_reply": "2021-09-25T17:58:27.523740Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pYPK0.name = \"pYKP0\""
@@ -329,7 +455,14 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:27.532413Z",
+     "iopub.status.busy": "2021-09-25T17:58:27.528037Z",
+     "iopub.status.idle": "2021-09-25T17:58:27.537577Z",
+     "shell.execute_reply": "2021-09-25T17:58:27.537969Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -348,7 +481,14 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:27.575721Z",
+     "iopub.status.busy": "2021-09-25T17:58:27.565612Z",
+     "iopub.status.idle": "2021-09-25T17:58:27.653462Z",
+     "shell.execute_reply": "2021-09-25T17:58:27.653856Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -368,7 +508,14 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:27.657743Z",
+     "iopub.status.busy": "2021-09-25T17:58:27.657218Z",
+     "iopub.status.idle": "2021-09-25T17:58:27.660143Z",
+     "shell.execute_reply": "2021-09-25T17:58:27.659685Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -388,7 +535,14 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:27.664393Z",
+     "iopub.status.busy": "2021-09-25T17:58:27.663730Z",
+     "iopub.status.idle": "2021-09-25T17:58:27.666954Z",
+     "shell.execute_reply": "2021-09-25T17:58:27.667568Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -408,7 +562,14 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:27.672972Z",
+     "iopub.status.busy": "2021-09-25T17:58:27.672224Z",
+     "iopub.status.idle": "2021-09-25T17:58:27.688445Z",
+     "shell.execute_reply": "2021-09-25T17:58:27.688895Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pydna.all import *\n",
@@ -434,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
