--- a/notebooks/pYPK0_FBA1_HIS3_PDC1.ipynb
+++ b/notebooks/pYPK0_FBA1_HIS3_PDC1.ipynb
@@ -16,7 +16,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:17.955096Z",
+     "iopub.status.busy": "2021-09-25T17:58:17.953284Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.398196Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.397649Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -27,7 +33,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.405967Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.405500Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.413540Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.412990Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -45,7 +57,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.417001Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.416509Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.418454Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.418870Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +74,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.423478Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.422164Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.428680Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.429187Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -67,7 +91,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.438667Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.432527Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.441492Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.440904Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -78,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.450671Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.449990Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.452626Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.452150Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -89,7 +125,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.460778Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.460162Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.462496Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.462060Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -100,7 +142,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.468587Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.468096Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.483219Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.482773Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -113,7 +161,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.488970Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.488534Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.490654Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.491108Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -124,7 +178,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.500962Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.498833Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.503441Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.503831Z"
+    }
    },
    "outputs": [
     {
@@ -146,7 +206,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.521268Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.516115Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.953434Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.952869Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -157,7 +223,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.957148Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.956615Z",
+     "iopub.status.idle": "2021-09-25T17:58:18.960046Z",
+     "shell.execute_reply": "2021-09-25T17:58:18.960767Z"
+    }
    },
    "outputs": [
     {
@@ -183,7 +255,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:18.965373Z",
+     "iopub.status.busy": "2021-09-25T17:58:18.964760Z",
+     "iopub.status.idle": "2021-09-25T17:58:19.141966Z",
+     "shell.execute_reply": "2021-09-25T17:58:19.142334Z"
+    }
    },
    "outputs": [
     {
@@ -220,7 +298,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:19.165246Z",
+     "iopub.status.busy": "2021-09-25T17:58:19.154644Z",
+     "iopub.status.idle": "2021-09-25T17:58:19.599749Z",
+     "shell.execute_reply": "2021-09-25T17:58:19.599276Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -231,7 +315,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:19.608970Z",
+     "iopub.status.busy": "2021-09-25T17:58:19.603078Z",
+     "iopub.status.idle": "2021-09-25T17:58:19.615305Z",
+     "shell.execute_reply": "2021-09-25T17:58:19.615649Z"
+    }
    },
    "outputs": [
     {
@@ -261,7 +351,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:19.620848Z",
+     "iopub.status.busy": "2021-09-25T17:58:19.619950Z",
+     "iopub.status.idle": "2021-09-25T17:58:19.623369Z",
+     "shell.execute_reply": "2021-09-25T17:58:19.623712Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -272,7 +368,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:19.627658Z",
+     "iopub.status.busy": "2021-09-25T17:58:19.627165Z",
+     "iopub.status.idle": "2021-09-25T17:58:19.633357Z",
+     "shell.execute_reply": "2021-09-25T17:58:19.633743Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -283,7 +385,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:19.645147Z",
+     "iopub.status.busy": "2021-09-25T17:58:19.644522Z",
+     "iopub.status.idle": "2021-09-25T17:58:19.647508Z",
+     "shell.execute_reply": "2021-09-25T17:58:19.647942Z"
+    }
    },
    "outputs": [
     {
@@ -318,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
