--- a/notebooks/pYPK0_FBA1_ScTAL1_PDC1.ipynb
+++ b/notebooks/pYPK0_FBA1_ScTAL1_PDC1.ipynb
@@ -16,7 +16,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:20.796012Z",
+     "iopub.status.busy": "2021-09-25T17:58:20.795456Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.232566Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.232944Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -27,7 +33,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.242528Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.241768Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.250667Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.250066Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -45,7 +57,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.254091Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.253578Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.255265Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.255620Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +74,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.261454Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.260855Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.262851Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.263322Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -67,7 +91,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.272177Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.266768Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.274627Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.274056Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -85,7 +115,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.287457Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.282684Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.290876Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.291276Z"
+    }
    },
    "outputs": [
     {
@@ -102,7 +138,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f5fde30d070>"
+       "<IPython.lib.display.IFrame at 0x7f4af083ba90>"
       ]
      },
      "execution_count": 6,
@@ -120,7 +156,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.299024Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.298355Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.305325Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.305827Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -132,11 +174,24 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.310623Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.309994Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.317898Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.317366Z"
+    }
    },
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "| Ft# | Label or Note    | Dir | Sta | End   |  Len | type   | orf? |\n",
+       "|-----|------------------|-----|-----|-------|------|--------|------|\n",
+       "|   0 | nd               | --> | 0   | 1008  | 1008 | source | yes  |\n",
+       "|   1 | nd               | --> | <0  | >1008 | 1008 | gene   | yes  |\n",
+       "|   2 | N:Transaldolase, | --> | 0   | 1008  | 1008 | CDS    | yes  |"
+      ],
       "text/plain": [
        "+-----+------------------+-----+-----+-------+------+--------+------+\n",
        "| Ft# | Label or Note    | Dir | Sta | End   |  Len | type   | orf? |\n",
@@ -160,7 +215,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.322606Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.321910Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.324295Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.324863Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -171,7 +232,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.330429Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.329688Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.332824Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.333339Z"
+    }
    },
    "outputs": [
     {
@@ -193,7 +260,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.338130Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.337501Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.341136Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.341687Z"
+    }
    },
    "outputs": [
     {
@@ -223,7 +296,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.346810Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.346071Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.349834Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.349164Z"
+    }
    },
    "outputs": [
     {
@@ -242,7 +321,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.355049Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.354379Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.357099Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.357718Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -261,7 +346,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.366071Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.360514Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.367870Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.368308Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -272,7 +363,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.372847Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.372269Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.375425Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.375898Z"
+    }
    },
    "outputs": [
     {
@@ -299,7 +396,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.379795Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.379201Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.386200Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.385702Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -310,7 +413,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.402055Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.401224Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.404006Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.404680Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -322,7 +431,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.414302Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.413718Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.416357Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.416715Z"
+    }
    },
    "outputs": [
     {
@@ -345,7 +460,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.420335Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.419863Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.422477Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.422833Z"
+    }
    },
    "outputs": [
     {
@@ -367,7 +488,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.486425Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.450733Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.886984Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.887335Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -378,7 +505,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.891811Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.890875Z",
+     "iopub.status.idle": "2021-09-25T17:58:21.894470Z",
+     "shell.execute_reply": "2021-09-25T17:58:21.895050Z"
+    }
    },
    "outputs": [
     {
@@ -404,7 +537,13 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:21.900841Z",
+     "iopub.status.busy": "2021-09-25T17:58:21.900157Z",
+     "iopub.status.idle": "2021-09-25T17:58:22.085284Z",
+     "shell.execute_reply": "2021-09-25T17:58:22.084812Z"
+    }
    },
    "outputs": [
     {
@@ -441,7 +580,13 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:22.122900Z",
+     "iopub.status.busy": "2021-09-25T17:58:22.102883Z",
+     "iopub.status.idle": "2021-09-25T17:58:22.570175Z",
+     "shell.execute_reply": "2021-09-25T17:58:22.569643Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -459,7 +604,13 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:22.580281Z",
+     "iopub.status.busy": "2021-09-25T17:58:22.579636Z",
+     "iopub.status.idle": "2021-09-25T17:58:22.582287Z",
+     "shell.execute_reply": "2021-09-25T17:58:22.582644Z"
+    }
    },
    "outputs": [
     {
@@ -489,7 +640,13 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:22.592599Z",
+     "iopub.status.busy": "2021-09-25T17:58:22.591262Z",
+     "iopub.status.idle": "2021-09-25T17:58:22.596439Z",
+     "shell.execute_reply": "2021-09-25T17:58:22.595796Z"
+    }
    },
    "outputs": [
     {
@@ -513,7 +670,13 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:22.600535Z",
+     "iopub.status.busy": "2021-09-25T17:58:22.599923Z",
+     "iopub.status.idle": "2021-09-25T17:58:22.612584Z",
+     "shell.execute_reply": "2021-09-25T17:58:22.612985Z"
+    }
    },
    "outputs": [
     {
@@ -543,7 +706,13 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:22.616258Z",
+     "iopub.status.busy": "2021-09-25T17:58:22.615824Z",
+     "iopub.status.idle": "2021-09-25T17:58:22.617486Z",
+     "shell.execute_reply": "2021-09-25T17:58:22.617838Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -554,7 +723,13 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:22.625345Z",
+     "iopub.status.busy": "2021-09-25T17:58:22.620680Z",
+     "iopub.status.idle": "2021-09-25T17:58:22.627611Z",
+     "shell.execute_reply": "2021-09-25T17:58:22.627071Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -565,7 +740,13 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:22.640806Z",
+     "iopub.status.busy": "2021-09-25T17:58:22.639885Z",
+     "iopub.status.idle": "2021-09-25T17:58:22.643079Z",
+     "shell.execute_reply": "2021-09-25T17:58:22.642629Z"
+    }
    },
    "outputs": [
     {
@@ -587,7 +768,13 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:22.646433Z",
+     "iopub.status.busy": "2021-09-25T17:58:22.645964Z",
+     "iopub.status.idle": "2021-09-25T17:58:22.648258Z",
+     "shell.execute_reply": "2021-09-25T17:58:22.648612Z"
+    }
    },
    "outputs": [
     {
@@ -622,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
