--- a/notebooks/pYPK0_PDC1_HIS3_RPS19b.ipynb
+++ b/notebooks/pYPK0_PDC1_HIS3_RPS19b.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:28.901014Z",
+     "iopub.status.busy": "2021-09-25T17:58:28.900359Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.340920Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.340378Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.351270Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.350269Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.360540Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.360029Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.363969Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.363494Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.365707Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.366222Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.370934Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.369919Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.376192Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.376715Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.381475Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.380539Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.388652Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.388127Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +107,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.397191Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.391376Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.399981Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.400402Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.406777Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.403371Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.408789Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.409252Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,7 +141,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.417478Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.416707Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.433785Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.433404Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -112,7 +160,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.439896Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.439319Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.440979Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.441356Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -123,7 +177,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.452947Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.452025Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.455891Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.455243Z"
+    }
    },
    "outputs": [
     {
@@ -145,7 +205,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.509139Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.473549Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.904525Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.904019Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -156,7 +222,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.908274Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.907643Z",
+     "iopub.status.idle": "2021-09-25T17:58:29.910429Z",
+     "shell.execute_reply": "2021-09-25T17:58:29.911118Z"
+    }
    },
    "outputs": [
     {
@@ -182,7 +254,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:29.916559Z",
+     "iopub.status.busy": "2021-09-25T17:58:29.915851Z",
+     "iopub.status.idle": "2021-09-25T17:58:30.101125Z",
+     "shell.execute_reply": "2021-09-25T17:58:30.101515Z"
+    }
    },
    "outputs": [
     {
@@ -219,7 +297,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:30.125259Z",
+     "iopub.status.busy": "2021-09-25T17:58:30.124477Z",
+     "iopub.status.idle": "2021-09-25T17:58:30.574915Z",
+     "shell.execute_reply": "2021-09-25T17:58:30.574368Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -237,7 +321,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:30.586477Z",
+     "iopub.status.busy": "2021-09-25T17:58:30.585689Z",
+     "iopub.status.idle": "2021-09-25T17:58:30.592024Z",
+     "shell.execute_reply": "2021-09-25T17:58:30.591585Z"
+    }
    },
    "outputs": [
     {
@@ -265,7 +355,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:30.599612Z",
+     "iopub.status.busy": "2021-09-25T17:58:30.594997Z",
+     "iopub.status.idle": "2021-09-25T17:58:30.601933Z",
+     "shell.execute_reply": "2021-09-25T17:58:30.601520Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -277,7 +373,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:30.605035Z",
+     "iopub.status.busy": "2021-09-25T17:58:30.604564Z",
+     "iopub.status.idle": "2021-09-25T17:58:30.612185Z",
+     "shell.execute_reply": "2021-09-25T17:58:30.611680Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -301,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
