--- a/notebooks/pYPK0_PGI1_CiGXF1_TDH3.ipynb
+++ b/notebooks/pYPK0_PGI1_CiGXF1_TDH3.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:36.835074Z",
+     "iopub.status.busy": "2021-09-25T17:58:36.834470Z",
+     "iopub.status.idle": "2021-09-25T17:58:37.214894Z",
+     "shell.execute_reply": "2021-09-25T17:58:37.214380Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -23,7 +29,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:37.222875Z",
+     "iopub.status.busy": "2021-09-25T17:58:37.221792Z",
+     "iopub.status.idle": "2021-09-25T17:58:37.234106Z",
+     "shell.execute_reply": "2021-09-25T17:58:37.233658Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -36,7 +48,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:37.237589Z",
+     "iopub.status.busy": "2021-09-25T17:58:37.237092Z",
+     "iopub.status.idle": "2021-09-25T17:58:37.239365Z",
+     "shell.execute_reply": "2021-09-25T17:58:37.238909Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -49,7 +67,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:37.248295Z",
+     "iopub.status.busy": "2021-09-25T17:58:37.243008Z",
+     "iopub.status.idle": "2021-09-25T17:58:37.250144Z",
+     "shell.execute_reply": "2021-09-25T17:58:37.250515Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -62,7 +86,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:37.255661Z",
+     "iopub.status.busy": "2021-09-25T17:58:37.255227Z",
+     "iopub.status.idle": "2021-09-25T17:58:37.257227Z",
+     "shell.execute_reply": "2021-09-25T17:58:37.257672Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -75,7 +105,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:37.262317Z",
+     "iopub.status.busy": "2021-09-25T17:58:37.261410Z",
+     "iopub.status.idle": "2021-09-25T17:58:37.601523Z",
+     "shell.execute_reply": "2021-09-25T17:58:37.600995Z"
+    }
    },
    "outputs": [
     {
@@ -98,7 +134,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:37.608717Z",
+     "iopub.status.busy": "2021-09-25T17:58:37.604468Z",
+     "iopub.status.idle": "2021-09-25T17:58:37.611253Z",
+     "shell.execute_reply": "2021-09-25T17:58:37.610664Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -111,7 +153,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:37.616927Z",
+     "iopub.status.busy": "2021-09-25T17:58:37.616219Z",
+     "iopub.status.idle": "2021-09-25T17:58:37.883136Z",
+     "shell.execute_reply": "2021-09-25T17:58:37.883531Z"
+    }
    },
    "outputs": [
     {
@@ -141,7 +189,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:37.904508Z",
+     "iopub.status.busy": "2021-09-25T17:58:37.904067Z",
+     "iopub.status.idle": "2021-09-25T17:58:37.906216Z",
+     "shell.execute_reply": "2021-09-25T17:58:37.905816Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -156,7 +210,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:37.928852Z",
+     "iopub.status.busy": "2021-09-25T17:58:37.918782Z",
+     "iopub.status.idle": "2021-09-25T17:58:38.445111Z",
+     "shell.execute_reply": "2021-09-25T17:58:38.444577Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -166,7 +226,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:38.454915Z",
+     "iopub.status.busy": "2021-09-25T17:58:38.454340Z",
+     "iopub.status.idle": "2021-09-25T17:58:38.456770Z",
+     "shell.execute_reply": "2021-09-25T17:58:38.457112Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -193,7 +260,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:38.461026Z",
+     "iopub.status.busy": "2021-09-25T17:58:38.460310Z",
+     "iopub.status.idle": "2021-09-25T17:58:39.027190Z",
+     "shell.execute_reply": "2021-09-25T17:58:39.026661Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -206,7 +279,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:39.035329Z",
+     "iopub.status.busy": "2021-09-25T17:58:39.030321Z",
+     "iopub.status.idle": "2021-09-25T17:58:39.040993Z",
+     "shell.execute_reply": "2021-09-25T17:58:39.040612Z"
+    }
    },
    "outputs": [
     {
@@ -252,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
