--- a/notebooks/pYPK0_PGI1_HIS3_FBA1.ipynb
+++ b/notebooks/pYPK0_PGI1_HIS3_FBA1.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:40.353390Z",
+     "iopub.status.busy": "2021-09-25T17:58:40.352775Z",
+     "iopub.status.idle": "2021-09-25T17:58:40.791732Z",
+     "shell.execute_reply": "2021-09-25T17:58:40.791326Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:40.799811Z",
+     "iopub.status.busy": "2021-09-25T17:58:40.793804Z",
+     "iopub.status.idle": "2021-09-25T17:58:40.807239Z",
+     "shell.execute_reply": "2021-09-25T17:58:40.807612Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:40.811478Z",
+     "iopub.status.busy": "2021-09-25T17:58:40.810803Z",
+     "iopub.status.idle": "2021-09-25T17:58:40.812844Z",
+     "shell.execute_reply": "2021-09-25T17:58:40.813297Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:40.821866Z",
+     "iopub.status.busy": "2021-09-25T17:58:40.821295Z",
+     "iopub.status.idle": "2021-09-25T17:58:40.823700Z",
+     "shell.execute_reply": "2021-09-25T17:58:40.823210Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:40.833444Z",
+     "iopub.status.busy": "2021-09-25T17:58:40.826915Z",
+     "iopub.status.idle": "2021-09-25T17:58:40.836006Z",
+     "shell.execute_reply": "2021-09-25T17:58:40.835483Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +107,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:40.846605Z",
+     "iopub.status.busy": "2021-09-25T17:58:40.845665Z",
+     "iopub.status.idle": "2021-09-25T17:58:40.847955Z",
+     "shell.execute_reply": "2021-09-25T17:58:40.848375Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:40.851702Z",
+     "iopub.status.busy": "2021-09-25T17:58:40.851242Z",
+     "iopub.status.idle": "2021-09-25T17:58:40.857455Z",
+     "shell.execute_reply": "2021-09-25T17:58:40.856739Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,7 +141,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:40.866957Z",
+     "iopub.status.busy": "2021-09-25T17:58:40.865256Z",
+     "iopub.status.idle": "2021-09-25T17:58:40.883787Z",
+     "shell.execute_reply": "2021-09-25T17:58:40.883262Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -112,7 +160,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:40.890710Z",
+     "iopub.status.busy": "2021-09-25T17:58:40.889958Z",
+     "iopub.status.idle": "2021-09-25T17:58:40.891997Z",
+     "shell.execute_reply": "2021-09-25T17:58:40.892581Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -123,7 +177,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:40.903497Z",
+     "iopub.status.busy": "2021-09-25T17:58:40.902929Z",
+     "iopub.status.idle": "2021-09-25T17:58:40.905566Z",
+     "shell.execute_reply": "2021-09-25T17:58:40.905917Z"
+    }
    },
    "outputs": [
     {
@@ -145,7 +205,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:40.963880Z",
+     "iopub.status.busy": "2021-09-25T17:58:40.948771Z",
+     "iopub.status.idle": "2021-09-25T17:58:41.364910Z",
+     "shell.execute_reply": "2021-09-25T17:58:41.364417Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -156,7 +222,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:41.368775Z",
+     "iopub.status.busy": "2021-09-25T17:58:41.368132Z",
+     "iopub.status.idle": "2021-09-25T17:58:41.372875Z",
+     "shell.execute_reply": "2021-09-25T17:58:41.372061Z"
+    }
    },
    "outputs": [
     {
@@ -182,7 +254,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:41.379599Z",
+     "iopub.status.busy": "2021-09-25T17:58:41.378760Z",
+     "iopub.status.idle": "2021-09-25T17:58:41.565352Z",
+     "shell.execute_reply": "2021-09-25T17:58:41.564865Z"
+    }
    },
    "outputs": [
     {
@@ -219,7 +297,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:41.588923Z",
+     "iopub.status.busy": "2021-09-25T17:58:41.578756Z",
+     "iopub.status.idle": "2021-09-25T17:58:42.045533Z",
+     "shell.execute_reply": "2021-09-25T17:58:42.044902Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -230,7 +314,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:42.048638Z",
+     "iopub.status.busy": "2021-09-25T17:58:42.048195Z",
+     "iopub.status.idle": "2021-09-25T17:58:42.062770Z",
+     "shell.execute_reply": "2021-09-25T17:58:42.062378Z"
+    }
    },
    "outputs": [
     {
@@ -260,7 +350,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:42.070514Z",
+     "iopub.status.busy": "2021-09-25T17:58:42.065720Z",
+     "iopub.status.idle": "2021-09-25T17:58:42.072903Z",
+     "shell.execute_reply": "2021-09-25T17:58:42.072339Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -271,7 +367,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:42.083045Z",
+     "iopub.status.busy": "2021-09-25T17:58:42.080400Z",
+     "iopub.status.idle": "2021-09-25T17:58:42.085702Z",
+     "shell.execute_reply": "2021-09-25T17:58:42.086159Z"
+    }
    },
    "outputs": [
     {
@@ -306,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
