--- a/notebooks/pYPK0_RPS19a_HIS3_TPI1.ipynb
+++ b/notebooks/pYPK0_RPS19a_HIS3_TPI1.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:50.266100Z",
+     "iopub.status.busy": "2021-09-25T17:58:50.265097Z",
+     "iopub.status.idle": "2021-09-25T17:58:50.711122Z",
+     "shell.execute_reply": "2021-09-25T17:58:50.710629Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:50.719197Z",
+     "iopub.status.busy": "2021-09-25T17:58:50.718695Z",
+     "iopub.status.idle": "2021-09-25T17:58:50.727271Z",
+     "shell.execute_reply": "2021-09-25T17:58:50.727616Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:50.730961Z",
+     "iopub.status.busy": "2021-09-25T17:58:50.730525Z",
+     "iopub.status.idle": "2021-09-25T17:58:50.732689Z",
+     "shell.execute_reply": "2021-09-25T17:58:50.732299Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:50.735623Z",
+     "iopub.status.busy": "2021-09-25T17:58:50.734613Z",
+     "iopub.status.idle": "2021-09-25T17:58:50.741337Z",
+     "shell.execute_reply": "2021-09-25T17:58:50.740711Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:50.750898Z",
+     "iopub.status.busy": "2021-09-25T17:58:50.750133Z",
+     "iopub.status.idle": "2021-09-25T17:58:50.752172Z",
+     "shell.execute_reply": "2021-09-25T17:58:50.752657Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +107,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:50.756842Z",
+     "iopub.status.busy": "2021-09-25T17:58:50.756000Z",
+     "iopub.status.idle": "2021-09-25T17:58:50.767272Z",
+     "shell.execute_reply": "2021-09-25T17:58:50.766790Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:50.773958Z",
+     "iopub.status.busy": "2021-09-25T17:58:50.773180Z",
+     "iopub.status.idle": "2021-09-25T17:58:50.775799Z",
+     "shell.execute_reply": "2021-09-25T17:58:50.775276Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,7 +141,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:50.784020Z",
+     "iopub.status.busy": "2021-09-25T17:58:50.783080Z",
+     "iopub.status.idle": "2021-09-25T17:58:50.798864Z",
+     "shell.execute_reply": "2021-09-25T17:58:50.798428Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -112,7 +160,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:50.804820Z",
+     "iopub.status.busy": "2021-09-25T17:58:50.804320Z",
+     "iopub.status.idle": "2021-09-25T17:58:50.806379Z",
+     "shell.execute_reply": "2021-09-25T17:58:50.806827Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -123,7 +177,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:50.819124Z",
+     "iopub.status.busy": "2021-09-25T17:58:50.818436Z",
+     "iopub.status.idle": "2021-09-25T17:58:50.821300Z",
+     "shell.execute_reply": "2021-09-25T17:58:50.821652Z"
+    }
    },
    "outputs": [
     {
@@ -145,7 +205,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:50.869644Z",
+     "iopub.status.busy": "2021-09-25T17:58:50.834428Z",
+     "iopub.status.idle": "2021-09-25T17:58:51.252967Z",
+     "shell.execute_reply": "2021-09-25T17:58:51.252458Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -156,7 +222,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:51.256581Z",
+     "iopub.status.busy": "2021-09-25T17:58:51.256051Z",
+     "iopub.status.idle": "2021-09-25T17:58:51.258978Z",
+     "shell.execute_reply": "2021-09-25T17:58:51.258501Z"
+    }
    },
    "outputs": [
     {
@@ -182,7 +254,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:51.265440Z",
+     "iopub.status.busy": "2021-09-25T17:58:51.264137Z",
+     "iopub.status.idle": "2021-09-25T17:58:51.449646Z",
+     "shell.execute_reply": "2021-09-25T17:58:51.450062Z"
+    }
    },
    "outputs": [
     {
@@ -219,7 +297,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:51.473170Z",
+     "iopub.status.busy": "2021-09-25T17:58:51.458370Z",
+     "iopub.status.idle": "2021-09-25T17:58:51.912334Z",
+     "shell.execute_reply": "2021-09-25T17:58:51.911799Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -230,7 +314,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:51.916143Z",
+     "iopub.status.busy": "2021-09-25T17:58:51.915431Z",
+     "iopub.status.idle": "2021-09-25T17:58:51.927486Z",
+     "shell.execute_reply": "2021-09-25T17:58:51.927026Z"
+    }
    },
    "outputs": [
     {
@@ -258,7 +348,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:51.931919Z",
+     "iopub.status.busy": "2021-09-25T17:58:51.931352Z",
+     "iopub.status.idle": "2021-09-25T17:58:51.933299Z",
+     "shell.execute_reply": "2021-09-25T17:58:51.933757Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -269,7 +365,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:51.942818Z",
+     "iopub.status.busy": "2021-09-25T17:58:51.937332Z",
+     "iopub.status.idle": "2021-09-25T17:58:51.945799Z",
+     "shell.execute_reply": "2021-09-25T17:58:51.945384Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -280,7 +382,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:51.954258Z",
+     "iopub.status.busy": "2021-09-25T17:58:51.953045Z",
+     "iopub.status.idle": "2021-09-25T17:58:51.957245Z",
+     "shell.execute_reply": "2021-09-25T17:58:51.957610Z"
+    }
    },
    "outputs": [
     {
@@ -315,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
