--- a/notebooks/pYPK0_RPS19a_ScRKI1_TPI1.ipynb
+++ b/notebooks/pYPK0_RPS19a_ScRKI1_TPI1.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:53.260672Z",
+     "iopub.status.busy": "2021-09-25T17:58:53.260061Z",
+     "iopub.status.idle": "2021-09-25T17:58:53.704467Z",
+     "shell.execute_reply": "2021-09-25T17:58:53.704864Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:53.714220Z",
+     "iopub.status.busy": "2021-09-25T17:58:53.713498Z",
+     "iopub.status.idle": "2021-09-25T17:58:53.722324Z",
+     "shell.execute_reply": "2021-09-25T17:58:53.722684Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:53.726152Z",
+     "iopub.status.busy": "2021-09-25T17:58:53.725666Z",
+     "iopub.status.idle": "2021-09-25T17:58:53.727457Z",
+     "shell.execute_reply": "2021-09-25T17:58:53.727834Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:53.733920Z",
+     "iopub.status.busy": "2021-09-25T17:58:53.730707Z",
+     "iopub.status.idle": "2021-09-25T17:58:53.736569Z",
+     "shell.execute_reply": "2021-09-25T17:58:53.737221Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:53.742989Z",
+     "iopub.status.busy": "2021-09-25T17:58:53.741784Z",
+     "iopub.status.idle": "2021-09-25T17:58:53.749673Z",
+     "shell.execute_reply": "2021-09-25T17:58:53.749061Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +107,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:53.759351Z",
+     "iopub.status.busy": "2021-09-25T17:58:53.758545Z",
+     "iopub.status.idle": "2021-09-25T17:58:53.760357Z",
+     "shell.execute_reply": "2021-09-25T17:58:53.760715Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:53.767087Z",
+     "iopub.status.busy": "2021-09-25T17:58:53.766644Z",
+     "iopub.status.idle": "2021-09-25T17:58:53.768911Z",
+     "shell.execute_reply": "2021-09-25T17:58:53.768452Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,7 +141,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:53.775943Z",
+     "iopub.status.busy": "2021-09-25T17:58:53.775388Z",
+     "iopub.status.idle": "2021-09-25T17:58:53.795130Z",
+     "shell.execute_reply": "2021-09-25T17:58:53.795728Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -112,7 +160,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:53.804327Z",
+     "iopub.status.busy": "2021-09-25T17:58:53.803774Z",
+     "iopub.status.idle": "2021-09-25T17:58:53.805780Z",
+     "shell.execute_reply": "2021-09-25T17:58:53.806188Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -123,7 +177,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:53.817442Z",
+     "iopub.status.busy": "2021-09-25T17:58:53.816599Z",
+     "iopub.status.idle": "2021-09-25T17:58:53.819819Z",
+     "shell.execute_reply": "2021-09-25T17:58:53.820239Z"
+    }
    },
    "outputs": [
     {
@@ -145,7 +205,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:53.894145Z",
+     "iopub.status.busy": "2021-09-25T17:58:53.858350Z",
+     "iopub.status.idle": "2021-09-25T17:58:54.266312Z",
+     "shell.execute_reply": "2021-09-25T17:58:54.265803Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -156,7 +222,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:54.270134Z",
+     "iopub.status.busy": "2021-09-25T17:58:54.269448Z",
+     "iopub.status.idle": "2021-09-25T17:58:54.272774Z",
+     "shell.execute_reply": "2021-09-25T17:58:54.273291Z"
+    }
    },
    "outputs": [
     {
@@ -182,7 +254,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:54.279164Z",
+     "iopub.status.busy": "2021-09-25T17:58:54.277910Z",
+     "iopub.status.idle": "2021-09-25T17:58:54.467416Z",
+     "shell.execute_reply": "2021-09-25T17:58:54.466873Z"
+    }
    },
    "outputs": [
     {
@@ -219,7 +297,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:54.530990Z",
+     "iopub.status.busy": "2021-09-25T17:58:54.495380Z",
+     "iopub.status.idle": "2021-09-25T17:58:54.956674Z",
+     "shell.execute_reply": "2021-09-25T17:58:54.956097Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -237,7 +321,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:54.968029Z",
+     "iopub.status.busy": "2021-09-25T17:58:54.967157Z",
+     "iopub.status.idle": "2021-09-25T17:58:54.971469Z",
+     "shell.execute_reply": "2021-09-25T17:58:54.970975Z"
+    }
    },
    "outputs": [
     {
@@ -267,7 +357,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:54.982420Z",
+     "iopub.status.busy": "2021-09-25T17:58:54.978836Z",
+     "iopub.status.idle": "2021-09-25T17:58:54.985241Z",
+     "shell.execute_reply": "2021-09-25T17:58:54.985703Z"
+    }
    },
    "outputs": [
     {
@@ -291,7 +387,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:54.994610Z",
+     "iopub.status.busy": "2021-09-25T17:58:54.989267Z",
+     "iopub.status.idle": "2021-09-25T17:58:55.002742Z",
+     "shell.execute_reply": "2021-09-25T17:58:55.002225Z"
+    }
    },
    "outputs": [
     {
@@ -319,7 +421,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:55.006341Z",
+     "iopub.status.busy": "2021-09-25T17:58:55.005708Z",
+     "iopub.status.idle": "2021-09-25T17:58:55.008259Z",
+     "shell.execute_reply": "2021-09-25T17:58:55.008708Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -330,7 +438,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:55.012853Z",
+     "iopub.status.busy": "2021-09-25T17:58:55.012094Z",
+     "iopub.status.idle": "2021-09-25T17:58:55.020105Z",
+     "shell.execute_reply": "2021-09-25T17:58:55.020567Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -341,7 +455,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:55.031808Z",
+     "iopub.status.busy": "2021-09-25T17:58:55.030988Z",
+     "iopub.status.idle": "2021-09-25T17:58:55.034159Z",
+     "shell.execute_reply": "2021-09-25T17:58:55.034532Z"
+    }
    },
    "outputs": [
     {
@@ -363,7 +483,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:55.038422Z",
+     "iopub.status.busy": "2021-09-25T17:58:55.037873Z",
+     "iopub.status.idle": "2021-09-25T17:58:55.040543Z",
+     "shell.execute_reply": "2021-09-25T17:58:55.041183Z"
+    }
    },
    "outputs": [
     {
@@ -398,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
