--- a/notebooks/pYPK0_RPS19b_HIS3_RPS19a.ipynb
+++ b/notebooks/pYPK0_RPS19b_HIS3_RPS19a.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:57.384167Z",
+     "iopub.status.busy": "2021-09-25T17:58:57.383431Z",
+     "iopub.status.idle": "2021-09-25T17:58:57.830178Z",
+     "shell.execute_reply": "2021-09-25T17:58:57.829629Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:57.838074Z",
+     "iopub.status.busy": "2021-09-25T17:58:57.837348Z",
+     "iopub.status.idle": "2021-09-25T17:58:57.848532Z",
+     "shell.execute_reply": "2021-09-25T17:58:57.848008Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:57.852085Z",
+     "iopub.status.busy": "2021-09-25T17:58:57.851629Z",
+     "iopub.status.idle": "2021-09-25T17:58:57.853339Z",
+     "shell.execute_reply": "2021-09-25T17:58:57.854010Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:57.859604Z",
+     "iopub.status.busy": "2021-09-25T17:58:57.858755Z",
+     "iopub.status.idle": "2021-09-25T17:58:57.866471Z",
+     "shell.execute_reply": "2021-09-25T17:58:57.865815Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:57.871102Z",
+     "iopub.status.busy": "2021-09-25T17:58:57.870413Z",
+     "iopub.status.idle": "2021-09-25T17:58:57.877998Z",
+     "shell.execute_reply": "2021-09-25T17:58:57.878351Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +107,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:57.885231Z",
+     "iopub.status.busy": "2021-09-25T17:58:57.881192Z",
+     "iopub.status.idle": "2021-09-25T17:58:57.887713Z",
+     "shell.execute_reply": "2021-09-25T17:58:57.887216Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:57.897515Z",
+     "iopub.status.busy": "2021-09-25T17:58:57.896533Z",
+     "iopub.status.idle": "2021-09-25T17:58:57.899093Z",
+     "shell.execute_reply": "2021-09-25T17:58:57.898539Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -108,7 +150,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:57.905933Z",
+     "iopub.status.busy": "2021-09-25T17:58:57.905463Z",
+     "iopub.status.idle": "2021-09-25T17:58:57.920593Z",
+     "shell.execute_reply": "2021-09-25T17:58:57.920997Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -121,7 +169,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:57.928574Z",
+     "iopub.status.busy": "2021-09-25T17:58:57.927754Z",
+     "iopub.status.idle": "2021-09-25T17:58:57.930075Z",
+     "shell.execute_reply": "2021-09-25T17:58:57.929656Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -132,7 +186,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:57.938529Z",
+     "iopub.status.busy": "2021-09-25T17:58:57.938014Z",
+     "iopub.status.idle": "2021-09-25T17:58:57.940437Z",
+     "shell.execute_reply": "2021-09-25T17:58:57.940809Z"
+    }
    },
    "outputs": [
     {
@@ -154,7 +214,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:57.988913Z",
+     "iopub.status.busy": "2021-09-25T17:58:57.978757Z",
+     "iopub.status.idle": "2021-09-25T17:58:58.371679Z",
+     "shell.execute_reply": "2021-09-25T17:58:58.371082Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -165,7 +231,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:58.376622Z",
+     "iopub.status.busy": "2021-09-25T17:58:58.375641Z",
+     "iopub.status.idle": "2021-09-25T17:58:58.379647Z",
+     "shell.execute_reply": "2021-09-25T17:58:58.379057Z"
+    }
    },
    "outputs": [
     {
@@ -191,7 +263,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:58.384046Z",
+     "iopub.status.busy": "2021-09-25T17:58:58.383489Z",
+     "iopub.status.idle": "2021-09-25T17:58:58.574530Z",
+     "shell.execute_reply": "2021-09-25T17:58:58.573977Z"
+    }
    },
    "outputs": [
     {
@@ -228,7 +306,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:58.592726Z",
+     "iopub.status.busy": "2021-09-25T17:58:58.592285Z",
+     "iopub.status.idle": "2021-09-25T17:58:59.024505Z",
+     "shell.execute_reply": "2021-09-25T17:58:59.023947Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -246,7 +330,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:59.035509Z",
+     "iopub.status.busy": "2021-09-25T17:58:59.034942Z",
+     "iopub.status.idle": "2021-09-25T17:58:59.039126Z",
+     "shell.execute_reply": "2021-09-25T17:58:59.038620Z"
+    }
    },
    "outputs": [
     {
@@ -276,7 +366,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:59.051849Z",
+     "iopub.status.busy": "2021-09-25T17:58:59.051371Z",
+     "iopub.status.idle": "2021-09-25T17:58:59.053801Z",
+     "shell.execute_reply": "2021-09-25T17:58:59.054188Z"
+    }
    },
    "outputs": [
     {
@@ -299,7 +395,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:59.057530Z",
+     "iopub.status.busy": "2021-09-25T17:58:59.056286Z",
+     "iopub.status.idle": "2021-09-25T17:58:59.072163Z",
+     "shell.execute_reply": "2021-09-25T17:58:59.071719Z"
+    }
    },
    "outputs": [
     {
@@ -327,7 +429,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:59.075984Z",
+     "iopub.status.busy": "2021-09-25T17:58:59.075332Z",
+     "iopub.status.idle": "2021-09-25T17:58:59.077023Z",
+     "shell.execute_reply": "2021-09-25T17:58:59.077410Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -338,7 +446,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:59.081987Z",
+     "iopub.status.busy": "2021-09-25T17:58:59.081007Z",
+     "iopub.status.idle": "2021-09-25T17:58:59.090052Z",
+     "shell.execute_reply": "2021-09-25T17:58:59.090448Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -349,7 +463,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:59.103262Z",
+     "iopub.status.busy": "2021-09-25T17:58:59.101581Z",
+     "iopub.status.idle": "2021-09-25T17:58:59.106140Z",
+     "shell.execute_reply": "2021-09-25T17:58:59.106541Z"
+    }
    },
    "outputs": [
     {
@@ -371,7 +491,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:59.110385Z",
+     "iopub.status.busy": "2021-09-25T17:58:59.109738Z",
+     "iopub.status.idle": "2021-09-25T17:58:59.112268Z",
+     "shell.execute_reply": "2021-09-25T17:58:59.112633Z"
+    }
    },
    "outputs": [
     {
@@ -415,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
