--- a/notebooks/pYPK0_RPS19b_HIS3_TDH1.ipynb
+++ b/notebooks/pYPK0_RPS19b_HIS3_TDH1.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:00.295410Z",
+     "iopub.status.busy": "2021-09-25T17:59:00.294861Z",
+     "iopub.status.idle": "2021-09-25T17:59:00.742663Z",
+     "shell.execute_reply": "2021-09-25T17:59:00.742277Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:00.750572Z",
+     "iopub.status.busy": "2021-09-25T17:59:00.749853Z",
+     "iopub.status.idle": "2021-09-25T17:59:00.758304Z",
+     "shell.execute_reply": "2021-09-25T17:59:00.758672Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:00.762092Z",
+     "iopub.status.busy": "2021-09-25T17:59:00.761649Z",
+     "iopub.status.idle": "2021-09-25T17:59:00.763313Z",
+     "shell.execute_reply": "2021-09-25T17:59:00.763651Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:00.773237Z",
+     "iopub.status.busy": "2021-09-25T17:59:00.772050Z",
+     "iopub.status.idle": "2021-09-25T17:59:00.774022Z",
+     "shell.execute_reply": "2021-09-25T17:59:00.774387Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:00.781096Z",
+     "iopub.status.busy": "2021-09-25T17:59:00.777139Z",
+     "iopub.status.idle": "2021-09-25T17:59:00.782849Z",
+     "shell.execute_reply": "2021-09-25T17:59:00.783325Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +107,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:00.792780Z",
+     "iopub.status.busy": "2021-09-25T17:59:00.792214Z",
+     "iopub.status.idle": "2021-09-25T17:59:00.794061Z",
+     "shell.execute_reply": "2021-09-25T17:59:00.794441Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:00.797697Z",
+     "iopub.status.busy": "2021-09-25T17:59:00.797136Z",
+     "iopub.status.idle": "2021-09-25T17:59:00.803239Z",
+     "shell.execute_reply": "2021-09-25T17:59:00.802746Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -108,7 +150,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:00.810634Z",
+     "iopub.status.busy": "2021-09-25T17:59:00.810061Z",
+     "iopub.status.idle": "2021-09-25T17:59:00.828027Z",
+     "shell.execute_reply": "2021-09-25T17:59:00.827588Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -121,7 +169,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:00.834167Z",
+     "iopub.status.busy": "2021-09-25T17:59:00.833658Z",
+     "iopub.status.idle": "2021-09-25T17:59:00.836708Z",
+     "shell.execute_reply": "2021-09-25T17:59:00.835978Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -132,7 +186,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:00.848375Z",
+     "iopub.status.busy": "2021-09-25T17:59:00.847803Z",
+     "iopub.status.idle": "2021-09-25T17:59:00.850817Z",
+     "shell.execute_reply": "2021-09-25T17:59:00.850370Z"
+    }
    },
    "outputs": [
     {
@@ -154,7 +214,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:00.888763Z",
+     "iopub.status.busy": "2021-09-25T17:59:00.878404Z",
+     "iopub.status.idle": "2021-09-25T17:59:01.321281Z",
+     "shell.execute_reply": "2021-09-25T17:59:01.320684Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -165,7 +231,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:01.325620Z",
+     "iopub.status.busy": "2021-09-25T17:59:01.324987Z",
+     "iopub.status.idle": "2021-09-25T17:59:01.327838Z",
+     "shell.execute_reply": "2021-09-25T17:59:01.328291Z"
+    }
    },
    "outputs": [
     {
@@ -191,7 +263,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:01.334022Z",
+     "iopub.status.busy": "2021-09-25T17:59:01.332679Z",
+     "iopub.status.idle": "2021-09-25T17:59:01.520132Z",
+     "shell.execute_reply": "2021-09-25T17:59:01.519731Z"
+    }
    },
    "outputs": [
     {
@@ -228,7 +306,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:01.552980Z",
+     "iopub.status.busy": "2021-09-25T17:59:01.532641Z",
+     "iopub.status.idle": "2021-09-25T17:59:02.003249Z",
+     "shell.execute_reply": "2021-09-25T17:59:02.002763Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -246,7 +330,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:02.016741Z",
+     "iopub.status.busy": "2021-09-25T17:59:02.016173Z",
+     "iopub.status.idle": "2021-09-25T17:59:02.019064Z",
+     "shell.execute_reply": "2021-09-25T17:59:02.019471Z"
+    }
    },
    "outputs": [
     {
@@ -276,7 +366,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:02.032862Z",
+     "iopub.status.busy": "2021-09-25T17:59:02.032412Z",
+     "iopub.status.idle": "2021-09-25T17:59:02.036219Z",
+     "shell.execute_reply": "2021-09-25T17:59:02.035752Z"
+    }
    },
    "outputs": [
     {
@@ -299,7 +395,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:02.039323Z",
+     "iopub.status.busy": "2021-09-25T17:59:02.038880Z",
+     "iopub.status.idle": "2021-09-25T17:59:02.050478Z",
+     "shell.execute_reply": "2021-09-25T17:59:02.050081Z"
+    }
    },
    "outputs": [
     {
@@ -327,7 +429,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:02.054102Z",
+     "iopub.status.busy": "2021-09-25T17:59:02.053514Z",
+     "iopub.status.idle": "2021-09-25T17:59:02.055473Z",
+     "shell.execute_reply": "2021-09-25T17:59:02.055922Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -338,7 +446,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:02.065081Z",
+     "iopub.status.busy": "2021-09-25T17:59:02.059402Z",
+     "iopub.status.idle": "2021-09-25T17:59:02.067375Z",
+     "shell.execute_reply": "2021-09-25T17:59:02.066942Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -349,7 +463,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:02.077903Z",
+     "iopub.status.busy": "2021-09-25T17:59:02.077147Z",
+     "iopub.status.idle": "2021-09-25T17:59:02.080084Z",
+     "shell.execute_reply": "2021-09-25T17:59:02.080539Z"
+    }
    },
    "outputs": [
     {
@@ -371,7 +491,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:02.085394Z",
+     "iopub.status.busy": "2021-09-25T17:59:02.084491Z",
+     "iopub.status.idle": "2021-09-25T17:59:02.088265Z",
+     "shell.execute_reply": "2021-09-25T17:59:02.087745Z"
+    }
    },
    "outputs": [
     {
@@ -415,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
