--- a/notebooks/pYPK0_RPS19b_ScRPE1_RPS19a.ipynb
+++ b/notebooks/pYPK0_RPS19b_ScRPE1_RPS19a.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:03.438632Z",
+     "iopub.status.busy": "2021-09-25T17:59:03.437812Z",
+     "iopub.status.idle": "2021-09-25T17:59:03.876880Z",
+     "shell.execute_reply": "2021-09-25T17:59:03.876254Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:03.887946Z",
+     "iopub.status.busy": "2021-09-25T17:59:03.884414Z",
+     "iopub.status.idle": "2021-09-25T17:59:03.898281Z",
+     "shell.execute_reply": "2021-09-25T17:59:03.897760Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:03.901772Z",
+     "iopub.status.busy": "2021-09-25T17:59:03.901335Z",
+     "iopub.status.idle": "2021-09-25T17:59:03.903195Z",
+     "shell.execute_reply": "2021-09-25T17:59:03.903557Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:03.912139Z",
+     "iopub.status.busy": "2021-09-25T17:59:03.907358Z",
+     "iopub.status.idle": "2021-09-25T17:59:03.914389Z",
+     "shell.execute_reply": "2021-09-25T17:59:03.913969Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:03.917493Z",
+     "iopub.status.busy": "2021-09-25T17:59:03.917008Z",
+     "iopub.status.idle": "2021-09-25T17:59:03.922901Z",
+     "shell.execute_reply": "2021-09-25T17:59:03.923369Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +107,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:03.927231Z",
+     "iopub.status.busy": "2021-09-25T17:59:03.926635Z",
+     "iopub.status.idle": "2021-09-25T17:59:03.936219Z",
+     "shell.execute_reply": "2021-09-25T17:59:03.935748Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:03.945078Z",
+     "iopub.status.busy": "2021-09-25T17:59:03.939189Z",
+     "iopub.status.idle": "2021-09-25T17:59:03.948062Z",
+     "shell.execute_reply": "2021-09-25T17:59:03.947527Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -108,7 +150,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:03.955795Z",
+     "iopub.status.busy": "2021-09-25T17:59:03.955162Z",
+     "iopub.status.idle": "2021-09-25T17:59:03.973125Z",
+     "shell.execute_reply": "2021-09-25T17:59:03.972577Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -121,7 +169,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:03.980630Z",
+     "iopub.status.busy": "2021-09-25T17:59:03.980074Z",
+     "iopub.status.idle": "2021-09-25T17:59:03.982635Z",
+     "shell.execute_reply": "2021-09-25T17:59:03.982151Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -132,7 +186,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:03.995252Z",
+     "iopub.status.busy": "2021-09-25T17:59:03.994565Z",
+     "iopub.status.idle": "2021-09-25T17:59:03.997130Z",
+     "shell.execute_reply": "2021-09-25T17:59:03.997499Z"
+    }
    },
    "outputs": [
     {
@@ -154,7 +214,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:04.020168Z",
+     "iopub.status.busy": "2021-09-25T17:59:04.004846Z",
+     "iopub.status.idle": "2021-09-25T17:59:04.433836Z",
+     "shell.execute_reply": "2021-09-25T17:59:04.433331Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -165,7 +231,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:04.437636Z",
+     "iopub.status.busy": "2021-09-25T17:59:04.437045Z",
+     "iopub.status.idle": "2021-09-25T17:59:04.439459Z",
+     "shell.execute_reply": "2021-09-25T17:59:04.439826Z"
+    }
    },
    "outputs": [
     {
@@ -191,7 +263,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:04.444173Z",
+     "iopub.status.busy": "2021-09-25T17:59:04.443516Z",
+     "iopub.status.idle": "2021-09-25T17:59:04.649391Z",
+     "shell.execute_reply": "2021-09-25T17:59:04.648726Z"
+    }
    },
    "outputs": [
     {
@@ -228,7 +306,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:04.661646Z",
+     "iopub.status.busy": "2021-09-25T17:59:04.656605Z",
+     "iopub.status.idle": "2021-09-25T17:59:05.117436Z",
+     "shell.execute_reply": "2021-09-25T17:59:05.116802Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -246,7 +330,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:05.132187Z",
+     "iopub.status.busy": "2021-09-25T17:59:05.131712Z",
+     "iopub.status.idle": "2021-09-25T17:59:05.134630Z",
+     "shell.execute_reply": "2021-09-25T17:59:05.135027Z"
+    }
    },
    "outputs": [
     {
@@ -276,7 +366,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:05.145639Z",
+     "iopub.status.busy": "2021-09-25T17:59:05.144843Z",
+     "iopub.status.idle": "2021-09-25T17:59:05.148495Z",
+     "shell.execute_reply": "2021-09-25T17:59:05.147987Z"
+    }
    },
    "outputs": [
     {
@@ -300,7 +396,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:05.156598Z",
+     "iopub.status.busy": "2021-09-25T17:59:05.151607Z",
+     "iopub.status.idle": "2021-09-25T17:59:05.162004Z",
+     "shell.execute_reply": "2021-09-25T17:59:05.162608Z"
+    }
    },
    "outputs": [
     {
@@ -328,7 +430,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:05.166144Z",
+     "iopub.status.busy": "2021-09-25T17:59:05.165714Z",
+     "iopub.status.idle": "2021-09-25T17:59:05.167828Z",
+     "shell.execute_reply": "2021-09-25T17:59:05.168260Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -339,7 +447,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:05.177318Z",
+     "iopub.status.busy": "2021-09-25T17:59:05.172381Z",
+     "iopub.status.idle": "2021-09-25T17:59:05.180351Z",
+     "shell.execute_reply": "2021-09-25T17:59:05.179826Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -350,7 +464,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:05.192070Z",
+     "iopub.status.busy": "2021-09-25T17:59:05.191428Z",
+     "iopub.status.idle": "2021-09-25T17:59:05.194688Z",
+     "shell.execute_reply": "2021-09-25T17:59:05.194218Z"
+    }
    },
    "outputs": [
     {
@@ -372,7 +492,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:05.198494Z",
+     "iopub.status.busy": "2021-09-25T17:59:05.198005Z",
+     "iopub.status.idle": "2021-09-25T17:59:05.200241Z",
+     "shell.execute_reply": "2021-09-25T17:59:05.200603Z"
+    }
    },
    "outputs": [
     {
@@ -394,7 +520,13 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:05.212948Z",
+     "iopub.status.busy": "2021-09-25T17:59:05.212080Z",
+     "iopub.status.idle": "2021-09-25T17:59:05.215275Z",
+     "shell.execute_reply": "2021-09-25T17:59:05.214823Z"
+    }
    },
    "outputs": [
     {
@@ -415,7 +547,14 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:05.219267Z",
+     "iopub.status.busy": "2021-09-25T17:59:05.218756Z",
+     "iopub.status.idle": "2021-09-25T17:59:05.222549Z",
+     "shell.execute_reply": "2021-09-25T17:59:05.221539Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -456,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
