--- a/notebooks/pYPK0_TDH1_rev_HIS3_ENO2.ipynb
+++ b/notebooks/pYPK0_TDH1_rev_HIS3_ENO2.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:07.387722Z",
+     "iopub.status.busy": "2021-09-25T17:59:07.386940Z",
+     "iopub.status.idle": "2021-09-25T17:59:07.837119Z",
+     "shell.execute_reply": "2021-09-25T17:59:07.837513Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:07.846108Z",
+     "iopub.status.busy": "2021-09-25T17:59:07.845409Z",
+     "iopub.status.idle": "2021-09-25T17:59:07.856194Z",
+     "shell.execute_reply": "2021-09-25T17:59:07.855712Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:07.859496Z",
+     "iopub.status.busy": "2021-09-25T17:59:07.859023Z",
+     "iopub.status.idle": "2021-09-25T17:59:07.860847Z",
+     "shell.execute_reply": "2021-09-25T17:59:07.861445Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:07.871068Z",
+     "iopub.status.busy": "2021-09-25T17:59:07.866337Z",
+     "iopub.status.idle": "2021-09-25T17:59:07.873161Z",
+     "shell.execute_reply": "2021-09-25T17:59:07.873605Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:07.883054Z",
+     "iopub.status.busy": "2021-09-25T17:59:07.881999Z",
+     "iopub.status.idle": "2021-09-25T17:59:07.884705Z",
+     "shell.execute_reply": "2021-09-25T17:59:07.885314Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +107,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:07.895032Z",
+     "iopub.status.busy": "2021-09-25T17:59:07.894502Z",
+     "iopub.status.idle": "2021-09-25T17:59:07.897024Z",
+     "shell.execute_reply": "2021-09-25T17:59:07.897431Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:07.905396Z",
+     "iopub.status.busy": "2021-09-25T17:59:07.900432Z",
+     "iopub.status.idle": "2021-09-25T17:59:07.907417Z",
+     "shell.execute_reply": "2021-09-25T17:59:07.907908Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,7 +141,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:07.917496Z",
+     "iopub.status.busy": "2021-09-25T17:59:07.916806Z",
+     "iopub.status.idle": "2021-09-25T17:59:07.933089Z",
+     "shell.execute_reply": "2021-09-25T17:59:07.932587Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -112,7 +160,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:07.940121Z",
+     "iopub.status.busy": "2021-09-25T17:59:07.939254Z",
+     "iopub.status.idle": "2021-09-25T17:59:07.941934Z",
+     "shell.execute_reply": "2021-09-25T17:59:07.941415Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -123,7 +177,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:07.953464Z",
+     "iopub.status.busy": "2021-09-25T17:59:07.952770Z",
+     "iopub.status.idle": "2021-09-25T17:59:07.955487Z",
+     "shell.execute_reply": "2021-09-25T17:59:07.955855Z"
+    }
    },
    "outputs": [
     {
@@ -145,7 +205,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:07.994183Z",
+     "iopub.status.busy": "2021-09-25T17:59:07.993699Z",
+     "iopub.status.idle": "2021-09-25T17:59:08.419935Z",
+     "shell.execute_reply": "2021-09-25T17:59:08.419521Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -156,7 +222,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:08.424187Z",
+     "iopub.status.busy": "2021-09-25T17:59:08.423527Z",
+     "iopub.status.idle": "2021-09-25T17:59:08.427141Z",
+     "shell.execute_reply": "2021-09-25T17:59:08.426622Z"
+    }
    },
    "outputs": [
     {
@@ -182,7 +254,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:08.432141Z",
+     "iopub.status.busy": "2021-09-25T17:59:08.431384Z",
+     "iopub.status.idle": "2021-09-25T17:59:08.619803Z",
+     "shell.execute_reply": "2021-09-25T17:59:08.620199Z"
+    }
    },
    "outputs": [
     {
@@ -219,7 +297,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:08.638279Z",
+     "iopub.status.busy": "2021-09-25T17:59:08.637719Z",
+     "iopub.status.idle": "2021-09-25T17:59:09.105268Z",
+     "shell.execute_reply": "2021-09-25T17:59:09.104773Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -230,7 +314,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:09.116304Z",
+     "iopub.status.busy": "2021-09-25T17:59:09.112362Z",
+     "iopub.status.idle": "2021-09-25T17:59:09.119445Z",
+     "shell.execute_reply": "2021-09-25T17:59:09.119066Z"
+    }
    },
    "outputs": [
     {
@@ -252,7 +342,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:09.131372Z",
+     "iopub.status.busy": "2021-09-25T17:59:09.130318Z",
+     "iopub.status.idle": "2021-09-25T17:59:09.136497Z",
+     "shell.execute_reply": "2021-09-25T17:59:09.136948Z"
+    }
    },
    "outputs": [
     {
@@ -282,7 +378,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:09.146542Z",
+     "iopub.status.busy": "2021-09-25T17:59:09.140383Z",
+     "iopub.status.idle": "2021-09-25T17:59:09.148411Z",
+     "shell.execute_reply": "2021-09-25T17:59:09.148850Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -293,7 +395,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:09.161094Z",
+     "iopub.status.busy": "2021-09-25T17:59:09.156316Z",
+     "iopub.status.idle": "2021-09-25T17:59:09.163820Z",
+     "shell.execute_reply": "2021-09-25T17:59:09.164237Z"
+    }
    },
    "outputs": [
     {
@@ -337,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
