--- a/notebooks/pYPK0_TDH3_HIS3_PGI1.ipynb
+++ b/notebooks/pYPK0_TDH3_HIS3_PGI1.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:10.287107Z",
+     "iopub.status.busy": "2021-09-25T17:59:10.286677Z",
+     "iopub.status.idle": "2021-09-25T17:59:10.737475Z",
+     "shell.execute_reply": "2021-09-25T17:59:10.737887Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:10.746154Z",
+     "iopub.status.busy": "2021-09-25T17:59:10.745612Z",
+     "iopub.status.idle": "2021-09-25T17:59:10.753685Z",
+     "shell.execute_reply": "2021-09-25T17:59:10.754102Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:10.757787Z",
+     "iopub.status.busy": "2021-09-25T17:59:10.757088Z",
+     "iopub.status.idle": "2021-09-25T17:59:10.759512Z",
+     "shell.execute_reply": "2021-09-25T17:59:10.760047Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:10.767637Z",
+     "iopub.status.busy": "2021-09-25T17:59:10.763932Z",
+     "iopub.status.idle": "2021-09-25T17:59:10.769833Z",
+     "shell.execute_reply": "2021-09-25T17:59:10.770341Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:10.780681Z",
+     "iopub.status.busy": "2021-09-25T17:59:10.779858Z",
+     "iopub.status.idle": "2021-09-25T17:59:10.782618Z",
+     "shell.execute_reply": "2021-09-25T17:59:10.782118Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +107,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:10.786746Z",
+     "iopub.status.busy": "2021-09-25T17:59:10.786116Z",
+     "iopub.status.idle": "2021-09-25T17:59:10.793656Z",
+     "shell.execute_reply": "2021-09-25T17:59:10.794154Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:10.801739Z",
+     "iopub.status.busy": "2021-09-25T17:59:10.801088Z",
+     "iopub.status.idle": "2021-09-25T17:59:10.802915Z",
+     "shell.execute_reply": "2021-09-25T17:59:10.803286Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,7 +141,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:10.813490Z",
+     "iopub.status.busy": "2021-09-25T17:59:10.811994Z",
+     "iopub.status.idle": "2021-09-25T17:59:10.829481Z",
+     "shell.execute_reply": "2021-09-25T17:59:10.828940Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -112,7 +160,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:10.839011Z",
+     "iopub.status.busy": "2021-09-25T17:59:10.831771Z",
+     "iopub.status.idle": "2021-09-25T17:59:10.841181Z",
+     "shell.execute_reply": "2021-09-25T17:59:10.840624Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -123,7 +177,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:10.849705Z",
+     "iopub.status.busy": "2021-09-25T17:59:10.848965Z",
+     "iopub.status.idle": "2021-09-25T17:59:10.851649Z",
+     "shell.execute_reply": "2021-09-25T17:59:10.852013Z"
+    }
    },
    "outputs": [
     {
@@ -145,7 +205,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:10.884901Z",
+     "iopub.status.busy": "2021-09-25T17:59:10.879546Z",
+     "iopub.status.idle": "2021-09-25T17:59:11.316060Z",
+     "shell.execute_reply": "2021-09-25T17:59:11.315551Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -156,7 +222,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:11.320117Z",
+     "iopub.status.busy": "2021-09-25T17:59:11.319454Z",
+     "iopub.status.idle": "2021-09-25T17:59:11.323070Z",
+     "shell.execute_reply": "2021-09-25T17:59:11.322398Z"
+    }
    },
    "outputs": [
     {
@@ -182,7 +254,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:11.329730Z",
+     "iopub.status.busy": "2021-09-25T17:59:11.328507Z",
+     "iopub.status.idle": "2021-09-25T17:59:11.519540Z",
+     "shell.execute_reply": "2021-09-25T17:59:11.519046Z"
+    }
    },
    "outputs": [
     {
@@ -219,7 +297,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:11.567350Z",
+     "iopub.status.busy": "2021-09-25T17:59:11.531821Z",
+     "iopub.status.idle": "2021-09-25T17:59:11.996971Z",
+     "shell.execute_reply": "2021-09-25T17:59:11.996580Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -230,7 +314,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:12.008165Z",
+     "iopub.status.busy": "2021-09-25T17:59:12.004555Z",
+     "iopub.status.idle": "2021-09-25T17:59:12.010991Z",
+     "shell.execute_reply": "2021-09-25T17:59:12.010547Z"
+    }
    },
    "outputs": [
     {
@@ -252,7 +342,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:12.021585Z",
+     "iopub.status.busy": "2021-09-25T17:59:12.020424Z",
+     "iopub.status.idle": "2021-09-25T17:59:12.028261Z",
+     "shell.execute_reply": "2021-09-25T17:59:12.028814Z"
+    }
    },
    "outputs": [
     {
@@ -282,7 +378,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:12.034440Z",
+     "iopub.status.busy": "2021-09-25T17:59:12.033236Z",
+     "iopub.status.idle": "2021-09-25T17:59:12.043424Z",
+     "shell.execute_reply": "2021-09-25T17:59:12.042842Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -293,7 +395,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:12.056547Z",
+     "iopub.status.busy": "2021-09-25T17:59:12.055892Z",
+     "iopub.status.idle": "2021-09-25T17:59:12.059422Z",
+     "shell.execute_reply": "2021-09-25T17:59:12.058981Z"
+    }
    },
    "outputs": [
     {
@@ -315,7 +423,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:12.063834Z",
+     "iopub.status.busy": "2021-09-25T17:59:12.063023Z",
+     "iopub.status.idle": "2021-09-25T17:59:12.068125Z",
+     "shell.execute_reply": "2021-09-25T17:59:12.068972Z"
+    }
    },
    "outputs": [
     {
@@ -359,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
