--- a/notebooks/pYPK0_TEF1_HIS3_TDH3.ipynb
+++ b/notebooks/pYPK0_TEF1_HIS3_TDH3.ipynb
@@ -21,7 +21,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:16.423222Z",
+     "iopub.status.busy": "2021-09-25T17:59:16.421001Z",
+     "iopub.status.idle": "2021-09-25T17:59:16.869641Z",
+     "shell.execute_reply": "2021-09-25T17:59:16.869206Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -34,7 +40,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:16.878046Z",
+     "iopub.status.busy": "2021-09-25T17:59:16.877120Z",
+     "iopub.status.idle": "2021-09-25T17:59:16.887157Z",
+     "shell.execute_reply": "2021-09-25T17:59:16.887506Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -57,7 +69,13 @@
    "metadata": {
     "collapsed": true,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:16.891425Z",
+     "iopub.status.busy": "2021-09-25T17:59:16.890885Z",
+     "iopub.status.idle": "2021-09-25T17:59:16.892837Z",
+     "shell.execute_reply": "2021-09-25T17:59:16.893320Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -70,7 +88,13 @@
    "metadata": {
     "collapsed": true,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:16.897192Z",
+     "iopub.status.busy": "2021-09-25T17:59:16.896542Z",
+     "iopub.status.idle": "2021-09-25T17:59:16.903116Z",
+     "shell.execute_reply": "2021-09-25T17:59:16.902565Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -83,7 +107,13 @@
    "metadata": {
     "collapsed": true,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:16.911464Z",
+     "iopub.status.busy": "2021-09-25T17:59:16.906571Z",
+     "iopub.status.idle": "2021-09-25T17:59:16.913373Z",
+     "shell.execute_reply": "2021-09-25T17:59:16.913844Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -96,7 +126,13 @@
    "metadata": {
     "collapsed": true,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:16.918404Z",
+     "iopub.status.busy": "2021-09-25T17:59:16.917526Z",
+     "iopub.status.idle": "2021-09-25T17:59:16.925999Z",
+     "shell.execute_reply": "2021-09-25T17:59:16.926455Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -109,7 +145,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:16.934179Z",
+     "iopub.status.busy": "2021-09-25T17:59:16.929803Z",
+     "iopub.status.idle": "2021-09-25T17:59:16.936647Z",
+     "shell.execute_reply": "2021-09-25T17:59:16.936129Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -122,7 +164,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:16.944667Z",
+     "iopub.status.busy": "2021-09-25T17:59:16.944051Z",
+     "iopub.status.idle": "2021-09-25T17:59:16.959146Z",
+     "shell.execute_reply": "2021-09-25T17:59:16.958721Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -137,7 +185,13 @@
    "metadata": {
     "collapsed": true,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:16.965028Z",
+     "iopub.status.busy": "2021-09-25T17:59:16.964501Z",
+     "iopub.status.idle": "2021-09-25T17:59:16.966565Z",
+     "shell.execute_reply": "2021-09-25T17:59:16.967026Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -150,7 +204,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:16.979621Z",
+     "iopub.status.busy": "2021-09-25T17:59:16.979019Z",
+     "iopub.status.idle": "2021-09-25T17:59:16.981603Z",
+     "shell.execute_reply": "2021-09-25T17:59:16.981956Z"
+    }
    },
    "outputs": [
     {
@@ -174,7 +234,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:17.055246Z",
+     "iopub.status.busy": "2021-09-25T17:59:17.019586Z",
+     "iopub.status.idle": "2021-09-25T17:59:17.414096Z",
+     "shell.execute_reply": "2021-09-25T17:59:17.413691Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -187,7 +253,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:17.417658Z",
+     "iopub.status.busy": "2021-09-25T17:59:17.417123Z",
+     "iopub.status.idle": "2021-09-25T17:59:17.421173Z",
+     "shell.execute_reply": "2021-09-25T17:59:17.420141Z"
+    }
    },
    "outputs": [
     {
@@ -215,7 +287,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:17.425936Z",
+     "iopub.status.busy": "2021-09-25T17:59:17.425291Z",
+     "iopub.status.idle": "2021-09-25T17:59:17.618091Z",
+     "shell.execute_reply": "2021-09-25T17:59:17.617462Z"
+    }
    },
    "outputs": [
     {
@@ -254,7 +332,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:17.630564Z",
+     "iopub.status.busy": "2021-09-25T17:59:17.625573Z",
+     "iopub.status.idle": "2021-09-25T17:59:18.080721Z",
+     "shell.execute_reply": "2021-09-25T17:59:18.080241Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -267,7 +351,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:18.090825Z",
+     "iopub.status.busy": "2021-09-25T17:59:18.090219Z",
+     "iopub.status.idle": "2021-09-25T17:59:18.092832Z",
+     "shell.execute_reply": "2021-09-25T17:59:18.093296Z"
+    }
    },
    "outputs": [
     {
@@ -291,7 +381,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:18.097033Z",
+     "iopub.status.busy": "2021-09-25T17:59:18.096469Z",
+     "iopub.status.idle": "2021-09-25T17:59:18.107378Z",
+     "shell.execute_reply": "2021-09-25T17:59:18.107739Z"
+    }
    },
    "outputs": [
     {
@@ -326,7 +422,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:18.110980Z",
+     "iopub.status.busy": "2021-09-25T17:59:18.110516Z",
+     "iopub.status.idle": "2021-09-25T17:59:18.117888Z",
+     "shell.execute_reply": "2021-09-25T17:59:18.117222Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -340,7 +442,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:18.130475Z",
+     "iopub.status.busy": "2021-09-25T17:59:18.129248Z",
+     "iopub.status.idle": "2021-09-25T17:59:18.133111Z",
+     "shell.execute_reply": "2021-09-25T17:59:18.133530Z"
+    }
    },
    "outputs": [
     {
@@ -386,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
