--- a/notebooks/pYPK0_TEF1_PsXYL1_N272D_TDH3.ipynb
+++ b/notebooks/pYPK0_TEF1_PsXYL1_N272D_TDH3.ipynb
@@ -30,7 +30,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.309642Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.308976Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.756093Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.756474Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -43,7 +49,13 @@
    "metadata": {
     "collapsed": true,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.765914Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.765298Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.778833Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.779255Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.789201Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.788510Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.792274Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.791812Z"
+    }
    },
    "outputs": [
     {
@@ -80,7 +98,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.797588Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.796844Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.799829Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.800325Z"
+    }
    },
    "outputs": [
     {
@@ -97,7 +121,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f2c34a3c730>"
+       "<IPython.lib.display.IFrame at 0x7f4f59af99a0>"
       ]
      },
      "execution_count": 4,
@@ -117,11 +141,37 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.805223Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.804577Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.822119Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.822505Z"
+    }
    },
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "| Ft# | Label or Note    | Dir | Sta  | End  | Len | type        | orf? |\n",
+       "|-----|------------------|-----|------|------|-----|-------------|------|\n",
+       "|   0 | L:167            | --> | 432  | 456  |  24 | primer_bind |  no  |\n",
+       "|   1 | nd               | --> | 537  | 1116 | 579 | source      |  no  |\n",
+       "|   2 | L:417_ScTEF1tpf  | --> | 537  | 560  |  23 | primer_bind |  no  |\n",
+       "|   3 | L:626_ScTEF1tpr_ | <-- | 1088 | 1116 |  28 | primer_bind |  no  |\n",
+       "|   4 | nd               | --> | 1163 | 2120 | 957 | gene        | yes  |\n",
+       "|   5 | nd               | --> | 1163 | 2120 | 957 | CDS         | yes  |\n",
+       "|   6 | L:XR_YPK_rec_fwd | --> | 1163 | 1189 |  26 | primer_bind |  no  |\n",
+       "|   7 | L:XR_YPK_rec_rev | <-- | 2094 | 2120 |  26 | primer_bind |  no  |\n",
+       "|   8 | L:568_pCAPsAjiIR | --> | 2123 | 2143 |  20 | primer_bind |  no  |\n",
+       "|   9 | nd               | --> | 2159 | 2857 | 698 | source      |  no  |\n",
+       "|  10 | L:415_ScTDH3tpf  | --> | 2159 | 2181 |  22 | primer_bind |  no  |\n",
+       "|  11 | L:623_ScTDH3tpr_ | <-- | 2831 | 2857 |  26 | primer_bind |  no  |\n",
+       "|  12 | L:166            | <-- | 2901 | 2925 |  24 | primer_bind |  no  |\n",
+       "|  13 | nd               | --> | 3370 | 3371 |   1 | rep_origin  |  no  |\n",
+       "|  14 | L:URA3           | <-- | 4229 | 5033 | 804 | misc        |  no  |\n",
+       "|  15 | L:AmpR           | --> | 6961 | 7620 | 659 | CDS         |  no  |"
+      ],
       "text/plain": [
        "+-----+------------------+-----+------+------+-----+-------------+------+\n",
        "| Ft# | Label or Note    | Dir | Sta  | End  | Len | type        | orf? |\n",
@@ -160,7 +210,13 @@
    "metadata": {
     "collapsed": true,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.827100Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.825983Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.828499Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.829071Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -173,7 +229,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.834419Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.833455Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.836375Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.835701Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -186,7 +248,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.841357Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.840534Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.843885Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.844476Z"
+    }
    },
    "outputs": [
     {
@@ -207,7 +275,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.849476Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.848670Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.851809Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.852422Z"
+    }
    },
    "outputs": [
     {
@@ -228,7 +302,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.856894Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.856308Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.859184Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.859609Z"
+    }
    },
    "outputs": [
     {
@@ -252,7 +332,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.864412Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.863711Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.866019Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.866543Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -265,7 +351,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.871540Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.870737Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.873935Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.874491Z"
+    }
    },
    "outputs": [
     {
@@ -288,7 +380,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.882025Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.881082Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.884096Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.883529Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -303,7 +401,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.888040Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.887556Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.889287Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.889651Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -318,7 +422,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.893477Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.892573Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.896819Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.896359Z"
+    }
    },
    "outputs": [
     {
@@ -342,7 +452,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.908046Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.907380Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.910285Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.909832Z"
+    }
    },
    "outputs": [
     {
@@ -366,7 +482,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.920177Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.919497Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.922323Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.922857Z"
+    }
    },
    "outputs": [
     {
@@ -392,7 +514,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.927689Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.926841Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.937898Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.937442Z"
+    }
    },
    "outputs": [
     {
@@ -427,7 +555,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.946543Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.941924Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.948867Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.948400Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -440,7 +574,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:19.960875Z",
+     "iopub.status.busy": "2021-09-25T17:59:19.956223Z",
+     "iopub.status.idle": "2021-09-25T17:59:19.964261Z",
+     "shell.execute_reply": "2021-09-25T17:59:19.963743Z"
+    }
    },
    "outputs": [
     {
@@ -475,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
