--- a/notebooks/pYPK0_TEF1_PsXYL1_TDH3.ipynb
+++ b/notebooks/pYPK0_TEF1_PsXYL1_TDH3.ipynb
@@ -16,7 +16,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.180194Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.179477Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.630581Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.630039Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -27,7 +33,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.640952Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.640267Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.650270Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.650667Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -45,7 +57,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.654616Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.653884Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.657635Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.658235Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +74,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.667232Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.666598Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.668702Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.669192Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -67,7 +91,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.673154Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.672522Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.682190Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.681731Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -85,7 +115,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.690756Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.689689Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.694106Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.693615Z"
+    }
    },
    "outputs": [
     {
@@ -102,7 +138,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f81ff54ceb0>"
+       "<IPython.lib.display.IFrame at 0x7f2102ec9910>"
       ]
      },
      "execution_count": 6,
@@ -120,7 +156,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.700370Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.699350Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.707570Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.706885Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -132,11 +174,30 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.711553Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.711107Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.721850Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.721305Z"
+    }
    },
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "| Ft# | Label or Note    | Dir | Sta  | End  |  Len | type         | orf? |\n",
+       "|-----|------------------|-----|------|------|------|--------------|------|\n",
+       "|   0 | nd               | --> | 0    | 2052 | 2052 | source       |  no  |\n",
+       "|   1 | nd               | --> | 0    | 355  |  355 | regulatory   |  no  |\n",
+       "|   2 | nd               | --> | 192  | 199  |    7 | regulatory   |  no  |\n",
+       "|   3 | nd               | --> | 272  | 281  |    9 | regulatory   |  no  |\n",
+       "|   4 | nd               | --> | 287  | 301  |   14 | stem_loop    |  no  |\n",
+       "|   5 | N:label:xyl1_cDN | --> | 342  | 1366 | 1024 | misc_feature |  no  |\n",
+       "|   6 | nd               | --> | 355  | 1312 |  957 | gene         | yes  |\n",
+       "|   7 | nd               | --> | 355  | 1312 |  957 | CDS          | yes  |\n",
+       "|   8 | nd               | --> | 1334 | 1339 |    5 | polyA_site   |  no  |"
+      ],
       "text/plain": [
        "+-----+------------------+-----+------+------+------+--------------+------+\n",
        "| Ft# | Label or Note    | Dir | Sta  | End  |  Len | type         | orf? |\n",
@@ -166,7 +227,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.726369Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.725545Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.728464Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.729171Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +244,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.735142Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.734426Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.737929Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.737349Z"
+    }
    },
    "outputs": [
     {
@@ -199,7 +272,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.742492Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.741684Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.745056Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.745579Z"
+    }
    },
    "outputs": [
     {
@@ -218,7 +297,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.750655Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.749941Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.753998Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.754470Z"
+    }
    },
    "outputs": [
     {
@@ -248,7 +333,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.759473Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.758796Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.761600Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.762207Z"
+    }
    },
    "outputs": [
     {
@@ -267,7 +358,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.768695Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.767759Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.770744Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.770049Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -285,7 +382,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.778016Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.777319Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.779659Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.780222Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -296,7 +399,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.786426Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.785500Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.789336Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.788779Z"
+    }
    },
    "outputs": [
     {
@@ -323,7 +432,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.797977Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.797266Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.799628Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.799152Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -334,7 +449,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.811791Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.811312Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.813029Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.813407Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -346,7 +467,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.821267Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.820637Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.823512Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.823980Z"
+    }
    },
    "outputs": [
     {
@@ -369,7 +496,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.828725Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.827927Z",
+     "iopub.status.idle": "2021-09-25T17:59:21.831368Z",
+     "shell.execute_reply": "2021-09-25T17:59:21.830799Z"
+    }
    },
    "outputs": [
     {
@@ -391,7 +524,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:21.849035Z",
+     "iopub.status.busy": "2021-09-25T17:59:21.843824Z",
+     "iopub.status.idle": "2021-09-25T17:59:22.284537Z",
+     "shell.execute_reply": "2021-09-25T17:59:22.283968Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -402,7 +541,13 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:22.289147Z",
+     "iopub.status.busy": "2021-09-25T17:59:22.288428Z",
+     "iopub.status.idle": "2021-09-25T17:59:22.291947Z",
+     "shell.execute_reply": "2021-09-25T17:59:22.291360Z"
+    }
    },
    "outputs": [
     {
@@ -428,7 +573,13 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:22.298081Z",
+     "iopub.status.busy": "2021-09-25T17:59:22.296857Z",
+     "iopub.status.idle": "2021-09-25T17:59:22.476374Z",
+     "shell.execute_reply": "2021-09-25T17:59:22.475914Z"
+    }
    },
    "outputs": [
     {
@@ -465,7 +616,13 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:22.534397Z",
+     "iopub.status.busy": "2021-09-25T17:59:22.509048Z",
+     "iopub.status.idle": "2021-09-25T17:59:22.939687Z",
+     "shell.execute_reply": "2021-09-25T17:59:22.940149Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -483,7 +640,13 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:22.952056Z",
+     "iopub.status.busy": "2021-09-25T17:59:22.951541Z",
+     "iopub.status.idle": "2021-09-25T17:59:22.954459Z",
+     "shell.execute_reply": "2021-09-25T17:59:22.954824Z"
+    }
    },
    "outputs": [
     {
@@ -513,7 +676,13 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:22.964769Z",
+     "iopub.status.busy": "2021-09-25T17:59:22.964216Z",
+     "iopub.status.idle": "2021-09-25T17:59:22.966924Z",
+     "shell.execute_reply": "2021-09-25T17:59:22.966539Z"
+    }
    },
    "outputs": [
     {
@@ -537,7 +706,13 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:22.977345Z",
+     "iopub.status.busy": "2021-09-25T17:59:22.974929Z",
+     "iopub.status.idle": "2021-09-25T17:59:22.981687Z",
+     "shell.execute_reply": "2021-09-25T17:59:22.981109Z"
+    }
    },
    "outputs": [
     {
@@ -567,7 +742,13 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:22.985190Z",
+     "iopub.status.busy": "2021-09-25T17:59:22.984682Z",
+     "iopub.status.idle": "2021-09-25T17:59:22.990261Z",
+     "shell.execute_reply": "2021-09-25T17:59:22.990665Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -578,7 +759,13 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:23.002856Z",
+     "iopub.status.busy": "2021-09-25T17:59:23.002132Z",
+     "iopub.status.idle": "2021-09-25T17:59:23.004578Z",
+     "shell.execute_reply": "2021-09-25T17:59:23.004944Z"
+    }
    },
    "outputs": [
     {
@@ -622,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
