--- a/notebooks/pYPK0_TPI1_CiGXF1_ENO2.ipynb
+++ b/notebooks/pYPK0_TPI1_CiGXF1_ENO2.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:24.450460Z",
+     "iopub.status.busy": "2021-09-25T17:59:24.449997Z",
+     "iopub.status.idle": "2021-09-25T17:59:24.893567Z",
+     "shell.execute_reply": "2021-09-25T17:59:24.892997Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:24.903099Z",
+     "iopub.status.busy": "2021-09-25T17:59:24.900999Z",
+     "iopub.status.idle": "2021-09-25T17:59:24.913145Z",
+     "shell.execute_reply": "2021-09-25T17:59:24.913506Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:24.916882Z",
+     "iopub.status.busy": "2021-09-25T17:59:24.916415Z",
+     "iopub.status.idle": "2021-09-25T17:59:24.918652Z",
+     "shell.execute_reply": "2021-09-25T17:59:24.919121Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:24.926608Z",
+     "iopub.status.busy": "2021-09-25T17:59:24.925785Z",
+     "iopub.status.idle": "2021-09-25T17:59:24.928173Z",
+     "shell.execute_reply": "2021-09-25T17:59:24.927664Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:24.936999Z",
+     "iopub.status.busy": "2021-09-25T17:59:24.936117Z",
+     "iopub.status.idle": "2021-09-25T17:59:24.938845Z",
+     "shell.execute_reply": "2021-09-25T17:59:24.938227Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -84,7 +114,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:24.950761Z",
+     "iopub.status.busy": "2021-09-25T17:59:24.946737Z",
+     "iopub.status.idle": "2021-09-25T17:59:24.953841Z",
+     "shell.execute_reply": "2021-09-25T17:59:24.953390Z"
+    }
    },
    "outputs": [
     {
@@ -101,7 +137,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fe5844a70a0>"
+       "<IPython.lib.display.IFrame at 0x7fc643fb9b20>"
       ]
      },
      "execution_count": 6,
@@ -119,7 +155,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:24.958366Z",
+     "iopub.status.busy": "2021-09-25T17:59:24.957856Z",
+     "iopub.status.idle": "2021-09-25T17:59:24.963828Z",
+     "shell.execute_reply": "2021-09-25T17:59:24.963335Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -131,11 +173,24 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:24.968576Z",
+     "iopub.status.busy": "2021-09-25T17:59:24.967730Z",
+     "iopub.status.idle": "2021-09-25T17:59:24.975982Z",
+     "shell.execute_reply": "2021-09-25T17:59:24.976474Z"
+    }
    },
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "| Ft# | Label or Note | Dir | Sta | End  |  Len | type   | orf? |\n",
+       "|-----|---------------|-----|-----|------|------|--------|------|\n",
+       "|   0 | nd            | --> | 0   | 1644 | 1644 | source | yes  |\n",
+       "|   1 | nd            | --> | 0   | 1644 | 1644 | gene   | yes  |\n",
+       "|   2 | nd            | --> | 0   | 1644 | 1644 | CDS    | yes  |"
+      ],
       "text/plain": [
        "+-----+---------------+-----+-----+------+------+--------+------+\n",
        "| Ft# | Label or Note | Dir | Sta | End  |  Len | type   | orf? |\n",
@@ -159,7 +214,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:24.981523Z",
+     "iopub.status.busy": "2021-09-25T17:59:24.980833Z",
+     "iopub.status.idle": "2021-09-25T17:59:24.983041Z",
+     "shell.execute_reply": "2021-09-25T17:59:24.983562Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -170,7 +231,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:24.989356Z",
+     "iopub.status.busy": "2021-09-25T17:59:24.988436Z",
+     "iopub.status.idle": "2021-09-25T17:59:24.991915Z",
+     "shell.execute_reply": "2021-09-25T17:59:24.992494Z"
+    }
    },
    "outputs": [
     {
@@ -192,7 +259,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:24.997053Z",
+     "iopub.status.busy": "2021-09-25T17:59:24.996387Z",
+     "iopub.status.idle": "2021-09-25T17:59:24.999320Z",
+     "shell.execute_reply": "2021-09-25T17:59:24.999683Z"
+    }
    },
    "outputs": [
     {
@@ -222,7 +295,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.005309Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.004402Z",
+     "iopub.status.idle": "2021-09-25T17:59:25.008303Z",
+     "shell.execute_reply": "2021-09-25T17:59:25.007632Z"
+    }
    },
    "outputs": [
     {
@@ -241,7 +320,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.015183Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.014017Z",
+     "iopub.status.idle": "2021-09-25T17:59:25.019161Z",
+     "shell.execute_reply": "2021-09-25T17:59:25.018409Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -256,7 +341,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.027510Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.026914Z",
+     "iopub.status.idle": "2021-09-25T17:59:25.028924Z",
+     "shell.execute_reply": "2021-09-25T17:59:25.029441Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -267,7 +358,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.035139Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.034057Z",
+     "iopub.status.idle": "2021-09-25T17:59:25.038439Z",
+     "shell.execute_reply": "2021-09-25T17:59:25.037953Z"
+    }
    },
    "outputs": [
     {
@@ -294,7 +391,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.042327Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.041755Z",
+     "iopub.status.idle": "2021-09-25T17:59:25.050215Z",
+     "shell.execute_reply": "2021-09-25T17:59:25.050614Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -305,7 +408,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.063703Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.063202Z",
+     "iopub.status.idle": "2021-09-25T17:59:25.065493Z",
+     "shell.execute_reply": "2021-09-25T17:59:25.065005Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -317,7 +426,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.072435Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.071876Z",
+     "iopub.status.idle": "2021-09-25T17:59:25.074402Z",
+     "shell.execute_reply": "2021-09-25T17:59:25.073922Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -328,7 +443,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.079318Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.078616Z",
+     "iopub.status.idle": "2021-09-25T17:59:25.081687Z",
+     "shell.execute_reply": "2021-09-25T17:59:25.082169Z"
+    }
    },
    "outputs": [
     {
@@ -350,7 +471,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.135450Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.130442Z",
+     "iopub.status.idle": "2021-09-25T17:59:25.555285Z",
+     "shell.execute_reply": "2021-09-25T17:59:25.554771Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -361,7 +488,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.558874Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.558315Z",
+     "iopub.status.idle": "2021-09-25T17:59:25.560637Z",
+     "shell.execute_reply": "2021-09-25T17:59:25.560993Z"
+    }
    },
    "outputs": [
     {
@@ -387,7 +520,13 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.565371Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.564538Z",
+     "iopub.status.idle": "2021-09-25T17:59:25.765024Z",
+     "shell.execute_reply": "2021-09-25T17:59:25.764535Z"
+    }
    },
    "outputs": [
     {
@@ -424,7 +563,13 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:25.828776Z",
+     "iopub.status.busy": "2021-09-25T17:59:25.793228Z",
+     "iopub.status.idle": "2021-09-25T17:59:26.248819Z",
+     "shell.execute_reply": "2021-09-25T17:59:26.248356Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -442,7 +587,13 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:26.260805Z",
+     "iopub.status.busy": "2021-09-25T17:59:26.259930Z",
+     "iopub.status.idle": "2021-09-25T17:59:26.263316Z",
+     "shell.execute_reply": "2021-09-25T17:59:26.263786Z"
+    }
    },
    "outputs": [
     {
@@ -472,7 +623,13 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:26.275957Z",
+     "iopub.status.busy": "2021-09-25T17:59:26.275440Z",
+     "iopub.status.idle": "2021-09-25T17:59:26.277737Z",
+     "shell.execute_reply": "2021-09-25T17:59:26.278099Z"
+    }
    },
    "outputs": [
     {
@@ -496,7 +653,13 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:26.281936Z",
+     "iopub.status.busy": "2021-09-25T17:59:26.281015Z",
+     "iopub.status.idle": "2021-09-25T17:59:26.296092Z",
+     "shell.execute_reply": "2021-09-25T17:59:26.295617Z"
+    }
    },
    "outputs": [
     {
@@ -524,7 +687,13 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:26.299458Z",
+     "iopub.status.busy": "2021-09-25T17:59:26.298965Z",
+     "iopub.status.idle": "2021-09-25T17:59:26.304565Z",
+     "shell.execute_reply": "2021-09-25T17:59:26.305008Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -535,7 +704,13 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:26.317081Z",
+     "iopub.status.busy": "2021-09-25T17:59:26.312332Z",
+     "iopub.status.idle": "2021-09-25T17:59:26.319599Z",
+     "shell.execute_reply": "2021-09-25T17:59:26.319997Z"
+    }
    },
    "outputs": [
     {
@@ -557,7 +732,13 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:26.323901Z",
+     "iopub.status.busy": "2021-09-25T17:59:26.323175Z",
+     "iopub.status.idle": "2021-09-25T17:59:26.326047Z",
+     "shell.execute_reply": "2021-09-25T17:59:26.326773Z"
+    }
    },
    "outputs": [
     {
@@ -608,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
