--- a/notebooks/pYPK0_TPI1_HIS3_ENO2.ipynb
+++ b/notebooks/pYPK0_TPI1_HIS3_ENO2.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:29.507017Z",
+     "iopub.status.busy": "2021-09-25T17:59:29.506494Z",
+     "iopub.status.idle": "2021-09-25T17:59:29.939329Z",
+     "shell.execute_reply": "2021-09-25T17:59:29.938779Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:29.949078Z",
+     "iopub.status.busy": "2021-09-25T17:59:29.948398Z",
+     "iopub.status.idle": "2021-09-25T17:59:29.956897Z",
+     "shell.execute_reply": "2021-09-25T17:59:29.956427Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:29.960781Z",
+     "iopub.status.busy": "2021-09-25T17:59:29.960013Z",
+     "iopub.status.idle": "2021-09-25T17:59:29.962150Z",
+     "shell.execute_reply": "2021-09-25T17:59:29.962613Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:29.966410Z",
+     "iopub.status.busy": "2021-09-25T17:59:29.965799Z",
+     "iopub.status.idle": "2021-09-25T17:59:29.972381Z",
+     "shell.execute_reply": "2021-09-25T17:59:29.971732Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:29.977551Z",
+     "iopub.status.busy": "2021-09-25T17:59:29.976772Z",
+     "iopub.status.idle": "2021-09-25T17:59:29.985390Z",
+     "shell.execute_reply": "2021-09-25T17:59:29.984661Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +107,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:29.995169Z",
+     "iopub.status.busy": "2021-09-25T17:59:29.994047Z",
+     "iopub.status.idle": "2021-09-25T17:59:29.997472Z",
+     "shell.execute_reply": "2021-09-25T17:59:29.997057Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:30.006738Z",
+     "iopub.status.busy": "2021-09-25T17:59:30.000364Z",
+     "iopub.status.idle": "2021-09-25T17:59:30.008573Z",
+     "shell.execute_reply": "2021-09-25T17:59:30.009023Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,7 +141,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:30.017557Z",
+     "iopub.status.busy": "2021-09-25T17:59:30.016738Z",
+     "iopub.status.idle": "2021-09-25T17:59:30.034320Z",
+     "shell.execute_reply": "2021-09-25T17:59:30.033937Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -112,7 +160,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:30.040362Z",
+     "iopub.status.busy": "2021-09-25T17:59:30.039797Z",
+     "iopub.status.idle": "2021-09-25T17:59:30.041805Z",
+     "shell.execute_reply": "2021-09-25T17:59:30.042295Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -123,7 +177,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:30.052447Z",
+     "iopub.status.busy": "2021-09-25T17:59:30.051968Z",
+     "iopub.status.idle": "2021-09-25T17:59:30.054198Z",
+     "shell.execute_reply": "2021-09-25T17:59:30.054597Z"
+    }
    },
    "outputs": [
     {
@@ -145,7 +205,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:30.107514Z",
+     "iopub.status.busy": "2021-09-25T17:59:30.082222Z",
+     "iopub.status.idle": "2021-09-25T17:59:30.481331Z",
+     "shell.execute_reply": "2021-09-25T17:59:30.480795Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -156,7 +222,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:30.484837Z",
+     "iopub.status.busy": "2021-09-25T17:59:30.484231Z",
+     "iopub.status.idle": "2021-09-25T17:59:30.487889Z",
+     "shell.execute_reply": "2021-09-25T17:59:30.487068Z"
+    }
    },
    "outputs": [
     {
@@ -182,7 +254,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:30.493395Z",
+     "iopub.status.busy": "2021-09-25T17:59:30.492672Z",
+     "iopub.status.idle": "2021-09-25T17:59:30.685706Z",
+     "shell.execute_reply": "2021-09-25T17:59:30.685230Z"
+    }
    },
    "outputs": [
     {
@@ -219,7 +297,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:30.739494Z",
+     "iopub.status.busy": "2021-09-25T17:59:30.698908Z",
+     "iopub.status.idle": "2021-09-25T17:59:31.132079Z",
+     "shell.execute_reply": "2021-09-25T17:59:31.131504Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -230,7 +314,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:31.142830Z",
+     "iopub.status.busy": "2021-09-25T17:59:31.134969Z",
+     "iopub.status.idle": "2021-09-25T17:59:31.148900Z",
+     "shell.execute_reply": "2021-09-25T17:59:31.149403Z"
+    }
    },
    "outputs": [
     {
@@ -258,7 +348,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:31.153007Z",
+     "iopub.status.busy": "2021-09-25T17:59:31.151858Z",
+     "iopub.status.idle": "2021-09-25T17:59:31.161194Z",
+     "shell.execute_reply": "2021-09-25T17:59:31.160671Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -269,7 +365,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:31.172757Z",
+     "iopub.status.busy": "2021-09-25T17:59:31.169010Z",
+     "iopub.status.idle": "2021-09-25T17:59:31.175362Z",
+     "shell.execute_reply": "2021-09-25T17:59:31.175782Z"
+    }
    },
    "outputs": [
     {
@@ -304,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
