--- a/notebooks/pYPK1.ipynb
+++ b/notebooks/pYPK1.ipynb
@@ -16,7 +16,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:32.231372Z",
+     "iopub.status.busy": "2021-09-25T17:59:32.230683Z",
+     "iopub.status.idle": "2021-09-25T17:59:32.672896Z",
+     "shell.execute_reply": "2021-09-25T17:59:32.672450Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -27,7 +33,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:32.681886Z",
+     "iopub.status.busy": "2021-09-25T17:59:32.680914Z",
+     "iopub.status.idle": "2021-09-25T17:59:32.692703Z",
+     "shell.execute_reply": "2021-09-25T17:59:32.692247Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +50,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:32.697441Z",
+     "iopub.status.busy": "2021-09-25T17:59:32.696630Z",
+     "iopub.status.idle": "2021-09-25T17:59:32.699236Z",
+     "shell.execute_reply": "2021-09-25T17:59:32.698786Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -49,7 +67,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:32.703540Z",
+     "iopub.status.busy": "2021-09-25T17:59:32.702979Z",
+     "iopub.status.idle": "2021-09-25T17:59:32.710701Z",
+     "shell.execute_reply": "2021-09-25T17:59:32.711328Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -60,7 +84,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:32.726241Z",
+     "iopub.status.busy": "2021-09-25T17:59:32.725657Z",
+     "iopub.status.idle": "2021-09-25T17:59:32.728197Z",
+     "shell.execute_reply": "2021-09-25T17:59:32.728558Z"
+    }
    },
    "outputs": [
     {
@@ -86,7 +116,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:32.776629Z",
+     "iopub.status.busy": "2021-09-25T17:59:32.751424Z",
+     "iopub.status.idle": "2021-09-25T17:59:32.859161Z",
+     "shell.execute_reply": "2021-09-25T17:59:32.858679Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -96,7 +132,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:32.862597Z",
+     "iopub.status.busy": "2021-09-25T17:59:32.862086Z",
+     "iopub.status.idle": "2021-09-25T17:59:32.864972Z",
+     "shell.execute_reply": "2021-09-25T17:59:32.864599Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -121,7 +164,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:32.868949Z",
+     "iopub.status.busy": "2021-09-25T17:59:32.868320Z",
+     "iopub.status.idle": "2021-09-25T17:59:33.021309Z",
+     "shell.execute_reply": "2021-09-25T17:59:33.021730Z"
+    }
    },
    "outputs": [
     {
@@ -155,7 +204,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:33.030850Z",
+     "iopub.status.busy": "2021-09-25T17:59:33.029011Z",
+     "iopub.status.idle": "2021-09-25T17:59:33.323386Z",
+     "shell.execute_reply": "2021-09-25T17:59:33.322945Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -166,7 +221,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:33.332643Z",
+     "iopub.status.busy": "2021-09-25T17:59:33.331497Z",
+     "iopub.status.idle": "2021-09-25T17:59:33.335663Z",
+     "shell.execute_reply": "2021-09-25T17:59:33.335182Z"
+    }
    },
    "outputs": [
     {
@@ -188,7 +249,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:33.339064Z",
+     "iopub.status.busy": "2021-09-25T17:59:33.338550Z",
+     "iopub.status.idle": "2021-09-25T17:59:33.340243Z",
+     "shell.execute_reply": "2021-09-25T17:59:33.340602Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -199,7 +266,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:33.348285Z",
+     "iopub.status.busy": "2021-09-25T17:59:33.347330Z",
+     "iopub.status.idle": "2021-09-25T17:59:33.352684Z",
+     "shell.execute_reply": "2021-09-25T17:59:33.353131Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +300,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:33.364979Z",
+     "iopub.status.busy": "2021-09-25T17:59:33.356638Z",
+     "iopub.status.idle": "2021-09-25T17:59:33.367281Z",
+     "shell.execute_reply": "2021-09-25T17:59:33.366904Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -253,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
