--- a/notebooks/pYPK3.ipynb
+++ b/notebooks/pYPK3.ipynb
@@ -14,7 +14,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:38.669126Z",
+     "iopub.status.busy": "2021-09-25T17:59:38.668215Z",
+     "iopub.status.idle": "2021-09-25T17:59:39.112787Z",
+     "shell.execute_reply": "2021-09-25T17:59:39.112248Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -27,7 +33,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:39.123013Z",
+     "iopub.status.busy": "2021-09-25T17:59:39.122118Z",
+     "iopub.status.idle": "2021-09-25T17:59:39.521747Z",
+     "shell.execute_reply": "2021-09-25T17:59:39.522187Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -41,7 +53,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:39.531369Z",
+     "iopub.status.busy": "2021-09-25T17:59:39.530896Z",
+     "iopub.status.idle": "2021-09-25T17:59:39.533243Z",
+     "shell.execute_reply": "2021-09-25T17:59:39.533599Z"
+    }
    },
    "outputs": [
     {
@@ -70,7 +88,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:39.538491Z",
+     "iopub.status.busy": "2021-09-25T17:59:39.537775Z",
+     "iopub.status.idle": "2021-09-25T17:59:39.539895Z",
+     "shell.execute_reply": "2021-09-25T17:59:39.540386Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -98,7 +122,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:39.547265Z",
+     "iopub.status.busy": "2021-09-25T17:59:39.546651Z",
+     "iopub.status.idle": "2021-09-25T17:59:39.552445Z",
+     "shell.execute_reply": "2021-09-25T17:59:39.552924Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -109,7 +139,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:39.562083Z",
+     "iopub.status.busy": "2021-09-25T17:59:39.561332Z",
+     "iopub.status.idle": "2021-09-25T17:59:39.564082Z",
+     "shell.execute_reply": "2021-09-25T17:59:39.563450Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -120,7 +156,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:39.568267Z",
+     "iopub.status.busy": "2021-09-25T17:59:39.567657Z",
+     "iopub.status.idle": "2021-09-25T17:59:39.569952Z",
+     "shell.execute_reply": "2021-09-25T17:59:39.570435Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -131,7 +173,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:39.577059Z",
+     "iopub.status.busy": "2021-09-25T17:59:39.576396Z",
+     "iopub.status.idle": "2021-09-25T17:59:39.578762Z",
+     "shell.execute_reply": "2021-09-25T17:59:39.579270Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -142,7 +190,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:39.607518Z",
+     "iopub.status.busy": "2021-09-25T17:59:39.607039Z",
+     "iopub.status.idle": "2021-09-25T17:59:39.862810Z",
+     "shell.execute_reply": "2021-09-25T17:59:39.862278Z"
+    }
    },
    "outputs": [
     {
@@ -169,7 +223,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:39.869660Z",
+     "iopub.status.busy": "2021-09-25T17:59:39.868263Z",
+     "iopub.status.idle": "2021-09-25T17:59:40.064894Z",
+     "shell.execute_reply": "2021-09-25T17:59:40.064506Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -180,7 +240,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:40.068494Z",
+     "iopub.status.busy": "2021-09-25T17:59:40.068023Z",
+     "iopub.status.idle": "2021-09-25T17:59:40.070951Z",
+     "shell.execute_reply": "2021-09-25T17:59:40.071496Z"
+    }
    },
    "outputs": [
     {
@@ -213,7 +279,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:40.114648Z",
+     "iopub.status.busy": "2021-09-25T17:59:40.089203Z",
+     "iopub.status.idle": "2021-09-25T17:59:40.393424Z",
+     "shell.execute_reply": "2021-09-25T17:59:40.393820Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -224,7 +296,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:40.401966Z",
+     "iopub.status.busy": "2021-09-25T17:59:40.401085Z",
+     "iopub.status.idle": "2021-09-25T17:59:40.404631Z",
+     "shell.execute_reply": "2021-09-25T17:59:40.404139Z"
+    }
    },
    "outputs": [
     {
@@ -246,7 +324,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:40.409733Z",
+     "iopub.status.busy": "2021-09-25T17:59:40.408375Z",
+     "iopub.status.idle": "2021-09-25T17:59:40.411663Z",
+     "shell.execute_reply": "2021-09-25T17:59:40.411087Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -257,7 +341,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:40.422885Z",
+     "iopub.status.busy": "2021-09-25T17:59:40.415709Z",
+     "iopub.status.idle": "2021-09-25T17:59:40.430023Z",
+     "shell.execute_reply": "2021-09-25T17:59:40.430385Z"
+    }
    },
    "outputs": [
     {
@@ -285,7 +375,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:40.433911Z",
+     "iopub.status.busy": "2021-09-25T17:59:40.433412Z",
+     "iopub.status.idle": "2021-09-25T17:59:40.444158Z",
+     "shell.execute_reply": "2021-09-25T17:59:40.444563Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -311,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
