--- a/notebooks/pYPK3_RPS19b_HIS3_RPS19a.ipynb
+++ b/notebooks/pYPK3_RPS19b_HIS3_RPS19a.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:41.709748Z",
+     "iopub.status.busy": "2021-09-25T17:59:41.709259Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.141596Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.142001Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.149672Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.149187Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.158835Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.158307Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.162159Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.161726Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.163378Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.163732Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.174866Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.174349Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.176376Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.176720Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.180234Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.179551Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.185457Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.185917Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +107,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.194426Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.193869Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.195971Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.196426Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +124,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.205427Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.199715Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.208194Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.208916Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -108,7 +150,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.215884Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.215177Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.233106Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.232563Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -121,7 +169,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.241778Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.241194Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.243100Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.243546Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -132,7 +186,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.253209Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.252666Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.255563Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.255174Z"
+    }
    },
    "outputs": [
     {
@@ -154,7 +214,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.309070Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.278449Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.654620Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.654204Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -165,7 +231,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.658202Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.657699Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.659906Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.660262Z"
+    }
    },
    "outputs": [
     {
@@ -191,7 +263,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.666007Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.664888Z",
+     "iopub.status.idle": "2021-09-25T17:59:42.849889Z",
+     "shell.execute_reply": "2021-09-25T17:59:42.850291Z"
+    }
    },
    "outputs": [
     {
@@ -228,7 +306,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:42.883014Z",
+     "iopub.status.busy": "2021-09-25T17:59:42.878002Z",
+     "iopub.status.idle": "2021-09-25T17:59:43.263629Z",
+     "shell.execute_reply": "2021-09-25T17:59:43.263098Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -246,7 +330,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:43.266848Z",
+     "iopub.status.busy": "2021-09-25T17:59:43.266363Z",
+     "iopub.status.idle": "2021-09-25T17:59:43.281156Z",
+     "shell.execute_reply": "2021-09-25T17:59:43.280473Z"
+    }
    },
    "outputs": [
     {
@@ -274,7 +364,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:43.285109Z",
+     "iopub.status.busy": "2021-09-25T17:59:43.284549Z",
+     "iopub.status.idle": "2021-09-25T17:59:43.286839Z",
+     "shell.execute_reply": "2021-09-25T17:59:43.286385Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -285,7 +381,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:43.290976Z",
+     "iopub.status.busy": "2021-09-25T17:59:43.290270Z",
+     "iopub.status.idle": "2021-09-25T17:59:43.298719Z",
+     "shell.execute_reply": "2021-09-25T17:59:43.299239Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -296,7 +398,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:43.311651Z",
+     "iopub.status.busy": "2021-09-25T17:59:43.301770Z",
+     "iopub.status.idle": "2021-09-25T17:59:43.313941Z",
+     "shell.execute_reply": "2021-09-25T17:59:43.314345Z"
+    }
    },
    "outputs": [
     {
@@ -331,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
