--- a/notebooks/pYPK4.ipynb
+++ b/notebooks/pYPK4.ipynb
@@ -14,7 +14,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:44.710994Z",
+     "iopub.status.busy": "2021-09-25T17:59:44.710427Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.150084Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.150508Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -25,7 +31,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.158159Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.157700Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.301540Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.301026Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -46,7 +58,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.306873Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.306299Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.308172Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.308619Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -74,7 +92,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.316014Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.315056Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.320749Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.321257Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -85,7 +109,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.330939Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.330335Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.332778Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.332285Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -96,7 +126,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.338617Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.336004Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.341064Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.340550Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -107,7 +143,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.345831Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.344857Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.347497Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.348129Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -118,7 +160,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.356244Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.355347Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.357639Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.358156Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -129,7 +177,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.369775Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.369102Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.372095Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.371642Z"
+    }
    },
    "outputs": [
     {
@@ -151,7 +205,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.431065Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.415126Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.683510Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.683922Z"
+    }
    },
    "outputs": [
     {
@@ -178,7 +238,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.687962Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.687468Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.866104Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.865557Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -189,7 +255,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.870589Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.869818Z",
+     "iopub.status.idle": "2021-09-25T17:59:45.873082Z",
+     "shell.execute_reply": "2021-09-25T17:59:45.872500Z"
+    }
    },
    "outputs": [
     {
@@ -222,7 +294,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:45.921360Z",
+     "iopub.status.busy": "2021-09-25T17:59:45.885549Z",
+     "iopub.status.idle": "2021-09-25T17:59:46.284651Z",
+     "shell.execute_reply": "2021-09-25T17:59:46.284217Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -233,7 +311,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:46.293837Z",
+     "iopub.status.busy": "2021-09-25T17:59:46.291906Z",
+     "iopub.status.idle": "2021-09-25T17:59:46.296767Z",
+     "shell.execute_reply": "2021-09-25T17:59:46.297257Z"
+    }
    },
    "outputs": [
     {
@@ -255,7 +339,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:46.301680Z",
+     "iopub.status.busy": "2021-09-25T17:59:46.300788Z",
+     "iopub.status.idle": "2021-09-25T17:59:46.303405Z",
+     "shell.execute_reply": "2021-09-25T17:59:46.303971Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -266,7 +356,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:46.309052Z",
+     "iopub.status.busy": "2021-09-25T17:59:46.307946Z",
+     "iopub.status.idle": "2021-09-25T17:59:46.320848Z",
+     "shell.execute_reply": "2021-09-25T17:59:46.320384Z"
+    }
    },
    "outputs": [
     {
@@ -294,7 +390,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:46.324755Z",
+     "iopub.status.busy": "2021-09-25T17:59:46.324042Z",
+     "iopub.status.idle": "2021-09-25T17:59:46.334787Z",
+     "shell.execute_reply": "2021-09-25T17:59:46.334395Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -320,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
