--- a/notebooks/pYPK7.ipynb
+++ b/notebooks/pYPK7.ipynb
@@ -13,7 +13,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:50.444384Z",
+     "iopub.status.busy": "2021-09-25T17:59:50.443846Z",
+     "iopub.status.idle": "2021-09-25T17:59:50.903949Z",
+     "shell.execute_reply": "2021-09-25T17:59:50.904338Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -31,7 +37,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:50.913386Z",
+     "iopub.status.busy": "2021-09-25T17:59:50.912850Z",
+     "iopub.status.idle": "2021-09-25T17:59:50.917996Z",
+     "shell.execute_reply": "2021-09-25T17:59:50.918421Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -49,7 +61,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:50.923716Z",
+     "iopub.status.busy": "2021-09-25T17:59:50.923235Z",
+     "iopub.status.idle": "2021-09-25T17:59:50.925137Z",
+     "shell.execute_reply": "2021-09-25T17:59:50.925556Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -62,7 +80,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:50.973763Z",
+     "iopub.status.busy": "2021-09-25T17:59:50.948478Z",
+     "iopub.status.idle": "2021-09-25T17:59:51.076132Z",
+     "shell.execute_reply": "2021-09-25T17:59:51.076519Z"
+    }
    },
    "outputs": [
     {
@@ -89,7 +113,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:51.080184Z",
+     "iopub.status.busy": "2021-09-25T17:59:51.079680Z",
+     "iopub.status.idle": "2021-09-25T17:59:51.653724Z",
+     "shell.execute_reply": "2021-09-25T17:59:51.654120Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -102,7 +132,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:51.662846Z",
+     "iopub.status.busy": "2021-09-25T17:59:51.662236Z",
+     "iopub.status.idle": "2021-09-25T17:59:51.665228Z",
+     "shell.execute_reply": "2021-09-25T17:59:51.664823Z"
+    }
    },
    "outputs": [
     {
@@ -124,7 +160,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:51.668660Z",
+     "iopub.status.busy": "2021-09-25T17:59:51.668001Z",
+     "iopub.status.idle": "2021-09-25T17:59:51.669956Z",
+     "shell.execute_reply": "2021-09-25T17:59:51.670485Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -135,7 +177,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:51.679867Z",
+     "iopub.status.busy": "2021-09-25T17:59:51.678910Z",
+     "iopub.status.idle": "2021-09-25T17:59:51.683679Z",
+     "shell.execute_reply": "2021-09-25T17:59:51.684137Z"
+    }
    },
    "outputs": [
     {
@@ -163,7 +211,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:51.688279Z",
+     "iopub.status.busy": "2021-09-25T17:59:51.687674Z",
+     "iopub.status.idle": "2021-09-25T17:59:51.699602Z",
+     "shell.execute_reply": "2021-09-25T17:59:51.699085Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -198,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
