--- a/notebooks/pYPKa.ipynb
+++ b/notebooks/pYPKa.ipynb
@@ -13,6 +13,12 @@
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:32.913992Z",
+     "iopub.status.busy": "2021-09-25T18:00:32.912610Z",
+     "iopub.status.idle": "2021-09-25T18:00:32.933755Z",
+     "shell.execute_reply": "2021-09-25T18:00:32.934187Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -32,7 +38,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f084c3bafd0>"
+       "<IPython.lib.display.IFrame at 0x7f22d04f8670>"
       ]
      },
      "execution_count": 1,
@@ -61,6 +67,12 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:32.940267Z",
+     "iopub.status.busy": "2021-09-25T18:00:32.939336Z",
+     "iopub.status.idle": "2021-09-25T18:00:33.692006Z",
+     "shell.execute_reply": "2021-09-25T18:00:33.692384Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -85,6 +97,12 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:33.703242Z",
+     "iopub.status.busy": "2021-09-25T18:00:33.702540Z",
+     "iopub.status.idle": "2021-09-25T18:00:33.705532Z",
+     "shell.execute_reply": "2021-09-25T18:00:33.706180Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -99,6 +117,12 @@
    "execution_count": 4,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:33.710892Z",
+     "iopub.status.busy": "2021-09-25T18:00:33.710357Z",
+     "iopub.status.idle": "2021-09-25T18:00:33.716804Z",
+     "shell.execute_reply": "2021-09-25T18:00:33.717608Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -113,6 +137,12 @@
    "execution_count": 5,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:33.729474Z",
+     "iopub.status.busy": "2021-09-25T18:00:33.728155Z",
+     "iopub.status.idle": "2021-09-25T18:00:33.731506Z",
+     "shell.execute_reply": "2021-09-25T18:00:33.730825Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -132,7 +162,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:33.735670Z",
+     "iopub.status.busy": "2021-09-25T18:00:33.734664Z",
+     "iopub.status.idle": "2021-09-25T18:00:33.751411Z",
+     "shell.execute_reply": "2021-09-25T18:00:33.751917Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pCAPs = read(\"pCAPs.gb\")"
@@ -141,7 +178,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:33.761279Z",
+     "iopub.status.busy": "2021-09-25T18:00:33.759488Z",
+     "iopub.status.idle": "2021-09-25T18:00:33.763304Z",
+     "shell.execute_reply": "2021-09-25T18:00:33.762926Z"
+    }
+   },
    "outputs": [],
    "source": [
     "assert pCAPs.cseguid() == \"S6GoB_Z13VCfGDTEqNclu4It614\""
@@ -159,6 +203,12 @@
    "execution_count": 8,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:33.767983Z",
+     "iopub.status.busy": "2021-09-25T18:00:33.767120Z",
+     "iopub.status.idle": "2021-09-25T18:00:33.772179Z",
+     "shell.execute_reply": "2021-09-25T18:00:33.771672Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -181,6 +231,12 @@
    "execution_count": 9,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:33.778301Z",
+     "iopub.status.busy": "2021-09-25T18:00:33.777357Z",
+     "iopub.status.idle": "2021-09-25T18:00:33.780378Z",
+     "shell.execute_reply": "2021-09-25T18:00:33.780763Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -249,6 +305,12 @@
    "execution_count": 10,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:33.785801Z",
+     "iopub.status.busy": "2021-09-25T18:00:33.783867Z",
+     "iopub.status.idle": "2021-09-25T18:00:33.788441Z",
+     "shell.execute_reply": "2021-09-25T18:00:33.789147Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -267,6 +329,12 @@
    "execution_count": 11,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:33.804819Z",
+     "iopub.status.busy": "2021-09-25T18:00:33.796905Z",
+     "iopub.status.idle": "2021-09-25T18:00:34.056463Z",
+     "shell.execute_reply": "2021-09-25T18:00:34.056842Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -279,7 +347,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:34.063788Z",
+     "iopub.status.busy": "2021-09-25T18:00:34.063075Z",
+     "iopub.status.idle": "2021-09-25T18:00:34.065733Z",
+     "shell.execute_reply": "2021-09-25T18:00:34.065241Z"
+    }
+   },
    "outputs": [],
    "source": [
     "assert pYPKa.cseguid() == \"aV1eIrzOiCjvw01yvKkxDXHKLMk\""
@@ -290,6 +365,12 @@
    "execution_count": 13,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:34.077986Z",
+     "iopub.status.busy": "2021-09-25T18:00:34.077329Z",
+     "iopub.status.idle": "2021-09-25T18:00:34.081005Z",
+     "shell.execute_reply": "2021-09-25T18:00:34.080497Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -321,7 +402,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:34.086089Z",
+     "iopub.status.busy": "2021-09-25T18:00:34.084832Z",
+     "iopub.status.idle": "2021-09-25T18:00:34.087518Z",
+     "shell.execute_reply": "2021-09-25T18:00:34.088295Z"
+    }
+   },
    "outputs": [],
    "source": [
     "crp_feature = pCAPs.features[0]"
@@ -330,7 +418,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:34.095292Z",
+     "iopub.status.busy": "2021-09-25T18:00:34.094348Z",
+     "iopub.status.idle": "2021-09-25T18:00:34.099055Z",
+     "shell.execute_reply": "2021-09-25T18:00:34.098441Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -350,7 +445,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:34.104589Z",
+     "iopub.status.busy": "2021-09-25T18:00:34.103918Z",
+     "iopub.status.idle": "2021-09-25T18:00:34.106260Z",
+     "shell.execute_reply": "2021-09-25T18:00:34.106690Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pYPKa.features.append(crp_feature)"
@@ -359,7 +461,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:34.110660Z",
+     "iopub.status.busy": "2021-09-25T18:00:34.110054Z",
+     "iopub.status.idle": "2021-09-25T18:00:34.113537Z",
+     "shell.execute_reply": "2021-09-25T18:00:34.112984Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from Bio.Restriction import EcoRV, ZraI, AjiI"
@@ -370,6 +479,12 @@
    "execution_count": 18,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:34.117651Z",
+     "iopub.status.busy": "2021-09-25T18:00:34.116979Z",
+     "iopub.status.idle": "2021-09-25T18:00:34.120588Z",
+     "shell.execute_reply": "2021-09-25T18:00:34.119927Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -384,6 +499,12 @@
    "execution_count": 19,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:34.127004Z",
+     "iopub.status.busy": "2021-09-25T18:00:34.125761Z",
+     "iopub.status.idle": "2021-09-25T18:00:34.141283Z",
+     "shell.execute_reply": "2021-09-25T18:00:34.141803Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -420,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
