--- a/notebooks/pYPKa_A_CiGXF1.ipynb
+++ b/notebooks/pYPKa_A_CiGXF1.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:52.874085Z",
+     "iopub.status.busy": "2021-09-25T17:59:52.873315Z",
+     "iopub.status.idle": "2021-09-25T17:59:53.322248Z",
+     "shell.execute_reply": "2021-09-25T17:59:53.321728Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -15,7 +21,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:53.337891Z",
+     "iopub.status.busy": "2021-09-25T17:59:53.337353Z",
+     "iopub.status.idle": "2021-09-25T17:59:53.621791Z",
+     "shell.execute_reply": "2021-09-25T17:59:53.622196Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -53,7 +65,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:53.626401Z",
+     "iopub.status.busy": "2021-09-25T17:59:53.625341Z",
+     "iopub.status.idle": "2021-09-25T17:59:53.635950Z",
+     "shell.execute_reply": "2021-09-25T17:59:53.636311Z"
+    }
    },
    "outputs": [
     {
@@ -97,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
