--- a/notebooks/pYPKa_A_ScHIS3.ipynb
+++ b/notebooks/pYPKa_A_ScHIS3.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:54.981058Z",
+     "iopub.status.busy": "2021-09-25T17:59:54.980386Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.412112Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.412515Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.422927Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.419551Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.432118Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.432575Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.442808Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.442208Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.444798Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.445179Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.453238Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.451642Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.456825Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.456201Z"
+    }
    },
    "outputs": [
     {
@@ -119,7 +143,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.460714Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.459576Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.463351Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.462855Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -137,7 +167,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.467817Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.467149Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.470175Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.470719Z"
+    }
    },
    "outputs": [
     {
@@ -163,7 +199,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.478826Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.477976Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.481761Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.482318Z"
+    }
    },
    "outputs": [
     {
@@ -192,7 +234,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.490338Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.489444Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.492646Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.491908Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -213,7 +261,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.499378Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.498729Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.500920Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.501465Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -231,7 +285,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.506430Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.505742Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.513984Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.513404Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -249,7 +309,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.518835Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.518146Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.521117Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.521565Z"
+    }
    },
    "outputs": [
     {
@@ -282,7 +348,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.528651Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.528004Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.533885Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.533307Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -306,7 +378,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.539509Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.538798Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.541871Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.542376Z"
+    }
    },
    "outputs": [
     {
@@ -340,7 +418,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.548653Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.548056Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.550223Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.550714Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -358,7 +442,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.618923Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.583481Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.789592Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.789119Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -376,7 +466,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.798753Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.797696Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.801676Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.801275Z"
+    }
    },
    "outputs": [
     {
@@ -405,7 +501,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.809711Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.804707Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.816017Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.815550Z"
+    }
    },
    "outputs": [
     {
@@ -433,7 +535,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.825380Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.824500Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.827500Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.827969Z"
+    }
    },
    "outputs": [
     {
@@ -462,7 +570,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:55.841138Z",
+     "iopub.status.busy": "2021-09-25T17:59:55.831807Z",
+     "iopub.status.idle": "2021-09-25T17:59:55.843416Z",
+     "shell.execute_reply": "2021-09-25T17:59:55.842940Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -497,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
