--- a/notebooks/pYPKa_A_ScRPE1.ipynb
+++ b/notebooks/pYPKa_A_ScRPE1.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.214011Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.213402Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.649481Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.648903Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.661452Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.651504Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.669939Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.670325Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.680196Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.678694Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.683421Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.682846Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.691508Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.690763Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.693557Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.693988Z"
+    }
    },
    "outputs": [
     {
@@ -119,7 +143,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.698119Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.697395Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.699656Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.700193Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -137,7 +167,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.705532Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.704545Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.707930Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.708522Z"
+    }
    },
    "outputs": [
     {
@@ -163,7 +199,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.717072Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.716384Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.719675Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.719114Z"
+    }
    },
    "outputs": [
     {
@@ -192,7 +234,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.726675Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.725707Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.728711Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.728185Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -213,7 +261,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.734016Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.733191Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.735968Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.735445Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -231,7 +285,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.740622Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.740001Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.747527Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.748100Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -249,7 +309,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.753680Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.752886Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.756032Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.756641Z"
+    }
    },
    "outputs": [
     {
@@ -282,7 +348,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.764222Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.763596Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.768461Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.768957Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -305,7 +377,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.773976Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.773137Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.776053Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.776554Z"
+    }
    },
    "outputs": [
     {
@@ -339,7 +417,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.783580Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.782861Z",
+     "iopub.status.idle": "2021-09-25T18:00:01.787654Z",
+     "shell.execute_reply": "2021-09-25T18:00:01.786959Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -357,7 +441,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:01.815799Z",
+     "iopub.status.busy": "2021-09-25T18:00:01.800563Z",
+     "iopub.status.idle": "2021-09-25T18:00:02.021658Z",
+     "shell.execute_reply": "2021-09-25T18:00:02.021138Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -375,7 +465,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:02.029005Z",
+     "iopub.status.busy": "2021-09-25T18:00:02.028232Z",
+     "iopub.status.idle": "2021-09-25T18:00:02.032047Z",
+     "shell.execute_reply": "2021-09-25T18:00:02.031404Z"
+    }
    },
    "outputs": [
     {
@@ -404,7 +500,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:02.036889Z",
+     "iopub.status.busy": "2021-09-25T18:00:02.036050Z",
+     "iopub.status.idle": "2021-09-25T18:00:02.049260Z",
+     "shell.execute_reply": "2021-09-25T18:00:02.048797Z"
+    }
    },
    "outputs": [
     {
@@ -432,7 +534,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:02.056477Z",
+     "iopub.status.busy": "2021-09-25T18:00:02.055658Z",
+     "iopub.status.idle": "2021-09-25T18:00:02.058625Z",
+     "shell.execute_reply": "2021-09-25T18:00:02.059097Z"
+    }
    },
    "outputs": [
     {
@@ -463,7 +571,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:02.073232Z",
+     "iopub.status.busy": "2021-09-25T18:00:02.063138Z",
+     "iopub.status.idle": "2021-09-25T18:00:02.075250Z",
+     "shell.execute_reply": "2021-09-25T18:00:02.075694Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -498,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
