--- a/notebooks/pYPKa_E_ENO2.ipynb
+++ b/notebooks/pYPKa_E_ENO2.ipynb
@@ -21,6 +21,12 @@
    "execution_count": 1,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.218478Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.217786Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.659068Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.658518Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -42,6 +48,12 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.669470Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.667131Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.685187Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.684718Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -63,6 +75,12 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.695642Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.694975Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.698052Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.698546Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -100,6 +118,12 @@
    "execution_count": 4,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.707085Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.706332Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.709248Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.709649Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -133,6 +157,12 @@
    "execution_count": 5,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.713072Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.712623Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.714753Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.714276Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -154,6 +184,12 @@
    "execution_count": 6,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.720351Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.719746Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.722216Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.721721Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -178,6 +214,12 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.728170Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.727145Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.729537Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.730103Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -199,6 +241,12 @@
    "execution_count": 8,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.735895Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.734882Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.744128Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.743725Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -220,6 +268,12 @@
    "execution_count": 9,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.747699Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.747159Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.749631Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.749994Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -255,6 +309,12 @@
    "execution_count": 10,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.754030Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.753257Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.757467Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.756796Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -289,6 +349,12 @@
    "execution_count": 11,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.763346Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.762503Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.766488Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.765883Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -321,6 +387,12 @@
    "execution_count": 12,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.774414Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.773728Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.779057Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.779684Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -347,6 +419,12 @@
    "execution_count": 13,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.786131Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.784986Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.788782Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.789453Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -384,6 +462,12 @@
    "execution_count": 14,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.797025Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.792734Z",
+     "iopub.status.idle": "2021-09-25T18:00:05.799617Z",
+     "shell.execute_reply": "2021-09-25T18:00:05.799015Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -405,6 +489,12 @@
    "execution_count": 15,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:05.827365Z",
+     "iopub.status.busy": "2021-09-25T18:00:05.817298Z",
+     "iopub.status.idle": "2021-09-25T18:00:06.031480Z",
+     "shell.execute_reply": "2021-09-25T18:00:06.031877Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -428,6 +518,12 @@
    "execution_count": 16,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:06.039719Z",
+     "iopub.status.busy": "2021-09-25T18:00:06.038872Z",
+     "iopub.status.idle": "2021-09-25T18:00:06.042178Z",
+     "shell.execute_reply": "2021-09-25T18:00:06.042694Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -460,6 +556,12 @@
    "execution_count": 17,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:06.047004Z",
+     "iopub.status.busy": "2021-09-25T18:00:06.046407Z",
+     "iopub.status.idle": "2021-09-25T18:00:06.048498Z",
+     "shell.execute_reply": "2021-09-25T18:00:06.048995Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -482,6 +584,12 @@
    "execution_count": 18,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:06.057313Z",
+     "iopub.status.busy": "2021-09-25T18:00:06.056722Z",
+     "iopub.status.idle": "2021-09-25T18:00:06.059556Z",
+     "shell.execute_reply": "2021-09-25T18:00:06.059125Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -514,6 +622,12 @@
    "execution_count": 19,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:06.062764Z",
+     "iopub.status.busy": "2021-09-25T18:00:06.062302Z",
+     "iopub.status.idle": "2021-09-25T18:00:06.074583Z",
+     "shell.execute_reply": "2021-09-25T18:00:06.073928Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -545,6 +659,12 @@
    "execution_count": 20,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:06.078849Z",
+     "iopub.status.busy": "2021-09-25T18:00:06.078383Z",
+     "iopub.status.idle": "2021-09-25T18:00:06.086406Z",
+     "shell.execute_reply": "2021-09-25T18:00:06.086793Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -585,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
