--- a/notebooks/pYPKa_E_PDC1.ipynb
+++ b/notebooks/pYPKa_E_PDC1.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.346459Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.345517Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.784962Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.784236Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.793549Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.787030Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.805840Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.805333Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.815168Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.814697Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.816999Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.817375Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.824541Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.823740Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.827155Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.826653Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.831397Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.830792Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.833585Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.832996Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.840093Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.839438Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.842096Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.841552Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.847664Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.846945Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.849032Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.849652Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.855096Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.854384Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.861195Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.860720Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.864904Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.864315Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.867533Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.866834Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.873177Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.872150Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.875930Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.875288Z"
+    }
    },
    "outputs": [
     {
@@ -258,7 +318,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.880614Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.879957Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.883235Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.883814Z"
+    }
    },
    "outputs": [
     {
@@ -287,7 +353,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.891107Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.890534Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.894908Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.895367Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -310,7 +382,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.900125Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.899342Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.902466Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.903037Z"
+    }
    },
    "outputs": [
     {
@@ -344,7 +422,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.909466Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.908728Z",
+     "iopub.status.idle": "2021-09-25T18:00:09.911799Z",
+     "shell.execute_reply": "2021-09-25T18:00:09.911197Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -362,7 +446,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:09.960741Z",
+     "iopub.status.busy": "2021-09-25T18:00:09.930048Z",
+     "iopub.status.idle": "2021-09-25T18:00:10.154574Z",
+     "shell.execute_reply": "2021-09-25T18:00:10.154074Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -382,7 +472,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:10.162405Z",
+     "iopub.status.busy": "2021-09-25T18:00:10.161584Z",
+     "iopub.status.idle": "2021-09-25T18:00:10.164966Z",
+     "shell.execute_reply": "2021-09-25T18:00:10.164407Z"
+    }
    },
    "outputs": [
     {
@@ -411,7 +507,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:10.170030Z",
+     "iopub.status.busy": "2021-09-25T18:00:10.169236Z",
+     "iopub.status.idle": "2021-09-25T18:00:10.172272Z",
+     "shell.execute_reply": "2021-09-25T18:00:10.171583Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -430,7 +532,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:10.184022Z",
+     "iopub.status.busy": "2021-09-25T18:00:10.183087Z",
+     "iopub.status.idle": "2021-09-25T18:00:10.186322Z",
+     "shell.execute_reply": "2021-09-25T18:00:10.186729Z"
+    }
    },
    "outputs": [
     {
@@ -459,7 +567,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:10.194044Z",
+     "iopub.status.busy": "2021-09-25T18:00:10.193149Z",
+     "iopub.status.idle": "2021-09-25T18:00:10.198518Z",
+     "shell.execute_reply": "2021-09-25T18:00:10.198880Z"
+    }
    },
    "outputs": [
     {
@@ -487,7 +601,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:10.207430Z",
+     "iopub.status.busy": "2021-09-25T18:00:10.201795Z",
+     "iopub.status.idle": "2021-09-25T18:00:10.211896Z",
+     "shell.execute_reply": "2021-09-25T18:00:10.211393Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -522,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
