--- a/notebooks/pYPKa_E_PGI1.ipynb
+++ b/notebooks/pYPKa_E_PGI1.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:11.608350Z",
+     "iopub.status.busy": "2021-09-25T18:00:11.607709Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.055832Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.055416Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.066317Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.065596Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.074780Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.074271Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.083129Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.082465Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.085219Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.085558Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.092343Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.091671Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.094505Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.094970Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.099678Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.098880Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.100979Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.101540Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.108540Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.107657Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.110053Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.110477Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.114495Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.114061Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.115702Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.116070Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.119746Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.119287Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.126974Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.126538Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.130831Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.130235Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.132521Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.132889Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.136834Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.136012Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.139756Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.140393Z"
+    }
    },
    "outputs": [
     {
@@ -258,7 +318,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.146680Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.145725Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.148995Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.149582Z"
+    }
    },
    "outputs": [
     {
@@ -287,7 +353,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.157767Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.156896Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.162508Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.162930Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -310,7 +382,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.166868Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.166226Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.169280Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.168769Z"
+    }
    },
    "outputs": [
     {
@@ -344,7 +422,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.177202Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.176151Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.178369Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.178835Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -362,7 +446,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.257402Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.221786Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.421309Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.420820Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -382,7 +472,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.429339Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.428741Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.432319Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.432741Z"
+    }
    },
    "outputs": [
     {
@@ -411,7 +507,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.436963Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.436186Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.438382Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.438897Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -430,7 +532,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.448006Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.447346Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.449991Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.450346Z"
+    }
    },
    "outputs": [
     {
@@ -459,7 +567,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.458773Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.453520Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.465830Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.465295Z"
+    }
    },
    "outputs": [
     {
@@ -487,7 +601,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:12.475139Z",
+     "iopub.status.busy": "2021-09-25T18:00:12.469849Z",
+     "iopub.status.idle": "2021-09-25T18:00:12.481969Z",
+     "shell.execute_reply": "2021-09-25T18:00:12.481470Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -522,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
