--- a/notebooks/pYPKa_E_RPS19a.ipynb
+++ b/notebooks/pYPKa_E_RPS19a.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:15.540575Z",
+     "iopub.status.busy": "2021-09-25T18:00:15.539951Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.059685Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.059127Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.071050Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.067699Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.084010Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.083304Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.099617Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.092398Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.103873Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.103038Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.111025Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.110391Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.115460Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.115849Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.122122Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.121360Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.123522Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.123998Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.132888Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.131913Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.134803Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.135414Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.140747Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.139933Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.142055Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.142571Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.149193Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.148096Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.155853Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.156332Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.160985Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.159031Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.165454Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.165949Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.171625Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.170881Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.174005Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.174507Z"
+    }
    },
    "outputs": [
     {
@@ -258,7 +318,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.180028Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.179224Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.183111Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.182547Z"
+    }
    },
    "outputs": [
     {
@@ -287,7 +353,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.190948Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.190238Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.196023Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.195416Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -310,7 +382,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.203103Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.201854Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.206405Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.205902Z"
+    }
    },
    "outputs": [
     {
@@ -344,7 +422,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.212544Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.211832Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.214200Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.213647Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -362,7 +446,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.267765Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.241975Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.445948Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.445374Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -382,7 +472,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.453033Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.452209Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.455826Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.455236Z"
+    }
    },
    "outputs": [
     {
@@ -411,7 +507,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.460170Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.459402Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.461827Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.462314Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -430,7 +532,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.470675Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.470152Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.473140Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.472713Z"
+    }
    },
    "outputs": [
     {
@@ -459,7 +567,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.476491Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.475989Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.487595Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.488194Z"
+    }
    },
    "outputs": [
     {
@@ -487,7 +601,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:16.498011Z",
+     "iopub.status.busy": "2021-09-25T18:00:16.491714Z",
+     "iopub.status.idle": "2021-09-25T18:00:16.500067Z",
+     "shell.execute_reply": "2021-09-25T18:00:16.500544Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -522,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
