--- a/notebooks/pYPKa_E_RPS19b.ipynb
+++ b/notebooks/pYPKa_E_RPS19b.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.021744Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.021002Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.590273Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.589501Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.602223Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.600996Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.618606Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.619128Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.628380Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.627812Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.630770Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.631216Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.638926Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.633614Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.642504Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.641953Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.648043Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.646984Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.650083Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.649445Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.657635Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.653236Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.660492Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.661197Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.666340Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.665750Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.667964Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.668436Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.673841Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.672639Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.681341Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.680577Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.686286Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.685649Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.688413Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.688902Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.694511Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.693677Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.697269Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.696669Z"
+    }
    },
    "outputs": [
     {
@@ -258,7 +318,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.701785Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.701130Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.703959Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.704437Z"
+    }
    },
    "outputs": [
     {
@@ -287,7 +353,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.711908Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.711220Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.716090Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.716587Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -310,7 +382,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.722186Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.721210Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.724671Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.725216Z"
+    }
    },
    "outputs": [
     {
@@ -344,7 +422,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.729957Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.729390Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.731051Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.731418Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -362,7 +446,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.810849Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.774952Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.989280Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.988755Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -382,7 +472,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:18.997216Z",
+     "iopub.status.busy": "2021-09-25T18:00:18.996439Z",
+     "iopub.status.idle": "2021-09-25T18:00:18.999949Z",
+     "shell.execute_reply": "2021-09-25T18:00:18.999463Z"
+    }
    },
    "outputs": [
     {
@@ -411,7 +507,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:19.004919Z",
+     "iopub.status.busy": "2021-09-25T18:00:19.004196Z",
+     "iopub.status.idle": "2021-09-25T18:00:19.006038Z",
+     "shell.execute_reply": "2021-09-25T18:00:19.006494Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -430,7 +532,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:19.014983Z",
+     "iopub.status.busy": "2021-09-25T18:00:19.014326Z",
+     "iopub.status.idle": "2021-09-25T18:00:19.017166Z",
+     "shell.execute_reply": "2021-09-25T18:00:19.017657Z"
+    }
    },
    "outputs": [
     {
@@ -459,7 +567,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:19.021025Z",
+     "iopub.status.busy": "2021-09-25T18:00:19.020563Z",
+     "iopub.status.idle": "2021-09-25T18:00:19.033737Z",
+     "shell.execute_reply": "2021-09-25T18:00:19.034178Z"
+    }
    },
    "outputs": [
     {
@@ -487,7 +601,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:19.043663Z",
+     "iopub.status.busy": "2021-09-25T18:00:19.037346Z",
+     "iopub.status.idle": "2021-09-25T18:00:19.045604Z",
+     "shell.execute_reply": "2021-09-25T18:00:19.046049Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -513,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
