--- a/notebooks/pYPKa_E_TDH1.ipynb
+++ b/notebooks/pYPKa_E_TDH1.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:20.255643Z",
+     "iopub.status.busy": "2021-09-25T18:00:20.254959Z",
+     "iopub.status.idle": "2021-09-25T18:00:20.963273Z",
+     "shell.execute_reply": "2021-09-25T18:00:20.963719Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:20.979079Z",
+     "iopub.status.busy": "2021-09-25T18:00:20.978229Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.016121Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.015174Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.030764Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.029988Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.039481Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.040740Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.052327Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.043844Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.055165Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.054777Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.058905Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.058226Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.060760Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.060298Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.069809Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.069276Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.071531Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.071871Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.077448Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.076764Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.078598Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.079103Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.087041Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.081595Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.094020Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.093572Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.106587Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.105729Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.108184Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.106150Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.119508Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.116868Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.122195Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.122897Z"
+    }
    },
    "outputs": [
     {
@@ -256,7 +316,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.130460Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.129697Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.136144Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.136793Z"
+    }
    },
    "outputs": [
     {
@@ -294,7 +360,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.143505Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.142683Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.149417Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.149809Z"
+    }
    },
    "outputs": [
     {
@@ -328,7 +400,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.155555Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.154888Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.157525Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.156981Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -346,7 +424,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.184539Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.183314Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.511445Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.512062Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -357,7 +441,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.520336Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.519560Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.522431Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.523080Z"
+    }
    },
    "outputs": [
     {
@@ -386,7 +476,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.529147Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.527670Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.530681Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.531304Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -405,7 +501,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.539315Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.538572Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.542635Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.543384Z"
+    }
    },
    "outputs": [
     {
@@ -434,7 +536,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.550538Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.549691Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.569689Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.570379Z"
+    }
    },
    "outputs": [
     {
@@ -462,7 +570,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:21.575307Z",
+     "iopub.status.busy": "2021-09-25T18:00:21.574390Z",
+     "iopub.status.idle": "2021-09-25T18:00:21.592402Z",
+     "shell.execute_reply": "2021-09-25T18:00:21.591909Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -497,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
