--- a/notebooks/pYPKa_E_TPI1.ipynb
+++ b/notebooks/pYPKa_E_TPI1.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.078023Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.077491Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.550849Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.549917Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.562959Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.559438Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.577399Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.576962Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.591486Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.590472Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.594395Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.594798Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.601428Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.600717Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.604211Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.604655Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.608695Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.608143Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.610270Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.610699Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.620109Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.619318Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.621808Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.622221Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.628392Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.627569Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.631954Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.631410Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.636328Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.635584Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.643985Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.643465Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.648668Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.647823Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.652532Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.651429Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.660625Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.659465Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.663114Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.663687Z"
+    }
    },
    "outputs": [
     {
@@ -255,7 +315,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.674077Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.671436Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.678115Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.679034Z"
+    }
    },
    "outputs": [
     {
@@ -284,7 +350,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.684329Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.683818Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.692373Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.693234Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -302,7 +374,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.698961Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.698466Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.711900Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.712520Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -320,7 +398,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.717952Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.716940Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.727797Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.728796Z"
+    }
    },
    "outputs": [
     {
@@ -354,7 +438,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.739013Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.737297Z",
+     "iopub.status.idle": "2021-09-25T18:00:30.744176Z",
+     "shell.execute_reply": "2021-09-25T18:00:30.742743Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -372,7 +462,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:30.755854Z",
+     "iopub.status.busy": "2021-09-25T18:00:30.755100Z",
+     "iopub.status.idle": "2021-09-25T18:00:31.185307Z",
+     "shell.execute_reply": "2021-09-25T18:00:31.184645Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -392,7 +488,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:31.194013Z",
+     "iopub.status.busy": "2021-09-25T18:00:31.193405Z",
+     "iopub.status.idle": "2021-09-25T18:00:31.196625Z",
+     "shell.execute_reply": "2021-09-25T18:00:31.196155Z"
+    }
    },
    "outputs": [
     {
@@ -421,7 +523,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:31.202081Z",
+     "iopub.status.busy": "2021-09-25T18:00:31.199397Z",
+     "iopub.status.idle": "2021-09-25T18:00:31.204963Z",
+     "shell.execute_reply": "2021-09-25T18:00:31.205527Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -440,7 +548,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:31.219762Z",
+     "iopub.status.busy": "2021-09-25T18:00:31.219201Z",
+     "iopub.status.idle": "2021-09-25T18:00:31.228936Z",
+     "shell.execute_reply": "2021-09-25T18:00:31.228112Z"
+    }
    },
    "outputs": [
     {
@@ -469,7 +583,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:31.237186Z",
+     "iopub.status.busy": "2021-09-25T18:00:31.235769Z",
+     "iopub.status.idle": "2021-09-25T18:00:31.254660Z",
+     "shell.execute_reply": "2021-09-25T18:00:31.253552Z"
+    }
    },
    "outputs": [
     {
@@ -497,7 +617,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:31.258659Z",
+     "iopub.status.busy": "2021-09-25T18:00:31.258171Z",
+     "iopub.status.idle": "2021-09-25T18:00:31.266448Z",
+     "shell.execute_reply": "2021-09-25T18:00:31.267247Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -523,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
