--- a/notebooks/pYPKa_Z_PDC1.ipynb
+++ b/notebooks/pYPKa_Z_PDC1.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:38.186734Z",
+     "iopub.status.busy": "2021-09-25T18:00:38.185702Z",
+     "iopub.status.idle": "2021-09-25T18:00:38.831796Z",
+     "shell.execute_reply": "2021-09-25T18:00:38.832182Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:38.856257Z",
+     "iopub.status.busy": "2021-09-25T18:00:38.848378Z",
+     "iopub.status.idle": "2021-09-25T18:00:38.880798Z",
+     "shell.execute_reply": "2021-09-25T18:00:38.878835Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:38.895599Z",
+     "iopub.status.busy": "2021-09-25T18:00:38.894503Z",
+     "iopub.status.idle": "2021-09-25T18:00:38.918436Z",
+     "shell.execute_reply": "2021-09-25T18:00:38.930732Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:38.944429Z",
+     "iopub.status.busy": "2021-09-25T18:00:38.943664Z",
+     "iopub.status.idle": "2021-09-25T18:00:38.954908Z",
+     "shell.execute_reply": "2021-09-25T18:00:38.959121Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:38.967089Z",
+     "iopub.status.busy": "2021-09-25T18:00:38.964222Z",
+     "iopub.status.idle": "2021-09-25T18:00:38.969346Z",
+     "shell.execute_reply": "2021-09-25T18:00:38.970031Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:38.977794Z",
+     "iopub.status.busy": "2021-09-25T18:00:38.976635Z",
+     "iopub.status.idle": "2021-09-25T18:00:38.995502Z",
+     "shell.execute_reply": "2021-09-25T18:00:38.996254Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.002729Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.002227Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.004035Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.004744Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.009454Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.008448Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.018733Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.019205Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.023528Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.022918Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.026058Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.026844Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.032213Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.031536Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.035075Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.036193Z"
+    }
    },
    "outputs": [
     {
@@ -258,7 +318,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.043778Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.042699Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.047733Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.048174Z"
+    }
    },
    "outputs": [
     {
@@ -287,7 +353,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.056407Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.055146Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.061383Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.061851Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -310,7 +382,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.066277Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.065584Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.069783Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.070592Z"
+    }
    },
    "outputs": [
     {
@@ -344,7 +422,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.079167Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.078084Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.080173Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.080813Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -362,7 +446,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.145088Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.109756Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.375961Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.376398Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -382,7 +472,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.383987Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.383147Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.387096Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.387830Z"
+    }
    },
    "outputs": [
     {
@@ -411,7 +507,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.394026Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.392910Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.395205Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.395722Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -430,7 +532,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.405386Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.403734Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.408766Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.409267Z"
+    }
    },
    "outputs": [
     {
@@ -459,7 +567,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.414157Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.413209Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.424817Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.424301Z"
+    }
    },
    "outputs": [
     {
@@ -487,7 +601,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:39.431044Z",
+     "iopub.status.busy": "2021-09-25T18:00:39.429898Z",
+     "iopub.status.idle": "2021-09-25T18:00:39.442076Z",
+     "shell.execute_reply": "2021-09-25T18:00:39.441641Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -522,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
