--- a/notebooks/pYPKa_Z_PGI1.ipynb
+++ b/notebooks/pYPKa_Z_PGI1.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:40.966903Z",
+     "iopub.status.busy": "2021-09-25T18:00:40.966252Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.454255Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.454624Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.462964Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.462406Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.476479Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.476098Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +67,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.486901Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.486433Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.488898Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.489330Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -87,7 +106,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.496838Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.495972Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.499383Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.499920Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -116,7 +142,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.504758Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.504141Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.506044Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.506522Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -134,7 +166,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.513887Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.512931Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.515772Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.516718Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -155,7 +193,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.522948Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.520395Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.525009Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.525522Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -172,7 +216,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.530060Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.529474Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.537248Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.537808Z"
+    }
+   },
    "outputs": [],
    "source": [
     "template = gb.nucleotide(\"BK006936.2 REGION: complement(613901..615202)\")"
@@ -188,7 +239,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.543244Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.542283Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.545939Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.546625Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -218,7 +276,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.555246Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.554525Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.557411Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.558235Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -247,7 +312,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.563724Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.563004Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.567042Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.566006Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -274,7 +346,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.575319Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.571577Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.580614Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.579820Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f,r =parse(\"\"\">549_ScPGI1tpf (27-mer)\n",
@@ -296,7 +375,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.586790Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.585889Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.589070Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.589739Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -329,7 +415,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.596282Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.592846Z",
+     "iopub.status.idle": "2021-09-25T18:00:41.599450Z",
+     "shell.execute_reply": "2021-09-25T18:00:41.598827Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -347,7 +439,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:41.615430Z",
+     "iopub.status.busy": "2021-09-25T18:00:41.614987Z",
+     "iopub.status.idle": "2021-09-25T18:00:42.003596Z",
+     "shell.execute_reply": "2021-09-25T18:00:42.003154Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -366,7 +464,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:42.013933Z",
+     "iopub.status.busy": "2021-09-25T18:00:42.013431Z",
+     "iopub.status.idle": "2021-09-25T18:00:42.016520Z",
+     "shell.execute_reply": "2021-09-25T18:00:42.016988Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -394,7 +499,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:42.020972Z",
+     "iopub.status.busy": "2021-09-25T18:00:42.020361Z",
+     "iopub.status.idle": "2021-09-25T18:00:42.022839Z",
+     "shell.execute_reply": "2021-09-25T18:00:42.022421Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -412,7 +523,14 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:42.037762Z",
+     "iopub.status.busy": "2021-09-25T18:00:42.036795Z",
+     "iopub.status.idle": "2021-09-25T18:00:42.039945Z",
+     "shell.execute_reply": "2021-09-25T18:00:42.040541Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -439,7 +557,14 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:42.044638Z",
+     "iopub.status.busy": "2021-09-25T18:00:42.043801Z",
+     "iopub.status.idle": "2021-09-25T18:00:42.056825Z",
+     "shell.execute_reply": "2021-09-25T18:00:42.056099Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -465,7 +590,14 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:42.061470Z",
+     "iopub.status.busy": "2021-09-25T18:00:42.060457Z",
+     "iopub.status.idle": "2021-09-25T18:00:42.070487Z",
+     "shell.execute_reply": "2021-09-25T18:00:42.069856Z"
+    }
+   },
    "outputs": [],
    "source": [
     "reloaded =read(\"pYPKa_Z_PGI1.gb\")\n",
@@ -490,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
