--- a/notebooks/pYPKa_Z_RPS19a.ipynb
+++ b/notebooks/pYPKa_Z_RPS19a.ipynb
@@ -19,7 +19,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:43.512057Z",
+     "iopub.status.busy": "2021-09-25T18:00:43.511531Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.040746Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.040232Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pydna.all import *"
@@ -35,7 +42,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.054790Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.052008Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.064777Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.065456Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pYPKa =read(\"pYPKa.gb\")"
@@ -51,7 +65,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.077178Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.076459Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.084569Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.083985Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -83,7 +104,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.091688Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.091118Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.093875Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.094238Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -111,7 +139,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.098564Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.098114Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.101024Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.100538Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from Bio.Restriction import ZraI"
@@ -127,7 +162,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.110381Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.109722Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.111988Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.112620Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pYPKa_ZraI = pYPKa.linearize(ZraI)"
@@ -146,7 +188,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.119182Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.118729Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.121671Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.122031Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gb =Genbank(\"bjornjobb@gmail.com\")"
@@ -162,7 +211,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.129907Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.128550Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.140179Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.140538Z"
+    }
+   },
    "outputs": [],
    "source": [
     "template = gb.nucleotide(\"BK006948.2 REGION: complement(92851..93394)\")"
@@ -178,7 +234,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.146446Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.145804Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.148501Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.148859Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -208,7 +271,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.154178Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.153572Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.156175Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.158093Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -237,7 +307,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.169891Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.168583Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.171975Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.169054Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -264,7 +341,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.178603Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.177831Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.183613Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.183189Z"
+    }
+   },
    "outputs": [],
    "source": [
     "f,r =parse(\"\"\">652_ScRPS19atpf2\n",
@@ -285,7 +369,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.190771Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.189954Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.194066Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.194770Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -317,7 +408,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.201665Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.200789Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.202880Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.203527Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plasmid = (pYPKa_ZraI + insert).looped()"
@@ -333,7 +431,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.257893Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.216393Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.507723Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.508120Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pYPKa_Z_RPS19a = plasmid.synced(pYPKa)"
@@ -351,7 +456,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.516163Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.515448Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.519382Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.518876Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -371,7 +483,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.524890Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.523859Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.528010Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.527418Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -398,7 +517,14 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.532644Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.532087Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.534847Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.534380Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pYPKa_Z_RPS19a.name = \"pYPKa_Z_RPS19a\"\n",
@@ -415,7 +541,14 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.543689Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.542822Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.546328Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.546726Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -442,7 +575,14 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.550286Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.549619Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.560005Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.559473Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -468,7 +608,14 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:44.572810Z",
+     "iopub.status.busy": "2021-09-25T18:00:44.570251Z",
+     "iopub.status.idle": "2021-09-25T18:00:44.574806Z",
+     "shell.execute_reply": "2021-09-25T18:00:44.575188Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pydna.all import *\n",
@@ -493,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
