--- a/notebooks/pYPKa_Z_RPS19b.ipynb
+++ b/notebooks/pYPKa_Z_RPS19b.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:46.950568Z",
+     "iopub.status.busy": "2021-09-25T18:00:46.943707Z",
+     "iopub.status.idle": "2021-09-25T18:00:47.821326Z",
+     "shell.execute_reply": "2021-09-25T18:00:47.819669Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:47.826907Z",
+     "iopub.status.busy": "2021-09-25T18:00:47.826121Z",
+     "iopub.status.idle": "2021-09-25T18:00:47.862377Z",
+     "shell.execute_reply": "2021-09-25T18:00:47.861716Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:47.879114Z",
+     "iopub.status.busy": "2021-09-25T18:00:47.878351Z",
+     "iopub.status.idle": "2021-09-25T18:00:47.886945Z",
+     "shell.execute_reply": "2021-09-25T18:00:47.887334Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:47.894543Z",
+     "iopub.status.busy": "2021-09-25T18:00:47.893098Z",
+     "iopub.status.idle": "2021-09-25T18:00:47.904013Z",
+     "shell.execute_reply": "2021-09-25T18:00:47.902923Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:47.911068Z",
+     "iopub.status.busy": "2021-09-25T18:00:47.910195Z",
+     "iopub.status.idle": "2021-09-25T18:00:47.912129Z",
+     "shell.execute_reply": "2021-09-25T18:00:47.912703Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:47.924926Z",
+     "iopub.status.busy": "2021-09-25T18:00:47.924116Z",
+     "iopub.status.idle": "2021-09-25T18:00:47.927266Z",
+     "shell.execute_reply": "2021-09-25T18:00:47.927890Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:47.937581Z",
+     "iopub.status.busy": "2021-09-25T18:00:47.935815Z",
+     "iopub.status.idle": "2021-09-25T18:00:47.941002Z",
+     "shell.execute_reply": "2021-09-25T18:00:47.939176Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:47.947659Z",
+     "iopub.status.busy": "2021-09-25T18:00:47.947061Z",
+     "iopub.status.idle": "2021-09-25T18:00:47.959769Z",
+     "shell.execute_reply": "2021-09-25T18:00:47.961424Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:47.970482Z",
+     "iopub.status.busy": "2021-09-25T18:00:47.966284Z",
+     "iopub.status.idle": "2021-09-25T18:00:47.976932Z",
+     "shell.execute_reply": "2021-09-25T18:00:47.978932Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:47.990724Z",
+     "iopub.status.busy": "2021-09-25T18:00:47.989599Z",
+     "iopub.status.idle": "2021-09-25T18:00:47.996421Z",
+     "shell.execute_reply": "2021-09-25T18:00:47.997231Z"
+    }
    },
    "outputs": [
     {
@@ -258,7 +318,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:48.009054Z",
+     "iopub.status.busy": "2021-09-25T18:00:48.008349Z",
+     "iopub.status.idle": "2021-09-25T18:00:48.013517Z",
+     "shell.execute_reply": "2021-09-25T18:00:48.013081Z"
+    }
    },
    "outputs": [
     {
@@ -287,7 +353,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:48.027679Z",
+     "iopub.status.busy": "2021-09-25T18:00:48.027018Z",
+     "iopub.status.idle": "2021-09-25T18:00:48.032209Z",
+     "shell.execute_reply": "2021-09-25T18:00:48.032853Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -310,7 +382,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:48.053585Z",
+     "iopub.status.busy": "2021-09-25T18:00:48.050206Z",
+     "iopub.status.idle": "2021-09-25T18:00:48.059516Z",
+     "shell.execute_reply": "2021-09-25T18:00:48.060800Z"
+    }
    },
    "outputs": [
     {
@@ -344,7 +422,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:48.075433Z",
+     "iopub.status.busy": "2021-09-25T18:00:48.072805Z",
+     "iopub.status.idle": "2021-09-25T18:00:48.079126Z",
+     "shell.execute_reply": "2021-09-25T18:00:48.078042Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -362,7 +446,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:48.093666Z",
+     "iopub.status.busy": "2021-09-25T18:00:48.091483Z",
+     "iopub.status.idle": "2021-09-25T18:00:48.415794Z",
+     "shell.execute_reply": "2021-09-25T18:00:48.416202Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -382,7 +472,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:48.423998Z",
+     "iopub.status.busy": "2021-09-25T18:00:48.423156Z",
+     "iopub.status.idle": "2021-09-25T18:00:48.426692Z",
+     "shell.execute_reply": "2021-09-25T18:00:48.426169Z"
+    }
    },
    "outputs": [
     {
@@ -411,7 +507,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:48.431581Z",
+     "iopub.status.busy": "2021-09-25T18:00:48.430586Z",
+     "iopub.status.idle": "2021-09-25T18:00:48.433260Z",
+     "shell.execute_reply": "2021-09-25T18:00:48.433964Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -430,7 +532,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:48.445921Z",
+     "iopub.status.busy": "2021-09-25T18:00:48.444834Z",
+     "iopub.status.idle": "2021-09-25T18:00:48.448488Z",
+     "shell.execute_reply": "2021-09-25T18:00:48.448891Z"
+    }
    },
    "outputs": [
     {
@@ -459,7 +567,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:48.452705Z",
+     "iopub.status.busy": "2021-09-25T18:00:48.452237Z",
+     "iopub.status.idle": "2021-09-25T18:00:48.462966Z",
+     "shell.execute_reply": "2021-09-25T18:00:48.463331Z"
+    }
    },
    "outputs": [
     {
@@ -487,7 +601,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:48.477470Z",
+     "iopub.status.busy": "2021-09-25T18:00:48.466746Z",
+     "iopub.status.idle": "2021-09-25T18:00:48.479637Z",
+     "shell.execute_reply": "2021-09-25T18:00:48.480027Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -513,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
