--- a/notebooks/pYPKa_Z_TDH3.ipynb
+++ b/notebooks/pYPKa_Z_TDH3.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:53.455822Z",
+     "iopub.status.busy": "2021-09-25T18:00:53.454824Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.048766Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.048214Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.060544Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.059933Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.075136Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.074657Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.084292Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.083554Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.087857Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.087358Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.096288Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.095464Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.098792Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.099557Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.104212Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.103566Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.106147Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.105653Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.112157Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.111550Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.113715Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.114235Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.121795Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.120596Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.124053Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.123361Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.130597Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.129750Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.137160Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.137590Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.141117Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.140537Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.143230Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.143909Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.149811Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.148866Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.152891Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.152320Z"
+    }
    },
    "outputs": [
     {
@@ -255,7 +315,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.158340Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.157518Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.161092Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.161733Z"
+    }
    },
    "outputs": [
     {
@@ -284,7 +350,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.170450Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.166936Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.175524Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.174969Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -307,7 +379,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.179491Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.178973Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.182463Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.181619Z"
+    }
    },
    "outputs": [
     {
@@ -341,7 +419,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.189414Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.188738Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.191064Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.191606Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -359,7 +443,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.200888Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.199892Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.440466Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.439941Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -379,7 +469,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.447201Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.446543Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.450455Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.449809Z"
+    }
    },
    "outputs": [
     {
@@ -408,7 +504,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.454858Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.454261Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.456490Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.456987Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -427,7 +529,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.466117Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.465177Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.468827Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.468260Z"
+    }
    },
    "outputs": [
     {
@@ -456,7 +564,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.479999Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.478860Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.484690Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.485117Z"
+    }
    },
    "outputs": [
     {
@@ -484,7 +598,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:54.488857Z",
+     "iopub.status.busy": "2021-09-25T18:00:54.488180Z",
+     "iopub.status.idle": "2021-09-25T18:00:54.497341Z",
+     "shell.execute_reply": "2021-09-25T18:00:54.496753Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -510,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
