--- a/notebooks/pYPKa_Z_TEF1.ipynb
+++ b/notebooks/pYPKa_Z_TEF1.ipynb
@@ -19,7 +19,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:55.835029Z",
+     "iopub.status.busy": "2021-09-25T18:00:55.834403Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.381759Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.382326Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pydna.all import *"
@@ -36,7 +43,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.395280Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.392139Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.409765Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.409208Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -53,7 +66,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.418498Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.417518Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.423373Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.423980Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -85,7 +105,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.433749Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.432842Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.436809Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.436356Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -114,7 +141,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.440095Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.439628Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.441695Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.442177Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -132,7 +165,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.448743Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.448103Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.450479Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.450995Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -153,7 +192,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.456606Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.455976Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.458503Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.459096Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -171,7 +216,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.465234Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.464336Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.472078Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.471621Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -188,7 +239,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.475715Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.475189Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.477788Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.478342Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -218,7 +276,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.483823Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.483021Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.486890Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.486316Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -247,7 +312,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.492154Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.491328Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.495024Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.494523Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -275,7 +347,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.503036Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.501608Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.507318Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.506805Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -297,7 +375,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.511316Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.510667Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.513451Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.514126Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -330,7 +415,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.521370Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.520567Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.523070Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.523646Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -348,7 +439,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.582337Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.546729Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.759058Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.759479Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -367,7 +464,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.766300Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.765438Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.769085Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.768582Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -395,7 +499,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.773130Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.772521Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.774724Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.775269Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -413,7 +523,14 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.784648Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.783974Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.786767Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.786381Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -440,7 +557,14 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.789986Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.789490Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.800653Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.801254Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -466,7 +590,14 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:56.812215Z",
+     "iopub.status.busy": "2021-09-25T18:00:56.806256Z",
+     "iopub.status.idle": "2021-09-25T18:00:56.814107Z",
+     "shell.execute_reply": "2021-09-25T18:00:56.814473Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pydna.all import *\n",
@@ -491,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
