--- a/notebooks/pYPKp4.ipynb
+++ b/notebooks/pYPKp4.ipynb
@@ -14,7 +14,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:03.985171Z",
+     "iopub.status.busy": "2021-09-25T18:01:03.975501Z",
+     "iopub.status.idle": "2021-09-25T18:01:04.461851Z",
+     "shell.execute_reply": "2021-09-25T18:01:04.461210Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -27,7 +33,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:04.473774Z",
+     "iopub.status.busy": "2021-09-25T18:01:04.473111Z",
+     "iopub.status.idle": "2021-09-25T18:01:05.357773Z",
+     "shell.execute_reply": "2021-09-25T18:01:05.357300Z"
+    }
    },
    "outputs": [
     {
@@ -63,7 +75,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:05.361372Z",
+     "iopub.status.busy": "2021-09-25T18:01:05.360831Z",
+     "iopub.status.idle": "2021-09-25T18:01:05.363905Z",
+     "shell.execute_reply": "2021-09-25T18:01:05.362894Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -74,7 +92,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:05.368756Z",
+     "iopub.status.busy": "2021-09-25T18:01:05.368101Z",
+     "iopub.status.idle": "2021-09-25T18:01:05.377709Z",
+     "shell.execute_reply": "2021-09-25T18:01:05.378142Z"
+    }
    },
    "outputs": [
     {
@@ -102,7 +126,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:05.382972Z",
+     "iopub.status.busy": "2021-09-25T18:01:05.382156Z",
+     "iopub.status.idle": "2021-09-25T18:01:05.393367Z",
+     "shell.execute_reply": "2021-09-25T18:01:05.393719Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -137,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
