--- a/notebooks/pYPKp7.ipynb
+++ b/notebooks/pYPKp7.ipynb
@@ -17,6 +17,12 @@
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:06.684481Z",
+     "iopub.status.busy": "2021-09-25T18:01:06.684019Z",
+     "iopub.status.idle": "2021-09-25T18:01:07.232497Z",
+     "shell.execute_reply": "2021-09-25T18:01:07.231921Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -31,6 +37,12 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:07.244760Z",
+     "iopub.status.busy": "2021-09-25T18:01:07.243922Z",
+     "iopub.status.idle": "2021-09-25T18:01:07.256244Z",
+     "shell.execute_reply": "2021-09-25T18:01:07.256594Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -45,6 +57,12 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:07.260643Z",
+     "iopub.status.busy": "2021-09-25T18:01:07.260125Z",
+     "iopub.status.idle": "2021-09-25T18:01:07.265262Z",
+     "shell.execute_reply": "2021-09-25T18:01:07.263964Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -62,6 +80,12 @@
    "execution_count": 4,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:07.285482Z",
+     "iopub.status.busy": "2021-09-25T18:01:07.284595Z",
+     "iopub.status.idle": "2021-09-25T18:01:07.710438Z",
+     "shell.execute_reply": "2021-09-25T18:01:07.711011Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -93,6 +117,12 @@
    "execution_count": 5,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:07.717309Z",
+     "iopub.status.busy": "2021-09-25T18:01:07.714327Z",
+     "iopub.status.idle": "2021-09-25T18:01:07.724187Z",
+     "shell.execute_reply": "2021-09-25T18:01:07.724727Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -117,7 +147,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:07.728142Z",
+     "iopub.status.busy": "2021-09-25T18:01:07.727713Z",
+     "iopub.status.idle": "2021-09-25T18:01:07.729591Z",
+     "shell.execute_reply": "2021-09-25T18:01:07.729949Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from Bio.Restriction import ZraI, FspAI, EcoRV"
@@ -126,7 +163,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:07.737420Z",
+     "iopub.status.busy": "2021-09-25T18:01:07.736640Z",
+     "iopub.status.idle": "2021-09-25T18:01:07.739830Z",
+     "shell.execute_reply": "2021-09-25T18:01:07.739381Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -146,7 +190,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:07.747162Z",
+     "iopub.status.busy": "2021-09-25T18:01:07.746356Z",
+     "iopub.status.idle": "2021-09-25T18:01:07.750023Z",
+     "shell.execute_reply": "2021-09-25T18:01:07.749420Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -180,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
