--- a/notebooks/yeast_pahtway_kit_standard_primers.ipynb
+++ b/notebooks/yeast_pahtway_kit_standard_primers.ipynb
@@ -17,7 +17,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:11.473686Z",
+     "iopub.status.busy": "2021-09-25T18:01:11.473066Z",
+     "iopub.status.idle": "2021-09-25T18:01:11.799755Z",
+     "shell.execute_reply": "2021-09-25T18:01:11.800161Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pydna.parsers import parse\n",
@@ -270,7 +277,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -293,9 +303,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
