--- a/notebooks/pMEC1135.ipynb
+++ b/notebooks/pMEC1135.ipynb
@@ -33,7 +33,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:40.200794Z",
+     "iopub.status.busy": "2021-09-25T17:57:40.200332Z",
+     "iopub.status.idle": "2021-09-25T17:57:40.655951Z",
+     "shell.execute_reply": "2021-09-25T17:57:40.656338Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -43,7 +49,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:40.664747Z",
+     "iopub.status.busy": "2021-09-25T17:57:40.663860Z",
+     "iopub.status.idle": "2021-09-25T17:57:40.679626Z",
+     "shell.execute_reply": "2021-09-25T17:57:40.679176Z"
+    }
+   },
    "outputs": [],
    "source": [
     "p567,p577,p468,p467,p568,p578,p775,p778,p167,p166 = parse(\"yeast_pahtway_kit_standard_primers.txt\")"
@@ -53,7 +66,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:40.685697Z",
+     "iopub.status.busy": "2021-09-25T17:57:40.685252Z",
+     "iopub.status.idle": "2021-09-25T17:57:40.687277Z",
+     "shell.execute_reply": "2021-09-25T17:57:40.686822Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -63,7 +82,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:40.703496Z",
+     "iopub.status.busy": "2021-09-25T17:57:40.702761Z",
+     "iopub.status.idle": "2021-09-25T17:57:40.705747Z",
+     "shell.execute_reply": "2021-09-25T17:57:40.706110Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -84,7 +110,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:40.709756Z",
+     "iopub.status.busy": "2021-09-25T17:57:40.709122Z",
+     "iopub.status.idle": "2021-09-25T17:57:40.712016Z",
+     "shell.execute_reply": "2021-09-25T17:57:40.711467Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -95,7 +127,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:40.719854Z",
+     "iopub.status.busy": "2021-09-25T17:57:40.719164Z",
+     "iopub.status.idle": "2021-09-25T17:57:40.721128Z",
+     "shell.execute_reply": "2021-09-25T17:57:40.721598Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -123,7 +161,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:40.726298Z",
+     "iopub.status.busy": "2021-09-25T17:57:40.725385Z",
+     "iopub.status.idle": "2021-09-25T17:57:40.748129Z",
+     "shell.execute_reply": "2021-09-25T17:57:40.747665Z"
+    }
+   },
    "outputs": [],
    "source": [
     "p1 =read(\"pYPK0_TEF1_PsXYL1_N272D_TDH3.gb\")\n",
@@ -135,7 +180,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:40.757130Z",
+     "iopub.status.busy": "2021-09-25T17:57:40.756494Z",
+     "iopub.status.idle": "2021-09-25T17:57:40.781088Z",
+     "shell.execute_reply": "2021-09-25T17:57:40.780635Z"
+    }
+   },
    "outputs": [],
    "source": [
     "cas1  =pcr( p167, p623, p1)\n",
@@ -147,7 +199,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:40.787655Z",
+     "iopub.status.busy": "2021-09-25T17:57:40.787093Z",
+     "iopub.status.idle": "2021-09-25T17:57:40.789273Z",
+     "shell.execute_reply": "2021-09-25T17:57:40.789744Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pYPK0_E_Z, stuffer = pYPK0.cut((EcoRV, ZraI))"
@@ -156,7 +215,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:40.798307Z",
+     "iopub.status.busy": "2021-09-25T17:57:40.797437Z",
+     "iopub.status.idle": "2021-09-25T17:57:42.128689Z",
+     "shell.execute_reply": "2021-09-25T17:57:42.128019Z"
+    }
+   },
    "outputs": [],
    "source": [
     "asm =Assembly( [pYPK0_E_Z, cas1, cas2, cas3, cas4] , limit = 61)"
@@ -165,7 +231,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:42.132163Z",
+     "iopub.status.busy": "2021-09-25T17:57:42.131709Z",
+     "iopub.status.idle": "2021-09-25T17:57:42.319066Z",
+     "shell.execute_reply": "2021-09-25T17:57:42.318540Z"
+    }
+   },
    "outputs": [],
    "source": [
     "candidate = asm.assemble_circular()[0]"
@@ -174,7 +247,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:42.322670Z",
+     "iopub.status.busy": "2021-09-25T17:57:42.322248Z",
+     "iopub.status.idle": "2021-09-25T17:57:42.327682Z",
+     "shell.execute_reply": "2021-09-25T17:57:42.326631Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -211,7 +291,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:42.347237Z",
+     "iopub.status.busy": "2021-09-25T17:57:42.346566Z",
+     "iopub.status.idle": "2021-09-25T17:57:43.098433Z",
+     "shell.execute_reply": "2021-09-25T17:57:43.097934Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pw = candidate.synced(pYPK0)"
@@ -220,7 +307,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:43.103448Z",
+     "iopub.status.busy": "2021-09-25T17:57:43.102505Z",
+     "iopub.status.idle": "2021-09-25T17:57:43.106252Z",
+     "shell.execute_reply": "2021-09-25T17:57:43.106909Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -240,7 +334,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:43.115229Z",
+     "iopub.status.busy": "2021-09-25T17:57:43.114751Z",
+     "iopub.status.idle": "2021-09-25T17:57:43.124097Z",
+     "shell.execute_reply": "2021-09-25T17:57:43.124457Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -260,7 +361,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:43.143377Z",
+     "iopub.status.busy": "2021-09-25T17:57:43.142319Z",
+     "iopub.status.idle": "2021-09-25T17:57:43.146393Z",
+     "shell.execute_reply": "2021-09-25T17:57:43.145922Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -282,7 +390,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:57:43.161753Z",
+     "iopub.status.busy": "2021-09-25T17:57:43.149440Z",
+     "iopub.status.idle": "2021-09-25T17:57:43.170841Z",
+     "shell.execute_reply": "2021-09-25T17:57:43.171192Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -315,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
