--- a/notebooks/pYPK0_HIS3.ipynb
+++ b/notebooks/pYPK0_HIS3.ipynb
@@ -11,7 +11,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:23.954707Z",
+     "iopub.status.busy": "2021-09-25T17:58:23.954044Z",
+     "iopub.status.idle": "2021-09-25T17:58:24.392701Z",
+     "shell.execute_reply": "2021-09-25T17:58:24.393160Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -22,7 +28,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:24.402613Z",
+     "iopub.status.busy": "2021-09-25T17:58:24.400769Z",
+     "iopub.status.idle": "2021-09-25T17:58:24.410997Z",
+     "shell.execute_reply": "2021-09-25T17:58:24.410497Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -33,7 +45,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:24.414817Z",
+     "iopub.status.busy": "2021-09-25T17:58:24.414286Z",
+     "iopub.status.idle": "2021-09-25T17:58:24.416187Z",
+     "shell.execute_reply": "2021-09-25T17:58:24.416624Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +62,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:24.423211Z",
+     "iopub.status.busy": "2021-09-25T17:58:24.422573Z",
+     "iopub.status.idle": "2021-09-25T17:58:24.424793Z",
+     "shell.execute_reply": "2021-09-25T17:58:24.425345Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +79,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:24.436084Z",
+     "iopub.status.busy": "2021-09-25T17:58:24.428896Z",
+     "iopub.status.idle": "2021-09-25T17:58:24.438991Z",
+     "shell.execute_reply": "2021-09-25T17:58:24.438323Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -65,7 +95,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:24.446931Z",
+     "iopub.status.busy": "2021-09-25T17:58:24.445912Z",
+     "iopub.status.idle": "2021-09-25T17:58:24.448650Z",
+     "shell.execute_reply": "2021-09-25T17:58:24.449296Z"
+    }
+   },
    "outputs": [],
    "source": [
     "p567,p577,p468,p467,p568,p578,p775,p778,p167,p166 = parse(\"yeast_pahtway_kit_standard_primers.txt\")"
@@ -75,7 +112,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:24.458091Z",
+     "iopub.status.busy": "2021-09-25T17:58:24.457305Z",
+     "iopub.status.idle": "2021-09-25T17:58:24.463167Z",
+     "shell.execute_reply": "2021-09-25T17:58:24.463592Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -86,7 +129,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:24.506302Z",
+     "iopub.status.busy": "2021-09-25T17:58:24.491271Z",
+     "iopub.status.idle": "2021-09-25T17:58:24.593870Z",
+     "shell.execute_reply": "2021-09-25T17:58:24.593468Z"
+    }
    },
    "outputs": [
     {
@@ -113,7 +162,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:24.597678Z",
+     "iopub.status.busy": "2021-09-25T17:58:24.596988Z",
+     "iopub.status.idle": "2021-09-25T17:58:24.760696Z",
+     "shell.execute_reply": "2021-09-25T17:58:24.760237Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -124,7 +179,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:24.764715Z",
+     "iopub.status.busy": "2021-09-25T17:58:24.764015Z",
+     "iopub.status.idle": "2021-09-25T17:58:24.768496Z",
+     "shell.execute_reply": "2021-09-25T17:58:24.767645Z"
+    }
    },
    "outputs": [
     {
@@ -154,7 +215,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:24.842735Z",
+     "iopub.status.busy": "2021-09-25T17:58:24.807105Z",
+     "iopub.status.idle": "2021-09-25T17:58:25.214044Z",
+     "shell.execute_reply": "2021-09-25T17:58:25.213502Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -165,7 +232,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:25.217333Z",
+     "iopub.status.busy": "2021-09-25T17:58:25.215928Z",
+     "iopub.status.idle": "2021-09-25T17:58:25.228912Z",
+     "shell.execute_reply": "2021-09-25T17:58:25.228460Z"
+    }
    },
    "outputs": [
     {
@@ -199,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
