--- a/notebooks/pYPK0_PDC1_ScTKL1_RPS19b.ipynb
+++ b/notebooks/pYPK0_PDC1_ScTKL1_RPS19b.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:31.827835Z",
+     "iopub.status.busy": "2021-09-25T17:58:31.827077Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.266181Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.265635Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.273517Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.272993Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.281178Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.281527Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.284890Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.284475Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.287638Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.287273Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.295222Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.291075Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.298024Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.297449Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.302507Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.301804Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.310882Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.310374Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -84,7 +114,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.319553Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.318770Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.322078Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.321540Z"
+    }
    },
    "outputs": [
     {
@@ -101,7 +137,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fc19e2a9a30>"
+       "<IPython.lib.display.IFrame at 0x7f57ab791c40>"
       ]
      },
      "execution_count": 6,
@@ -119,7 +155,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.327796Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.326913Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.333684Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.334142Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -131,11 +173,24 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.339106Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.338194Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.347064Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.346583Z"
+    }
    },
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "| Ft# | Label or Note    | Dir | Sta | End   |  Len | type   | orf? |\n",
+       "|-----|------------------|-----|-----|-------|------|--------|------|\n",
+       "|   0 | nd               | --> | 0   | 2043  | 2043 | source | yes  |\n",
+       "|   1 | nd               | --> | <0  | >2043 | 2043 | gene   | yes  |\n",
+       "|   2 | N:Transketolase; | --> | 0   | 2043  | 2043 | CDS    | yes  |"
+      ],
       "text/plain": [
        "+-----+------------------+-----+-----+-------+------+--------+------+\n",
        "| Ft# | Label or Note    | Dir | Sta | End   |  Len | type   | orf? |\n",
@@ -159,7 +214,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.351369Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.350825Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.352826Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.353268Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -170,7 +231,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.359024Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.358197Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.361619Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.362177Z"
+    }
    },
    "outputs": [
     {
@@ -192,7 +259,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.368195Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.367185Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.371634Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.372104Z"
+    }
    },
    "outputs": [
     {
@@ -222,7 +295,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.376770Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.376157Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.378919Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.379477Z"
+    }
    },
    "outputs": [
     {
@@ -241,7 +320,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.384642Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.384001Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.387018Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.386434Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -260,7 +345,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.395892Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.394957Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.397607Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.398017Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -271,7 +362,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.402098Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.401452Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.403879Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.404231Z"
+    }
    },
    "outputs": [
     {
@@ -298,7 +395,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.410106Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.406928Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.412298Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.412783Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -309,7 +412,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.426944Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.426505Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.428084Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.428437Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -321,7 +430,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.434156Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.433717Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.435530Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.435890Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -332,7 +447,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.441021Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.440203Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.443734Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.443251Z"
+    }
    },
    "outputs": [
     {
@@ -354,7 +475,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.486710Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.471460Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.962229Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.961697Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -365,7 +492,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.965650Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.965176Z",
+     "iopub.status.idle": "2021-09-25T17:58:32.967881Z",
+     "shell.execute_reply": "2021-09-25T17:58:32.967524Z"
+    }
    },
    "outputs": [
     {
@@ -391,7 +524,13 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:32.972695Z",
+     "iopub.status.busy": "2021-09-25T17:58:32.971660Z",
+     "iopub.status.idle": "2021-09-25T17:58:33.150690Z",
+     "shell.execute_reply": "2021-09-25T17:58:33.151096Z"
+    }
    },
    "outputs": [
     {
@@ -428,7 +567,13 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:33.209348Z",
+     "iopub.status.busy": "2021-09-25T17:58:33.168627Z",
+     "iopub.status.idle": "2021-09-25T17:58:33.663887Z",
+     "shell.execute_reply": "2021-09-25T17:58:33.663390Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -446,7 +591,13 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:33.676940Z",
+     "iopub.status.busy": "2021-09-25T17:58:33.676421Z",
+     "iopub.status.idle": "2021-09-25T17:58:33.679908Z",
+     "shell.execute_reply": "2021-09-25T17:58:33.680254Z"
+    }
    },
    "outputs": [
     {
@@ -476,7 +627,13 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:33.694502Z",
+     "iopub.status.busy": "2021-09-25T17:58:33.693805Z",
+     "iopub.status.idle": "2021-09-25T17:58:33.696271Z",
+     "shell.execute_reply": "2021-09-25T17:58:33.696628Z"
+    }
    },
    "outputs": [
     {
@@ -500,7 +657,13 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:33.700198Z",
+     "iopub.status.busy": "2021-09-25T17:58:33.699497Z",
+     "iopub.status.idle": "2021-09-25T17:58:33.714435Z",
+     "shell.execute_reply": "2021-09-25T17:58:33.714804Z"
+    }
    },
    "outputs": [
     {
@@ -528,7 +691,13 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:33.719022Z",
+     "iopub.status.busy": "2021-09-25T17:58:33.718106Z",
+     "iopub.status.idle": "2021-09-25T17:58:33.720557Z",
+     "shell.execute_reply": "2021-09-25T17:58:33.720109Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -539,7 +708,13 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:33.724206Z",
+     "iopub.status.busy": "2021-09-25T17:58:33.723480Z",
+     "iopub.status.idle": "2021-09-25T17:58:33.729474Z",
+     "shell.execute_reply": "2021-09-25T17:58:33.729890Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -550,7 +725,13 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:33.737677Z",
+     "iopub.status.busy": "2021-09-25T17:58:33.737088Z",
+     "iopub.status.idle": "2021-09-25T17:58:33.743036Z",
+     "shell.execute_reply": "2021-09-25T17:58:33.743495Z"
+    }
    },
    "outputs": [
     {
@@ -572,7 +753,13 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:33.747815Z",
+     "iopub.status.busy": "2021-09-25T17:58:33.747119Z",
+     "iopub.status.idle": "2021-09-25T17:58:33.751889Z",
+     "shell.execute_reply": "2021-09-25T17:58:33.752460Z"
+    }
    },
    "outputs": [
     {
@@ -607,7 +794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
