--- a/notebooks/pYPK0_PGI1_HIS3_TDH3.ipynb
+++ b/notebooks/pYPK0_PGI1_HIS3_TDH3.ipynb
@@ -16,7 +16,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:43.193694Z",
+     "iopub.status.busy": "2021-09-25T17:58:43.192882Z",
+     "iopub.status.idle": "2021-09-25T17:58:43.574885Z",
+     "shell.execute_reply": "2021-09-25T17:58:43.574449Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -32,7 +38,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:43.582571Z",
+     "iopub.status.busy": "2021-09-25T17:58:43.581347Z",
+     "iopub.status.idle": "2021-09-25T17:58:43.593551Z",
+     "shell.execute_reply": "2021-09-25T17:58:43.593028Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -43,7 +55,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:43.597257Z",
+     "iopub.status.busy": "2021-09-25T17:58:43.596633Z",
+     "iopub.status.idle": "2021-09-25T17:58:43.599114Z",
+     "shell.execute_reply": "2021-09-25T17:58:43.599674Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -54,7 +72,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:43.604262Z",
+     "iopub.status.busy": "2021-09-25T17:58:43.603598Z",
+     "iopub.status.idle": "2021-09-25T17:58:43.609773Z",
+     "shell.execute_reply": "2021-09-25T17:58:43.610329Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -65,7 +89,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:43.616933Z",
+     "iopub.status.busy": "2021-09-25T17:58:43.616285Z",
+     "iopub.status.idle": "2021-09-25T17:58:43.618687Z",
+     "shell.execute_reply": "2021-09-25T17:58:43.619138Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -76,7 +106,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:43.624320Z",
+     "iopub.status.busy": "2021-09-25T17:58:43.623389Z",
+     "iopub.status.idle": "2021-09-25T17:58:44.547371Z",
+     "shell.execute_reply": "2021-09-25T17:58:44.546915Z"
+    }
    },
    "outputs": [
     {
@@ -124,7 +160,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:44.568496Z",
+     "iopub.status.busy": "2021-09-25T17:58:44.567467Z",
+     "iopub.status.idle": "2021-09-25T17:58:44.570323Z",
+     "shell.execute_reply": "2021-09-25T17:58:44.570682Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -137,7 +179,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:44.598531Z",
+     "iopub.status.busy": "2021-09-25T17:58:44.593539Z",
+     "iopub.status.idle": "2021-09-25T17:58:45.121347Z",
+     "shell.execute_reply": "2021-09-25T17:58:45.121726Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -150,7 +198,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:45.125728Z",
+     "iopub.status.busy": "2021-09-25T17:58:45.125122Z",
+     "iopub.status.idle": "2021-09-25T17:58:45.712653Z",
+     "shell.execute_reply": "2021-09-25T17:58:45.712230Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -163,7 +217,13 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:45.721346Z",
+     "iopub.status.busy": "2021-09-25T17:58:45.715857Z",
+     "iopub.status.idle": "2021-09-25T17:58:45.728350Z",
+     "shell.execute_reply": "2021-09-25T17:58:45.727928Z"
+    }
    },
    "outputs": [
     {
@@ -209,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
