--- a/notebooks/pYPK0_PGI1_ScXKS1_FBA1.ipynb
+++ b/notebooks/pYPK0_PGI1_ScXKS1_FBA1.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.088003Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.087269Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.551874Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.551426Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.560375Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.559788Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.569837Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.569319Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.573486Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.572916Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.575150Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.574685Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.579602Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.578057Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.586245Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.586926Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.592529Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.591434Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.601917Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.601407Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -84,7 +114,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.610521Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.609433Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.613098Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.613529Z"
+    }
    },
    "outputs": [
     {
@@ -101,7 +137,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f93e04b02b0>"
+       "<IPython.lib.display.IFrame at 0x7f968f567f70>"
       ]
      },
      "execution_count": 6,
@@ -119,7 +155,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.618994Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.617970Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.625638Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.625115Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -131,11 +173,24 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.630403Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.629486Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.638144Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.638589Z"
+    }
    },
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "| Ft# | Label or Note    | Dir | Sta | End   |  Len | type   | orf? |\n",
+       "|-----|------------------|-----|-----|-------|------|--------|------|\n",
+       "|   0 | nd               | --> | 0   | 1803  | 1803 | source | yes  |\n",
+       "|   1 | nd               | --> | <0  | >1803 | 1803 | gene   | yes  |\n",
+       "|   2 | N:Xylulokinase;  | --> | 0   | 1803  | 1803 | CDS    | yes  |"
+      ],
       "text/plain": [
        "+-----+------------------+-----+-----+-------+------+--------+------+\n",
        "| Ft# | Label or Note    | Dir | Sta | End   |  Len | type   | orf? |\n",
@@ -159,7 +214,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.642388Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.641865Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.643590Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.643954Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -170,7 +231,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.647986Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.647449Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.650871Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.650177Z"
+    }
    },
    "outputs": [
     {
@@ -192,7 +259,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.656692Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.655663Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.660167Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.659597Z"
+    }
    },
    "outputs": [
     {
@@ -222,7 +295,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.665702Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.664762Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.668724Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.668149Z"
+    }
    },
    "outputs": [
     {
@@ -241,7 +320,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.674193Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.673253Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.676017Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.675464Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -260,7 +345,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.684472Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.683751Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.685857Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.685460Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -271,7 +362,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.689737Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.689177Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.692432Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.691812Z"
+    }
    },
    "outputs": [
     {
@@ -298,7 +395,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.701381Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.700619Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.703184Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.702711Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -309,7 +412,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.718209Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.717709Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.719590Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.719991Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -321,7 +430,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.728923Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.727810Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.733147Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.733749Z"
+    }
    },
    "outputs": [
     {
@@ -344,7 +459,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.739795Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.738993Z",
+     "iopub.status.idle": "2021-09-25T17:58:47.742089Z",
+     "shell.execute_reply": "2021-09-25T17:58:47.742535Z"
+    }
    },
    "outputs": [
     {
@@ -366,7 +487,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:47.765446Z",
+     "iopub.status.busy": "2021-09-25T17:58:47.750211Z",
+     "iopub.status.idle": "2021-09-25T17:58:48.274570Z",
+     "shell.execute_reply": "2021-09-25T17:58:48.274110Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -377,7 +504,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:48.278336Z",
+     "iopub.status.busy": "2021-09-25T17:58:48.277722Z",
+     "iopub.status.idle": "2021-09-25T17:58:48.280508Z",
+     "shell.execute_reply": "2021-09-25T17:58:48.280055Z"
+    }
    },
    "outputs": [
     {
@@ -403,7 +536,13 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:48.284291Z",
+     "iopub.status.busy": "2021-09-25T17:58:48.283787Z",
+     "iopub.status.idle": "2021-09-25T17:58:48.474769Z",
+     "shell.execute_reply": "2021-09-25T17:58:48.474355Z"
+    }
    },
    "outputs": [
     {
@@ -440,7 +579,13 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:48.523477Z",
+     "iopub.status.busy": "2021-09-25T17:58:48.508355Z",
+     "iopub.status.idle": "2021-09-25T17:58:49.021873Z",
+     "shell.execute_reply": "2021-09-25T17:58:49.022293Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -458,7 +603,13 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:49.035484Z",
+     "iopub.status.busy": "2021-09-25T17:58:49.034453Z",
+     "iopub.status.idle": "2021-09-25T17:58:49.038746Z",
+     "shell.execute_reply": "2021-09-25T17:58:49.039325Z"
+    }
    },
    "outputs": [
     {
@@ -488,7 +639,13 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:49.051863Z",
+     "iopub.status.busy": "2021-09-25T17:58:49.051040Z",
+     "iopub.status.idle": "2021-09-25T17:58:49.056001Z",
+     "shell.execute_reply": "2021-09-25T17:58:49.055199Z"
+    }
    },
    "outputs": [
     {
@@ -512,7 +669,13 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:49.069272Z",
+     "iopub.status.busy": "2021-09-25T17:58:49.060693Z",
+     "iopub.status.idle": "2021-09-25T17:58:49.075565Z",
+     "shell.execute_reply": "2021-09-25T17:58:49.075130Z"
+    }
    },
    "outputs": [
     {
@@ -542,7 +705,13 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:49.082377Z",
+     "iopub.status.busy": "2021-09-25T17:58:49.078386Z",
+     "iopub.status.idle": "2021-09-25T17:58:49.084431Z",
+     "shell.execute_reply": "2021-09-25T17:58:49.084931Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -553,7 +722,13 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:49.098178Z",
+     "iopub.status.busy": "2021-09-25T17:58:49.092501Z",
+     "iopub.status.idle": "2021-09-25T17:58:49.100927Z",
+     "shell.execute_reply": "2021-09-25T17:58:49.101435Z"
+    }
    },
    "outputs": [
     {
@@ -575,7 +750,13 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:58:49.105769Z",
+     "iopub.status.busy": "2021-09-25T17:58:49.105146Z",
+     "iopub.status.idle": "2021-09-25T17:58:49.107996Z",
+     "shell.execute_reply": "2021-09-25T17:58:49.108449Z"
+    }
    },
    "outputs": [
     {
@@ -610,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
