--- a/notebooks/pYPK0_TDH3_PsXYL2_PGI1.ipynb
+++ b/notebooks/pYPK0_TDH3_PsXYL2_PGI1.ipynb
@@ -15,7 +15,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.218963Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.217009Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.651473Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.650946Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -26,7 +32,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.660636Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.659467Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.670785Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.671168Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -44,7 +56,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.674988Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.674543Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.676643Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.676173Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +73,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.681371Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.680681Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.686832Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.687396Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +90,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.696442Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.695845Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.697876Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.698297Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -84,7 +114,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.707218Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.706506Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.709029Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.709400Z"
+    }
    },
    "outputs": [
     {
@@ -101,7 +137,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f71e7f557f0>"
+       "<IPython.lib.display.IFrame at 0x7f9e6e112e80>"
       ]
      },
      "execution_count": 6,
@@ -119,7 +155,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.713787Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.713287Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.719485Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.720125Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -131,11 +173,23 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.725168Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.724449Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.732628Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.733418Z"
+    }
    },
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "| Ft# | Label or Note | Dir | Sta | End  |  Len | type   | orf? |\n",
+       "|-----|---------------|-----|-----|------|------|--------|------|\n",
+       "|   0 | nd            | --> | 0   | 1963 | 1963 | source |  no  |\n",
+       "|   1 | nd            | --> | 318 | 1410 | 1092 | CDS    | yes  |"
+      ],
       "text/plain": [
        "+-----+---------------+-----+-----+------+------+--------+------+\n",
        "| Ft# | Label or Note | Dir | Sta | End  |  Len | type   | orf? |\n",
@@ -158,7 +212,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.740259Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.739304Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.741094Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.741812Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -169,7 +229,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.746731Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.746186Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.749283Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.748743Z"
+    }
    },
    "outputs": [
     {
@@ -188,7 +254,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.753770Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.753130Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.755760Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.756210Z"
+    }
    },
    "outputs": [
     {
@@ -210,7 +282,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.762287Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.761351Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.765436Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.765967Z"
+    }
    },
    "outputs": [
     {
@@ -240,7 +318,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.770777Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.770170Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.772595Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.773068Z"
+    }
    },
    "outputs": [
     {
@@ -259,7 +343,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.777607Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.775349Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.779516Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.779968Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -273,7 +363,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.788211Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.787599Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.789943Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.789485Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -284,7 +380,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.794280Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.793657Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.797065Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.797781Z"
+    }
    },
    "outputs": [
     {
@@ -311,7 +413,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.810245Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.809432Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.812712Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.812020Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -322,7 +430,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.826647Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.825847Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.833524Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.832950Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -334,7 +448,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.841806Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.841170Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.843261Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.843740Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -345,7 +465,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.849825Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.848756Z",
+     "iopub.status.idle": "2021-09-25T17:59:13.852947Z",
+     "shell.execute_reply": "2021-09-25T17:59:13.853468Z"
+    }
    },
    "outputs": [
     {
@@ -367,7 +493,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:13.891238Z",
+     "iopub.status.busy": "2021-09-25T17:59:13.860683Z",
+     "iopub.status.idle": "2021-09-25T17:59:14.324110Z",
+     "shell.execute_reply": "2021-09-25T17:59:14.324532Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -378,7 +510,13 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:14.329004Z",
+     "iopub.status.busy": "2021-09-25T17:59:14.328037Z",
+     "iopub.status.idle": "2021-09-25T17:59:14.331403Z",
+     "shell.execute_reply": "2021-09-25T17:59:14.331973Z"
+    }
    },
    "outputs": [
     {
@@ -404,7 +542,13 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:14.338949Z",
+     "iopub.status.busy": "2021-09-25T17:59:14.336804Z",
+     "iopub.status.idle": "2021-09-25T17:59:14.524839Z",
+     "shell.execute_reply": "2021-09-25T17:59:14.524382Z"
+    }
    },
    "outputs": [
     {
@@ -441,7 +585,13 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:14.547558Z",
+     "iopub.status.busy": "2021-09-25T17:59:14.532495Z",
+     "iopub.status.idle": "2021-09-25T17:59:15.011205Z",
+     "shell.execute_reply": "2021-09-25T17:59:15.010740Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -459,7 +609,13 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:15.022356Z",
+     "iopub.status.busy": "2021-09-25T17:59:15.021721Z",
+     "iopub.status.idle": "2021-09-25T17:59:15.024653Z",
+     "shell.execute_reply": "2021-09-25T17:59:15.025021Z"
+    }
    },
    "outputs": [
     {
@@ -489,7 +645,13 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:15.037625Z",
+     "iopub.status.busy": "2021-09-25T17:59:15.032556Z",
+     "iopub.status.idle": "2021-09-25T17:59:15.040702Z",
+     "shell.execute_reply": "2021-09-25T17:59:15.040263Z"
+    }
    },
    "outputs": [
     {
@@ -513,7 +675,13 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:15.053669Z",
+     "iopub.status.busy": "2021-09-25T17:59:15.052471Z",
+     "iopub.status.idle": "2021-09-25T17:59:15.057265Z",
+     "shell.execute_reply": "2021-09-25T17:59:15.057700Z"
+    }
    },
    "outputs": [
     {
@@ -543,7 +711,13 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:15.061483Z",
+     "iopub.status.busy": "2021-09-25T17:59:15.060759Z",
+     "iopub.status.idle": "2021-09-25T17:59:15.067032Z",
+     "shell.execute_reply": "2021-09-25T17:59:15.067553Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -554,7 +728,13 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:15.079350Z",
+     "iopub.status.busy": "2021-09-25T17:59:15.078844Z",
+     "iopub.status.idle": "2021-09-25T17:59:15.081527Z",
+     "shell.execute_reply": "2021-09-25T17:59:15.081899Z"
+    }
    },
    "outputs": [
     {
@@ -576,7 +756,13 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:15.085468Z",
+     "iopub.status.busy": "2021-09-25T17:59:15.084816Z",
+     "iopub.status.idle": "2021-09-25T17:59:15.089952Z",
+     "shell.execute_reply": "2021-09-25T17:59:15.089297Z"
+    }
    },
    "outputs": [
     {
@@ -620,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
