--- a/notebooks/pYPK2.ipynb
+++ b/notebooks/pYPK2.ipynb
@@ -14,7 +14,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:36.429514Z",
+     "iopub.status.busy": "2021-09-25T17:59:36.429029Z",
+     "iopub.status.idle": "2021-09-25T17:59:36.878830Z",
+     "shell.execute_reply": "2021-09-25T17:59:36.878358Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -27,7 +33,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:36.886188Z",
+     "iopub.status.busy": "2021-09-25T17:59:36.885543Z",
+     "iopub.status.idle": "2021-09-25T17:59:36.892188Z",
+     "shell.execute_reply": "2021-09-25T17:59:36.891652Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +50,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:36.897864Z",
+     "iopub.status.busy": "2021-09-25T17:59:36.896882Z",
+     "iopub.status.idle": "2021-09-25T17:59:36.899036Z",
+     "shell.execute_reply": "2021-09-25T17:59:36.899551Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -54,7 +72,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:36.908674Z",
+     "iopub.status.busy": "2021-09-25T17:59:36.907240Z",
+     "iopub.status.idle": "2021-09-25T17:59:36.915414Z",
+     "shell.execute_reply": "2021-09-25T17:59:36.914771Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -65,7 +89,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:36.958285Z",
+     "iopub.status.busy": "2021-09-25T17:59:36.953294Z",
+     "iopub.status.idle": "2021-09-25T17:59:37.537149Z",
+     "shell.execute_reply": "2021-09-25T17:59:37.536653Z"
+    }
    },
    "outputs": [
     {
@@ -107,7 +137,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:37.549971Z",
+     "iopub.status.busy": "2021-09-25T17:59:37.549346Z",
+     "iopub.status.idle": "2021-09-25T17:59:37.551461Z",
+     "shell.execute_reply": "2021-09-25T17:59:37.551084Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -142,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
