--- a/notebooks/pYPKa_A_ScRKI1.ipynb
+++ b/notebooks/pYPKa_A_ScRKI1.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:58.961923Z",
+     "iopub.status.busy": "2021-09-25T17:59:58.961136Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.404703Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.404162Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.416122Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.413343Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.426866Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.426215Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.437821Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.437103Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.439743Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.440113Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.446126Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.445509Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.449076Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.448510Z"
+    }
    },
    "outputs": [
     {
@@ -119,7 +143,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.453520Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.452810Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.455813Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.455232Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -137,7 +167,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.460619Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.459892Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.463670Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.464177Z"
+    }
    },
    "outputs": [
     {
@@ -163,7 +199,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.471852Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.471015Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.474209Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.474665Z"
+    }
    },
    "outputs": [
     {
@@ -192,7 +234,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.482147Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.481351Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.483620Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.484145Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -213,7 +261,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.490006Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.489182Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.492408Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.491801Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -231,7 +285,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.497870Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.497183Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.504943Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.505553Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -249,7 +309,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.511359Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.510557Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.513776Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.514268Z"
+    }
    },
    "outputs": [
     {
@@ -282,7 +348,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.521327Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.520706Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.525920Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.526412Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -305,7 +377,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.531778Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.530900Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.535143Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.535997Z"
+    }
    },
    "outputs": [
     {
@@ -339,7 +417,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.543240Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.539284Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.545326Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.545901Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -357,7 +441,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.624820Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.599367Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.786634Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.786144Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -375,7 +465,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.793408Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.792782Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.795801Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.796253Z"
+    }
    },
    "outputs": [
     {
@@ -404,7 +500,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.800487Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.799849Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.811627Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.811987Z"
+    }
    },
    "outputs": [
     {
@@ -432,7 +534,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.819320Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.818231Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.823789Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.824462Z"
+    }
    },
    "outputs": [
     {
@@ -463,7 +571,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T17:59:59.838566Z",
+     "iopub.status.busy": "2021-09-25T17:59:59.829410Z",
+     "iopub.status.idle": "2021-09-25T17:59:59.840389Z",
+     "shell.execute_reply": "2021-09-25T17:59:59.840809Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -489,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
