--- a/notebooks/pYPKa_E_FBA1.ipynb
+++ b/notebooks/pYPKa_E_FBA1.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.361758Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.361115Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.809348Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.809711Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.820264Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.819694Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.831347Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.831925Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.843349Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.842604Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.845609Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.845224Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.852227Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.851175Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.855373Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.855929Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.860667Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.860005Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.862584Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.863227Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.870835Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.870169Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.872824Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.872308Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.878146Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.877472Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.880521Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.879946Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.885883Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.884625Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.893252Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.893669Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.897865Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.897077Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.900339Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.900862Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.905638Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.904872Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.908315Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.908893Z"
+    }
    },
    "outputs": [
     {
@@ -258,7 +318,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.913434Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.912809Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.916250Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.915748Z"
+    }
    },
    "outputs": [
     {
@@ -287,7 +353,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.922661Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.922054Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.926298Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.926697Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -310,7 +382,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.930375Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.929837Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.932239Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.932597Z"
+    }
    },
    "outputs": [
     {
@@ -344,7 +422,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:07.941268Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.939928Z",
+     "iopub.status.idle": "2021-09-25T18:00:07.942213Z",
+     "shell.execute_reply": "2021-09-25T18:00:07.942601Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -362,7 +446,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:08.011106Z",
+     "iopub.status.busy": "2021-09-25T18:00:07.960058Z",
+     "iopub.status.idle": "2021-09-25T18:00:08.169444Z",
+     "shell.execute_reply": "2021-09-25T18:00:08.168939Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -382,7 +472,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:08.177624Z",
+     "iopub.status.busy": "2021-09-25T18:00:08.176901Z",
+     "iopub.status.idle": "2021-09-25T18:00:08.180107Z",
+     "shell.execute_reply": "2021-09-25T18:00:08.179682Z"
+    }
    },
    "outputs": [
     {
@@ -411,7 +507,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:08.183454Z",
+     "iopub.status.busy": "2021-09-25T18:00:08.182956Z",
+     "iopub.status.idle": "2021-09-25T18:00:08.184892Z",
+     "shell.execute_reply": "2021-09-25T18:00:08.184520Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -430,7 +532,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:08.193704Z",
+     "iopub.status.busy": "2021-09-25T18:00:08.193122Z",
+     "iopub.status.idle": "2021-09-25T18:00:08.195366Z",
+     "shell.execute_reply": "2021-09-25T18:00:08.195751Z"
+    }
    },
    "outputs": [
     {
@@ -459,7 +567,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:08.206206Z",
+     "iopub.status.busy": "2021-09-25T18:00:08.205360Z",
+     "iopub.status.idle": "2021-09-25T18:00:08.208403Z",
+     "shell.execute_reply": "2021-09-25T18:00:08.208761Z"
+    }
    },
    "outputs": [
     {
@@ -487,7 +601,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:08.212576Z",
+     "iopub.status.busy": "2021-09-25T18:00:08.212116Z",
+     "iopub.status.idle": "2021-09-25T18:00:08.223437Z",
+     "shell.execute_reply": "2021-09-25T18:00:08.222883Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -522,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
