--- a/notebooks/pYPKa_E_TDH3.ipynb
+++ b/notebooks/pYPKa_E_TDH3.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:26.784087Z",
+     "iopub.status.busy": "2021-09-25T18:00:26.780946Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.744867Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.747249Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.760595Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.755431Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.780813Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.780400Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.795584Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.794150Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.805410Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.805857Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.821782Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.821066Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.824048Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.824399Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.828844Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.827274Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.838670Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.839335Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.847114Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.846022Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.859534Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.860048Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.866621Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.865856Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.868045Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.867436Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.882182Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.880647Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.888867Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.888132Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.903643Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.901578Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.906883Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.907284Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.912226Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.911610Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.922829Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.922340Z"
+    }
    },
    "outputs": [
     {
@@ -255,7 +315,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.928457Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.926050Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.931270Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.932058Z"
+    }
    },
    "outputs": [
     {
@@ -284,7 +350,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.939088Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.937810Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.951061Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.950634Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -311,7 +383,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.955255Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.954755Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.958779Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.958345Z"
+    }
    },
    "outputs": [
     {
@@ -345,7 +423,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:27.969971Z",
+     "iopub.status.busy": "2021-09-25T18:00:27.969158Z",
+     "iopub.status.idle": "2021-09-25T18:00:27.974975Z",
+     "shell.execute_reply": "2021-09-25T18:00:27.975371Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -363,7 +447,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:28.007064Z",
+     "iopub.status.busy": "2021-09-25T18:00:28.006030Z",
+     "iopub.status.idle": "2021-09-25T18:00:28.543114Z",
+     "shell.execute_reply": "2021-09-25T18:00:28.541879Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -383,7 +473,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:28.561009Z",
+     "iopub.status.busy": "2021-09-25T18:00:28.559433Z",
+     "iopub.status.idle": "2021-09-25T18:00:28.567616Z",
+     "shell.execute_reply": "2021-09-25T18:00:28.568036Z"
+    }
    },
    "outputs": [
     {
@@ -412,7 +508,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:28.577962Z",
+     "iopub.status.busy": "2021-09-25T18:00:28.577081Z",
+     "iopub.status.idle": "2021-09-25T18:00:28.582760Z",
+     "shell.execute_reply": "2021-09-25T18:00:28.584216Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -431,7 +533,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:28.592404Z",
+     "iopub.status.busy": "2021-09-25T18:00:28.591383Z",
+     "iopub.status.idle": "2021-09-25T18:00:28.609901Z",
+     "shell.execute_reply": "2021-09-25T18:00:28.610519Z"
+    }
    },
    "outputs": [
     {
@@ -460,7 +568,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:28.620221Z",
+     "iopub.status.busy": "2021-09-25T18:00:28.619258Z",
+     "iopub.status.idle": "2021-09-25T18:00:28.638311Z",
+     "shell.execute_reply": "2021-09-25T18:00:28.639363Z"
+    }
    },
    "outputs": [
     {
@@ -488,7 +602,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:28.656501Z",
+     "iopub.status.busy": "2021-09-25T18:00:28.649218Z",
+     "iopub.status.idle": "2021-09-25T18:00:28.664695Z",
+     "shell.execute_reply": "2021-09-25T18:00:28.665977Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -514,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
