--- a/notebooks/pYPKa_Z_FBA1.ipynb
+++ b/notebooks/pYPKa_Z_FBA1.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:35.595240Z",
+     "iopub.status.busy": "2021-09-25T18:00:35.594439Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.161403Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.160818Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.178122Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.177154Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.195056Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.195571Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.215898Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.215046Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.229688Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.230073Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.246826Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.246028Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.249946Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.249520Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.256630Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.255617Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.258444Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.258043Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.268681Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.266249Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.270697Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.269682Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.277945Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.277372Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.283444Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.284299Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.292514Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.289977Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.302079Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.303539Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.312379Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.310278Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.318785Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.321643Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.331640Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.330793Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.345379Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.346234Z"
+    }
    },
    "outputs": [
     {
@@ -258,7 +318,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.357998Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.355522Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.363279Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.362510Z"
+    }
    },
    "outputs": [
     {
@@ -287,7 +353,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.373701Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.372711Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.383598Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.382461Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -310,7 +382,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.391192Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.390574Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.396730Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.398223Z"
+    }
    },
    "outputs": [
     {
@@ -344,7 +422,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.409153Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.408283Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.410630Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.411184Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -362,7 +446,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.450463Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.435033Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.657313Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.656779Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -382,7 +472,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.663885Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.663222Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.666095Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.666895Z"
+    }
    },
    "outputs": [
     {
@@ -411,7 +507,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.672286Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.671458Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.674459Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.675503Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -430,7 +532,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.686567Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.685608Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.689269Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.689649Z"
+    }
    },
    "outputs": [
     {
@@ -459,7 +567,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.692954Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.692392Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.706224Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.706587Z"
+    }
    },
    "outputs": [
     {
@@ -487,7 +601,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:36.715294Z",
+     "iopub.status.busy": "2021-09-25T18:00:36.709991Z",
+     "iopub.status.idle": "2021-09-25T18:00:36.720339Z",
+     "shell.execute_reply": "2021-09-25T18:00:36.720801Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -524,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
