--- a/notebooks/pYPKa_Z_TDH1_rev.ipynb
+++ b/notebooks/pYPKa_Z_TDH1_rev.ipynb
@@ -24,7 +24,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:49.952456Z",
+     "iopub.status.busy": "2021-09-25T18:00:49.950757Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.521683Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.522110Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -42,7 +48,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.532399Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.530895Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.546311Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.545293Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -60,7 +72,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.559692Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.551225Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.564261Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.563379Z"
+    }
    },
    "outputs": [
     {
@@ -94,7 +112,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.577954Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.576993Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.586690Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.585854Z"
+    }
    },
    "outputs": [
     {
@@ -124,7 +148,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.591613Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.591133Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.594378Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.593702Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -142,7 +172,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.606030Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.603588Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.607011Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.607653Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -163,7 +199,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.617482Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.615126Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.622779Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.623457Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -181,7 +223,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.628175Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.627622Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.641393Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.640656Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -199,7 +247,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.655801Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.655071Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.658728Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.656592Z"
+    }
    },
    "outputs": [
     {
@@ -231,7 +285,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.677360Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.669252Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.681794Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.680852Z"
+    }
    },
    "outputs": [
     {
@@ -260,7 +320,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.689503Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.685841Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.696887Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.695123Z"
+    }
    },
    "outputs": [
     {
@@ -298,7 +364,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.705167Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.703395Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.708969Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.708407Z"
+    }
    },
    "outputs": [
     {
@@ -332,7 +404,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.726361Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.722349Z",
+     "iopub.status.idle": "2021-09-25T18:00:50.738373Z",
+     "shell.execute_reply": "2021-09-25T18:00:50.734816Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -350,7 +428,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:50.756444Z",
+     "iopub.status.busy": "2021-09-25T18:00:50.755526Z",
+     "iopub.status.idle": "2021-09-25T18:00:51.288886Z",
+     "shell.execute_reply": "2021-09-25T18:00:51.288506Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -361,7 +445,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:51.297987Z",
+     "iopub.status.busy": "2021-09-25T18:00:51.297138Z",
+     "iopub.status.idle": "2021-09-25T18:00:51.312812Z",
+     "shell.execute_reply": "2021-09-25T18:00:51.312182Z"
+    }
    },
    "outputs": [
     {
@@ -390,7 +480,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:51.320799Z",
+     "iopub.status.busy": "2021-09-25T18:00:51.320021Z",
+     "iopub.status.idle": "2021-09-25T18:00:51.329947Z",
+     "shell.execute_reply": "2021-09-25T18:00:51.328964Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -409,7 +505,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:51.340769Z",
+     "iopub.status.busy": "2021-09-25T18:00:51.340138Z",
+     "iopub.status.idle": "2021-09-25T18:00:51.350431Z",
+     "shell.execute_reply": "2021-09-25T18:00:51.349758Z"
+    }
    },
    "outputs": [
     {
@@ -438,7 +540,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:51.359279Z",
+     "iopub.status.busy": "2021-09-25T18:00:51.358305Z",
+     "iopub.status.idle": "2021-09-25T18:00:51.389658Z",
+     "shell.execute_reply": "2021-09-25T18:00:51.389174Z"
+    }
    },
    "outputs": [
     {
@@ -466,7 +574,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:51.408190Z",
+     "iopub.status.busy": "2021-09-25T18:00:51.398240Z",
+     "iopub.status.idle": "2021-09-25T18:00:51.414669Z",
+     "shell.execute_reply": "2021-09-25T18:00:51.418151Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -492,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
