--- a/notebooks/pYPKa_Z_TPI1.ipynb
+++ b/notebooks/pYPKa_Z_TPI1.ipynb
@@ -20,7 +20,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.253028Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.248412Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.688574Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.688050Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -38,7 +44,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.697027Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.695477Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.711890Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.711375Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,7 +68,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.722146Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.719951Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.725781Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.726258Z"
+    }
    },
    "outputs": [
     {
@@ -90,7 +108,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.733949Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.733254Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.736091Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.736550Z"
+    }
    },
    "outputs": [
     {
@@ -120,7 +144,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.740849Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.740291Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.742296Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.742749Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,7 +168,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.750187Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.749173Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.752301Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.751662Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -159,7 +195,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.758264Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.757349Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.760108Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.759549Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +219,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.765105Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.764447Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.771009Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.771492Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.776331Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.775621Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.779105Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.778603Z"
+    }
    },
    "outputs": [
     {
@@ -227,7 +281,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.784152Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.783390Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.786516Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.787033Z"
+    }
    },
    "outputs": [
     {
@@ -258,7 +318,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.792512Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.791641Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.795358Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.794805Z"
+    }
    },
    "outputs": [
     {
@@ -287,7 +353,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.802855Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.801850Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.807682Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.806998Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -310,7 +382,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.813203Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.812247Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.816177Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.815632Z"
+    }
    },
    "outputs": [
     {
@@ -344,7 +422,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.822615Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.821907Z",
+     "iopub.status.idle": "2021-09-25T18:00:58.824336Z",
+     "shell.execute_reply": "2021-09-25T18:00:58.823880Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -362,7 +446,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:58.862264Z",
+     "iopub.status.busy": "2021-09-25T18:00:58.846869Z",
+     "iopub.status.idle": "2021-09-25T18:00:59.052324Z",
+     "shell.execute_reply": "2021-09-25T18:00:59.051402Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -382,7 +472,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:59.060196Z",
+     "iopub.status.busy": "2021-09-25T18:00:59.059593Z",
+     "iopub.status.idle": "2021-09-25T18:00:59.062213Z",
+     "shell.execute_reply": "2021-09-25T18:00:59.062664Z"
+    }
    },
    "outputs": [
     {
@@ -411,7 +507,13 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:59.066695Z",
+     "iopub.status.busy": "2021-09-25T18:00:59.065966Z",
+     "iopub.status.idle": "2021-09-25T18:00:59.067932Z",
+     "shell.execute_reply": "2021-09-25T18:00:59.068380Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -430,7 +532,13 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:59.078712Z",
+     "iopub.status.busy": "2021-09-25T18:00:59.077978Z",
+     "iopub.status.idle": "2021-09-25T18:00:59.081053Z",
+     "shell.execute_reply": "2021-09-25T18:00:59.081558Z"
+    }
    },
    "outputs": [
     {
@@ -459,7 +567,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:59.092169Z",
+     "iopub.status.busy": "2021-09-25T18:00:59.090996Z",
+     "iopub.status.idle": "2021-09-25T18:00:59.096019Z",
+     "shell.execute_reply": "2021-09-25T18:00:59.096355Z"
+    }
    },
    "outputs": [
     {
@@ -487,7 +601,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:00:59.100795Z",
+     "iopub.status.busy": "2021-09-25T18:00:59.098783Z",
+     "iopub.status.idle": "2021-09-25T18:00:59.112472Z",
+     "shell.execute_reply": "2021-09-25T18:00:59.112021Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -520,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
