--- a/notebooks/pYPKp3.ipynb
+++ b/notebooks/pYPKp3.ipynb
@@ -14,7 +14,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:01.919224Z",
+     "iopub.status.busy": "2021-09-25T18:01:01.918291Z",
+     "iopub.status.idle": "2021-09-25T18:01:02.449607Z",
+     "shell.execute_reply": "2021-09-25T18:01:02.448713Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -27,7 +33,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:02.460661Z",
+     "iopub.status.busy": "2021-09-25T18:01:02.460037Z",
+     "iopub.status.idle": "2021-09-25T18:01:02.806683Z",
+     "shell.execute_reply": "2021-09-25T18:01:02.806170Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -48,7 +60,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:02.819351Z",
+     "iopub.status.busy": "2021-09-25T18:01:02.814926Z",
+     "iopub.status.idle": "2021-09-25T18:01:02.824317Z",
+     "shell.execute_reply": "2021-09-25T18:01:02.823843Z"
+    }
    },
    "outputs": [
     {
@@ -70,7 +88,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:02.828651Z",
+     "iopub.status.busy": "2021-09-25T18:01:02.827858Z",
+     "iopub.status.idle": "2021-09-25T18:01:02.829957Z",
+     "shell.execute_reply": "2021-09-25T18:01:02.830425Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -81,7 +105,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:02.834451Z",
+     "iopub.status.busy": "2021-09-25T18:01:02.833847Z",
+     "iopub.status.idle": "2021-09-25T18:01:02.844721Z",
+     "shell.execute_reply": "2021-09-25T18:01:02.845336Z"
+    }
    },
    "outputs": [
     {
@@ -109,7 +139,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:02.848819Z",
+     "iopub.status.busy": "2021-09-25T18:01:02.848358Z",
+     "iopub.status.idle": "2021-09-25T18:01:02.856682Z",
+     "shell.execute_reply": "2021-09-25T18:01:02.857033Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -135,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
