--- a/notebooks/pYPKpw.ipynb
+++ b/notebooks/pYPKpw.ipynb
@@ -21,6 +21,12 @@
    "execution_count": 1,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:09.073535Z",
+     "iopub.status.busy": "2021-09-25T18:01:09.072954Z",
+     "iopub.status.idle": "2021-09-25T18:01:09.555817Z",
+     "shell.execute_reply": "2021-09-25T18:01:09.555381Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -35,6 +41,12 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:09.565803Z",
+     "iopub.status.busy": "2021-09-25T18:01:09.563865Z",
+     "iopub.status.idle": "2021-09-25T18:01:09.573614Z",
+     "shell.execute_reply": "2021-09-25T18:01:09.573970Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -56,6 +68,12 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:09.577678Z",
+     "iopub.status.busy": "2021-09-25T18:01:09.577218Z",
+     "iopub.status.idle": "2021-09-25T18:01:09.580968Z",
+     "shell.execute_reply": "2021-09-25T18:01:09.580601Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -85,6 +103,12 @@
    "execution_count": 4,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:09.587609Z",
+     "iopub.status.busy": "2021-09-25T18:01:09.586807Z",
+     "iopub.status.idle": "2021-09-25T18:01:09.590171Z",
+     "shell.execute_reply": "2021-09-25T18:01:09.589516Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -102,6 +126,12 @@
    "execution_count": 5,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:09.598039Z",
+     "iopub.status.busy": "2021-09-25T18:01:09.597519Z",
+     "iopub.status.idle": "2021-09-25T18:01:09.599869Z",
+     "shell.execute_reply": "2021-09-25T18:01:09.599438Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -116,6 +146,12 @@
    "execution_count": 6,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:09.604221Z",
+     "iopub.status.busy": "2021-09-25T18:01:09.603551Z",
+     "iopub.status.idle": "2021-09-25T18:01:09.605751Z",
+     "shell.execute_reply": "2021-09-25T18:01:09.606277Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -130,6 +166,12 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:09.639139Z",
+     "iopub.status.busy": "2021-09-25T18:01:09.629222Z",
+     "iopub.status.idle": "2021-09-25T18:01:09.981429Z",
+     "shell.execute_reply": "2021-09-25T18:01:09.980932Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -151,6 +193,12 @@
    "execution_count": 8,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:09.993758Z",
+     "iopub.status.busy": "2021-09-25T18:01:09.993195Z",
+     "iopub.status.idle": "2021-09-25T18:01:09.996507Z",
+     "shell.execute_reply": "2021-09-25T18:01:09.996092Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -184,6 +232,12 @@
    "execution_count": 9,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:09.999798Z",
+     "iopub.status.busy": "2021-09-25T18:01:09.999327Z",
+     "iopub.status.idle": "2021-09-25T18:01:10.001544Z",
+     "shell.execute_reply": "2021-09-25T18:01:10.002134Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -205,6 +259,12 @@
    "execution_count": 10,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:10.010502Z",
+     "iopub.status.busy": "2021-09-25T18:01:10.009903Z",
+     "iopub.status.idle": "2021-09-25T18:01:10.013311Z",
+     "shell.execute_reply": "2021-09-25T18:01:10.012745Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -230,6 +290,12 @@
    "execution_count": 11,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:10.020603Z",
+     "iopub.status.busy": "2021-09-25T18:01:10.019805Z",
+     "iopub.status.idle": "2021-09-25T18:01:10.024457Z",
+     "shell.execute_reply": "2021-09-25T18:01:10.025324Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -255,6 +321,12 @@
    "execution_count": 12,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:10.040856Z",
+     "iopub.status.busy": "2021-09-25T18:01:10.040201Z",
+     "iopub.status.idle": "2021-09-25T18:01:10.043257Z",
+     "shell.execute_reply": "2021-09-25T18:01:10.042817Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -287,6 +359,12 @@
    "execution_count": 13,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:10.047843Z",
+     "iopub.status.busy": "2021-09-25T18:01:10.047078Z",
+     "iopub.status.idle": "2021-09-25T18:01:10.050453Z",
+     "shell.execute_reply": "2021-09-25T18:01:10.050965Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -328,6 +406,12 @@
    "execution_count": 14,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:10.069272Z",
+     "iopub.status.busy": "2021-09-25T18:01:10.066695Z",
+     "iopub.status.idle": "2021-09-25T18:01:10.071706Z",
+     "shell.execute_reply": "2021-09-25T18:01:10.072087Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -353,6 +437,12 @@
    "execution_count": 15,
    "metadata": {
     "collapsed": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:10.075324Z",
+     "iopub.status.busy": "2021-09-25T18:01:10.074853Z",
+     "iopub.status.idle": "2021-09-25T18:01:10.076891Z",
+     "shell.execute_reply": "2021-09-25T18:01:10.076513Z"
+    },
     "jupyter": {
      "outputs_hidden": true
     }
@@ -367,6 +457,12 @@
    "execution_count": 16,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:10.080542Z",
+     "iopub.status.busy": "2021-09-25T18:01:10.080017Z",
+     "iopub.status.idle": "2021-09-25T18:01:10.090303Z",
+     "shell.execute_reply": "2021-09-25T18:01:10.089825Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -400,6 +496,12 @@
    "execution_count": 17,
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:10.109827Z",
+     "iopub.status.busy": "2021-09-25T18:01:10.104128Z",
+     "iopub.status.idle": "2021-09-25T18:01:10.112005Z",
+     "shell.execute_reply": "2021-09-25T18:01:10.112367Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -428,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
