--- a/notebooks/ypk_std_primers.ipynb
+++ b/notebooks/ypk_std_primers.ipynb
@@ -27,6 +27,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:13.084539Z",
+     "iopub.status.busy": "2021-09-25T18:01:13.083437Z",
+     "iopub.status.idle": "2021-09-25T18:01:13.374396Z",
+     "shell.execute_reply": "2021-09-25T18:01:13.373865Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -43,6 +49,12 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
+    "execution": {
+     "iopub.execute_input": "2021-09-25T18:01:13.387133Z",
+     "iopub.status.busy": "2021-09-25T18:01:13.386466Z",
+     "iopub.status.idle": "2021-09-25T18:01:13.395806Z",
+     "shell.execute_reply": "2021-09-25T18:01:13.395281Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -243,19 +255,25 @@
     "\n",
     "Tailed primers can be used to amplify genes for recombination between any two promoters and terminators. The primer tails need to be designed to promote recombination between the promoter and terminator:\n",
     "\n",
-    "     >Gene_YPK_rec_fwd\n",
-    "     actttctcactagtgacctgcagccgac-A-ATG...\n",
-    "                                    ---\n",
-    "                                    sta\n",
-    "                                    rtc\n",
-    "                                    odo\n",
-    "                                    n\n",
-    "     >Gene_YPK_rec_rev\n",
-    "     atcctgatgcgtttgtctgcacagatggCAC...\n",
-    "                                    ---\n",
-    "                                    sto\n",
-    "                                    pco\n",
-    "                                    don\n",
+    "     Forward tails\n",
+    "     <---------------  33 nt -------->\n",
+    "     tgcccactttctcactagtgacctgcagccgac-A-ATG...\n",
+    "          <----------  28 nt -------->\n",
+    "          actttctcactagtgacctgcagccgac-A-ATG...\n",
+    "                                         ---\n",
+    "                                         sta\n",
+    "                                         rtc\n",
+    "                                         odo\n",
+    "                                         n\n",
+    "     Reverse tails\n",
+    "     <---------- 33 nt--------------->\n",
+    "     AAatcctgatgcgtttgtctgcacagatggCAC...\n",
+    "          <-------- 28 nt ----------->\n",
+    "          ctgatgcgtttgtctgcacagatggCAC...     \n",
+    "                                      ---\n",
+    "                                      sto\n",
+    "                                      pco\n",
+    "                                      don\n",
     "\n",
     "Alternatively, genes can be cloned in the blunt AjiI site of pYPKa by the same strategy as used for the promoters and terminators.\n",
     "\n",
@@ -322,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
